统计囊括jaredtao,  更新其网页

--- a/jaredtao.gitee.io/QQuickWidget中文输入法问题的正确解法.html
+++ b/jaredtao.gitee.io/QQuickWidget中文输入法问题的正确解法.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/QQuickWidget%E4%B8%AD%E6%96%87%E8%BE%93%E5%85%A5%E6%B3%95%E9%97%AE%E9%A2%98%E7%9A%84%E6%AD%A3%E7%A1%AE%E8%A7%A3%E6%B3%95.md">仓库源文</a>，<a href="https://jaredtao.gitee.io/QQuickWidget%E4%B8%AD%E6%96%87%E8%BE%93%E5%85%A5%E6%B3%95%E9%97%AE%E9%A2%98%E7%9A%84%E6%AD%A3%E7%A1%AE%E8%A7%A3%E6%B3%95">站点原文</a></h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/QQuickWidget中文输入法问题的正确解法.md">仓库源文</a>，<a href="https://jaredtao.gitee.io/QQuickWidget中文输入法问题的正确解法">站点原文</a></h2>
 <hr/>
 <p>title: QQuickWidget中文输入法问题的正确解法
 photos: /img/avatar.jpg
@@ -12,10 +12,10 @@ date: 2020-11-30 12:44:23</li>
 </ul>
 <hr/>
 <ul>
-<li><a href="#qquickwidget%E4%B8%AD%E6%96%87%E8%BE%93%E5%85%A5%E6%B3%95%E9%97%AE%E9%A2%98%E7%9A%84%E6%AD%A3%E7%A1%AE%E8%A7%A3%E6%B3%95">QQuickWidget中文输入法问题的正确解法</a><ul>
-<li><a href="#qt%E7%9A%84bug">Qt的bug</a></li>
-<li><a href="#%E6%97%A7%E7%9A%84%E8%A7%A3%E6%B3%95">旧的解法</a></li>
-<li><a href="#%E6%AD%A3%E7%A1%AE%E7%9A%84%E8%A7%A3%E6%B3%95">正确的解法</a></li>
+<li><a href="#qquickwidget中文输入法问题的正确解法">QQuickWidget中文输入法问题的正确解法</a><ul>
+<li><a href="#qt的bug">Qt的bug</a></li>
+<li><a href="#旧的解法">旧的解法</a></li>
+<li><a href="#正确的解法">正确的解法</a></li>
 </ul>
 </li>
 </ul>
@@ -26,11 +26,11 @@ date: 2020-11-30 12:44:23</li>
 <p>(系统任务栏的输入法状态是正确的,界面上输入字符，直接显示英文，无法显示输入法的候选框)</p>
 <p>需要把界面切到其它软件，再切换回来，之后就能够输入了。</p>
 <p>可以参考Qt官方bug报告:</p>
-<p>https://bugreports.qt.io/browse/QTBUG-61475</p>
+<p><a href="https://bugreports.qt.io/browse/QTBUG-61475">https://bugreports.qt.io/browse/QTBUG-61475</a></p>
 <h2>旧的解法</h2>
 <p>这个Bug是2018年报告的，我们当时做项目，也被这个Bug坑到了。</p>
 <p>当时我给出了一个弱化版本的解法，原理是在第一次聚焦的时候，清理掉QQuickWidget的焦点。</p>
-<pre><code class="language-C++">QuickWidget::QuickWidget(QWidget *parent)
+<pre><code class="lang-C++">QuickWidget::QuickWidget(QWidget *parent)
     : QQuickWidget(parent)
 {
     ...
@@ -53,7 +53,7 @@ void QuickWidget::onClearFocus()
 <p>2020年Qt官方终于派出了资深的专家，在Qt5.15.2中，彻底解决了这个问题。</p>
 <p>(看到有不少博客、论坛，还在流传我提供的旧版本，于心不忍)</p>
 <p>于是我从新版本里面，提炼出来了代码，给使用旧版本的同学解决此问题。</p>
-<pre><code class="language-C++">QuickWidget::QuickWidget(QWidget *parent)
+<pre><code class="lang-C++">QuickWidget::QuickWidget(QWidget *parent)
     : QQuickWidget(parent)
 {
   ...
@@ -61,7 +61,7 @@ void QuickWidget::onClearFocus()
 #if QT_VERSION &lt; QT_VERSION_CHECK(5, 15, 2)
     connect(quickWindow(), &amp;QQuickWindow::focusObjectChanged, this, &amp;QuickWidget::propagateFocusObjectChanged);
 #endif
-  
+
   ...
 }
 
