--- a/jaredtao.gitee.io/涛哥博客杂谈.html
+++ b/jaredtao.gitee.io/涛哥博客杂谈.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E6%B6%9B%E5%93%A5%E5%8D%9A%E5%AE%A2%E6%9D%82%E8%B0%88.md">仓库源文</a>，<a href="https://jaredtao.gitee.io/%E6%B6%9B%E5%93%A5%E5%8D%9A%E5%AE%A2%E6%9D%82%E8%B0%88">站点原文</a></h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/涛哥博客杂谈.md">仓库源文</a>，<a href="https://jaredtao.gitee.io/涛哥博客杂谈">站点原文</a></h2>
 <hr/>
 <p>title: 涛哥博客杂谈
 photos: /img/avatar.jpg
