--- a/jaredtao.gitee.io/玩转Qml(1)-从按钮开始.html
+++ b/jaredtao.gitee.io/玩转Qml(1)-从按钮开始.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(1">仓库源文</a>-从按钮开始.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(1">站点原文</a>-从按钮开始)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(1">仓库源文</a>-从按钮开始.md)，<a href="https://jaredtao.gitee.io/玩转Qml(1">站点原文</a>-从按钮开始)</h2>
 <hr/>
 <p>title: 玩转Qml(1)-从按钮开始
 photos: /images/Qml1/6.gif
@@ -73,23 +73,23 @@ date: 2019-05-09 23:44:23</li>
 <p>开始进入正题了</p>
 <p>Qml中已经有了现成的按钮，在QtQuick.Controls模块中, 目前有两个版本:</p>
 <ul>
-<li>QtQuick.Controls 1.x</li>
+<li>QtQuick.Controls 1.x </li>
 </ul>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/1.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/1.png"/></p>
 <p>1.x的版本是通过style的方式进行定制</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/2.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/2.png"/></p>
 <ul>
 <li>QtQuick.Controls 2.x</li>
 </ul>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/3.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/3.png"/></p>
 <p>2.x的版本则是通过修改Control属性的方式进行定制</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/4.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/4.png"/></p>
 <p>2.x版本的默认风格，还可以通过修改配置文件qtquickcontrols2.conf中的style来修改</p>
 <p>可参考<a href="https://doc.qt.io/qt-5/qtquickcontrols2-styles.html">Qt在线文档- style配置</a></p>
 <h2>Qml版本混用</h2>
 <p>这里顺便说一个经常有人问到的问题: 2.x版本中能否混用1.x版本的控件?</p>
 <p>答案是可以。只需要使用别名机制即可。（如果你看过Qml的源代码，就能轻易发现这个用法）</p>
-<pre><code class="language-qml">// MixControls.qml
+<pre><code class="lang-qml">// MixControls.qml
 import QtQuick 2.0                              
 import QtQuick.Controls 2.0                    //导入Controls 2.0模块
 import QtQuick.Controls 1.4 as QC14            //导入Controls 1.4模块，取别名QC14
@@ -110,7 +110,7 @@ Rectange {
 <p>默认的按钮，很多时候并不能达到想要的效果，比如圆角、贴图片、渐变色的按钮等等，还需要做很多的定制化工作</p>
 <p>其实按钮的本质，就是一个可以点击的区域(MouseArea)，附带颜色(Rectangle)、图片(Image)或文字(Text)。</p>
 <p>涛哥教大家造第一个轮子，一个带文字的按钮。</p>
-<pre><code class="language-qml">// Taobutton.qml
+<pre><code class="lang-qml">// Taobutton.qml
 import QtQuick 2.0
 import QtQuick.Controls 2.0
 Item  {
@@ -138,20 +138,19 @@ Item  {
         }
     }
 }
-
 </code></pre>
 <p>使用qmlscene预览一下效果</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/5.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/5.gif"/></p>
 <p>（gif录制工具不能鼠标悬浮，所以悬浮效果看不到，实际上是有悬浮效果的，可自行尝试）</p>
 <p>说明一下，qml中有个全局的对象Qt，它有一组调颜色的函数，Qt.lighter和Qt.darker，分别可以按系数来变浅和加深</p>
 <p>一个颜色值，这样只要有了一个颜色值，就能自动计算出深一点或者浅一点的颜色，可以减少很多配颜色的工作哦</p>
 <p>再看一下这个表达式，当鼠标按下去的时候，使用深一点的颜色，鼠标悬浮的时候使用浅一点的颜色，其它情况就用设定的颜色</p>
-<pre><code class="language-qml">    color: btnArea.pressed ? Qt.darker(btnColor, 1.2) : (btnArea.containsMouse ? Qt.lighter(btnColor, 1.2) : btnColor)
+<pre><code class="lang-qml">    color: btnArea.pressed ? Qt.darker(btnColor, 1.2) : (btnArea.containsMouse ? Qt.lighter(btnColor, 1.2) : btnColor)
 </code></pre>
 <p>这里的1.2是试出来的值，也可以使用其它值。</p>
 <h2>按钮的演变</h2>
 <p>如果要带个边框呢？只要给Rectange设置边框的宽度和颜色就行了</p>
-<pre><code class="language-qml">    property color btnBorderColor: "orange"
+<pre><code class="lang-qml">    property color btnBorderColor: "orange"
     Rectangle {
         ...
         border.width: btnArea.containsMouse ? 2 : 0 //鼠标悬浮时有宽度，才能看到边框
@@ -160,14 +159,14 @@ Item  {
     }
 </code></pre>
 <p>如果要圆角呢? 只要给Rectangle 设置radius就行了</p>
-<pre><code class="language-qml">    Rectangle{
+<pre><code class="lang-qml">    Rectangle{
         ...
         radius: 5
         ...
     }
 </code></pre>
 <p>如果要圆形呢？只要给Rectangle设置宽度和高度相等（正方形），radius是宽度的一半即可</p>
-<pre><code class="language-qml">    Rectangle{
+<pre><code class="lang-qml">    Rectangle{
         ...
         width: 120
         height: width
@@ -176,7 +175,7 @@ Item  {
     }
 </code></pre>
 <p>如果要背景色做成渐变的呢？</p>
-<pre><code class="language-qml">    Rectangle{
+<pre><code class="lang-qml">    Rectangle{
         id: gradientBtn
         ...
         property color btnColor: containsMouse ? Qt.darker("#009688") : "#009688"
@@ -191,17 +190,17 @@ Item  {
 </code></pre>
 <p>顺带提一下，5.12的Rectangle,有了新的渐变色 <a href="https://webgradients.com">渐变色网站</a>,大约有180种</p>
 <p>可以直接在Qml中使用。</p>
-<pre><code class="language-qml">
+<pre><code class="lang-qml">
     gradient: Gradient.NightFade //通过枚举使用
 
     gradient: "SugarLollipop"       //通过字符串名字使用
 </code></pre>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/6.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/6.gif"/></p>
 <p>（gif录制工具不能鼠标悬浮，所以悬浮效果看不到，实际上是有悬浮效果的，可自行尝试）</p>
 <h2>组件化按钮</h2>
 <p>为了能够复用我们的按钮，需要将它做成一个组件。</p>
 <p>这里以文本按钮为例：</p>
-<pre><code class="language-qml">// TTextBtn.qml
+<pre><code class="lang-qml">// TTextBtn.qml
 
 import QtQuick 2.9
 import QtQuick.Controls 2.0
@@ -233,18 +232,17 @@ Rectangle {
         cursorShape: Qt.PointingHandCursor  //悬浮或点击时的鼠标样式
     }
 }
-
 </code></pre>
 <p>Qml组件，先以最简单的方式理解，就是放在一个单独的Qml文件中，声明一些属性导出，由使用者去实例化并设置属性</p>
 <p>比如这样:</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/7.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/7.png"/></p>
 <p>为了和标准的组件区分开，涛哥写的组件名字都以大写的T开头。</p>
 <p>组件化的好处，包括容易复用（如上图，多个实例都不一样）、可以统一修改（后面会有动态换皮肤的方案，依赖于组件化）、</p>
 <p>便于维护和扩展等。后续涛哥还会讲如何做多层抽象的组件、单例组件、如何引用插件中的组件等。</p>
 <h2>组件化图片按钮</h2>
 <p>带图片的按钮，只需要把Rectangle换成Image即可。</p>
 <p>为了应对各种按钮状态，涛哥做了以下的属性扩展</p>
-<pre><code class="language-qml">// TImageBtn.qml
+<pre><code class="lang-qml">// TImageBtn.qml
 
 import QtQuick 2.9
 import QtQuick.Controls 2.0
@@ -286,7 +284,7 @@ Item {
 <p>有了前面的文字按钮和图片按钮，我们可以做一个图片和文字都有的按钮。</p>
 <p>图片和文字同时显示，那么就有了布局问题。图片在左？还是在右？在上？还是在下？</p>
 <p>涛哥这里用了点技巧，封装了一个同时支持四种布局的图文按钮</p>
-<pre><code class="language-qml">// TImgTextBtn.qml
+<pre><code class="lang-qml">// TImgTextBtn.qml
 
 import QtQuick 2.9
 import QtQuick.Controls 2.0
@@ -369,4 +367,4 @@ Rectangle {
 }
 </code></pre>
 <p>最后，我们来看看效果吧</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/8.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml1/8.gif"/></p>
