--- a/jaredtao.gitee.io/玩转Qml(14)-动画特效-梯度.html
+++ b/jaredtao.gitee.io/玩转Qml(14)-动画特效-梯度.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(14">仓库源文</a>-动画特效-梯度.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(14">站点原文</a>-动画特效-梯度)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(14">仓库源文</a>-动画特效-梯度.md)，<a href="https://jaredtao.gitee.io/玩转Qml(14">站点原文</a>-动画特效-梯度)</h2>
 <hr/>
 <p>title: 玩转Qml(14)-动画特效-梯度
 photos: /img/avatar.jpg
@@ -23,12 +23,12 @@ date: 2019-06-09 09:44:23</li>
 <p>这是《Qml特效-进场动画》系列文章的第二篇，涛哥将会教大家一些Qml进场动画相关的知识。</p>
 <h2>源码</h2>
 <p>《玩转Qml》系列文章，配套了一个优秀的开源项目:TaoQuick</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
 <p>访问不了或者速度太慢，可以用国内的镜像网站gitee</p>
-<p>https://gitee.com/jaredtao/TaoQuick</p>
+<p><a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h2>梯度效果预览</h2>
 <p>梯度效果，支持从四个方向梯度出现</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Animation/2.gif"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Animation/2.gif"/></p>
 <h2>实现原理</h2>
 <p>通过数值动画，控制百分比属性percent从0 到100变化</p>
 <pre><code>//AGrad.qml
@@ -60,7 +60,7 @@ ShaderEffect {
 }
 </code></pre>
 <p>在Shader中，使用glsl片段着色器实现像素的控制：</p>
-<pre><code class="language-glsl">        in vec2 qt_TexCoord0;
+<pre><code class="lang-glsl">        in vec2 qt_TexCoord0;
         uniform float qt_Opacity;
         uniform sampler2D effectSource;
         uniform int dir;
