--- a/jaredtao.gitee.io/玩转Qml(15)-着色器效果ShaderEffect.html
+++ b/jaredtao.gitee.io/玩转Qml(15)-着色器效果ShaderEffect.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(15">仓库源文</a>-着色器效果ShaderEffect.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(15">站点原文</a>-着色器效果ShaderEffect)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(15">仓库源文</a>-着色器效果ShaderEffect.md)，<a href="https://jaredtao.gitee.io/玩转Qml(15">站点原文</a>-着色器效果ShaderEffect)</h2>
 <hr/>
 <p>title: 玩转Qml(15)-着色器效果ShaderEffect
 photos: /images/ShaderEffect/7.png
@@ -38,9 +38,9 @@ date: 2019-06-22 13:44:23</li>
 <p>前面的文章，给大家展示了进场动画，以及页面切换动画，大部分都使用了ShaderEffect，所以这次专门来说一下ShaderEffect。</p>
 <h2>源码</h2>
 <p>《玩转Qml》系列文章，配套了一个优秀的开源项目:TaoQuick</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
 <p>访问不了或者速度太慢，可以用国内的镜像网站gitee</p>
-<p>https://gitee.com/jaredtao/TaoQuick</p>
+<p><a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h2>ShaderEffect</h2>
 <p>动画只能控制组件的属性整体的变化，做特效需要精确到像素。</p>
 <p>Qml中提供了ShaderEffect这个组件，就能实现像素级别的操作。</p>
@@ -52,10 +52,10 @@ date: 2019-06-22 13:44:23</li>
 <h2>显示器如何显示色彩</h2>
 <p>先来了解一下，显示器是如何显示出各种色彩的。</p>
 <p>假如我们把显示器的画面放大100倍，就会看到很多整齐排列的像素点。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/1.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/1.png"/></p>
 <p>继续放大，就会发现每个像素点，由三种发光的元件组成，这三种元件分别发出红、绿、蓝三种颜色的光。三种颜色的光组合在一起，</p>
 <p>就是人眼看到的颜色。这就是著名的RGB颜色模型。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/2.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/2.png"/></p>
 <p>如果把这三种光的亮度分为255个等级，就能组合出16777216种不同颜色的光。</p>
 <p>GPU的任务，就是通过计算，给出每一个像素的红、绿、蓝 （简称r g b）三种颜色的数值，让显示器去"发出相应的光"。</p>
 <p>(这样说可能不太严谨、不太专业，只是方便大家理解。另一方面，本文的目的，</p>
@@ -63,10 +63,10 @@ date: 2019-06-22 13:44:23</li>
 <p>注：参考[1]</p>
 <h2>GPU渲染流程</h2>
 <p>我们以画一个填充色的三角形为例，来说明</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/3.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/3.png"/></p>
 <h3>渲染管线图</h3>
 <p>下图是一个简易的渲染管线，引用自 <a href="https://learnopengl-cn.readthedocs.io/zh/latest/">LearnOpenGL</a></p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/5.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/5.png"/></p>
 <p>画一个三角形，要经历顶点着色器、图元装配、几何着色器、片段着色器、光栅化等阶段。</p>
 <p>其中蓝色部分是可以自定义的，自定义是指，按照图形API规范，写一段GPU能编译、运行的代码。</p>
 <p>(这种代码就是着色器代码。可以自定义的这种渲染管线，就是可编程渲染管线，与之相对的是古老的固定渲染管线。)</p>
@@ -96,7 +96,7 @@ date: 2019-06-22 13:44:23</li>
 <h3>并行管线示意图</h3>
 <p>概念还是挺多的，而且很多教程都有渲染管线图。但是涛哥觉得，对于我们开发Shader来说，一定要有并行的意识，然而大部分</p>
 <p>管线图，都没有体现出GPU的并行特性。所以涛哥自己画了一个草图：</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/6.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/6.png"/></p>
 <p>解释一下吧，CPU传入了3个顶点到GPU，GPU将这三个顶点，传递给三个顶点着色器。</p>
 <p>这里要意识到，顶点着色器开始，就是并行处理了。GPU是很强大的SIMD架构（单指令流多数据流）。</p>
 <p>如果我们自定义了一段顶点着色器代码，则三个顶点会同时运行这段代码。（后面的片段着色器代码，就是N个点同时运行）</p>
@@ -110,16 +110,16 @@ date: 2019-06-22 13:44:23</li>
 <h2>着色器语言编码规范</h2>
 <p>我们可以把着色器语言，当作运行在GPU上的C语言。</p>
 <p>Qt的ShaderEffect支持的着色器语言包括OpenGL规范中的GLSL，和DirectX规范中的HLSL，这两种着色语法上有些细微的区别，但是可以互相转换。</p>
-<p>我们就以glsl为主。详细的语言规范，在khronos的官网, 各个版本都有: https://www.khronos.org/registry/OpenGL/specs/gl/</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/8.png"/></p>
+<p>我们就以glsl为主。详细的语言规范，在khronos的官网, 各个版本都有: <a href="https://www.khronos.org/registry/OpenGL/specs/gl/">https://www.khronos.org/registry/OpenGL/specs/gl/</a></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/8.png"/></p>
 <p>桌面版 OpenGL 版本众多，而嵌入式系统也有专用的OpenGL ES。</p>
 <p>安卓手机、平板设备一般就是OpenGL ES，新的设备都支持ES 3.0，老的设备一般只支持到ES 2.0</p>
-<p>OpenGL ES 的语言规范文档在这里： https://www.khronos.org/registry/OpenGL/specs/es/2.0/</p>
+<p>OpenGL ES 的语言规范文档在这里： <a href="https://www.khronos.org/registry/OpenGL/specs/es/2.0/">https://www.khronos.org/registry/OpenGL/specs/es/2.0/</a></p>
 <p>我们就用Qt默认的版本。</p>
 <h2>着色器代码示例</h2>
 <h3>示例</h3>
 <p>这里用Qt帮助文档中的示例代码，来说明。</p>
-<pre><code class="language-qml">  import QtQuick 2.0
+<pre><code class="lang-qml">  import QtQuick 2.0
 
   Rectangle {
       width: 200; height: 100
@@ -151,10 +151,9 @@ date: 2019-06-22 13:44:23</li>
           }
       }
   }
-
 </code></pre>
 <p>这段代码的效果是</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/7.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderEffect/7.png"/></p>
 <p>左边是本来的绿色的Qt的logo，右边是处理过后的灰色logo。</p>
 <h3>着色器代码</h3>
 <p>ShaderEffect的vertexShader属性就是顶点着色器了，其内容是一段字符串。按照着色器规范实现的。</p>
@@ -166,7 +165,7 @@ date: 2019-06-22 13:44:23</li>
 <p>如果你写过原生OpenGL的代码，就会知道，其中很大一部分工作，就是在处理CPU数据传递到GPU着色器中。</p>
 <p>而Qml的ShaderEffect简化了这些工作，只要写一个property，名字、类型和着色器中的对应上，就可以了。</p>
 <h3>顶点着色器</h3>
-<pre><code class="language-glsl">attribute highp vec4 qt_Vertex; 
+<pre><code class="lang-glsl">attribute highp vec4 qt_Vertex;
 </code></pre>
 <p>attribute是"属性"变量，按照前面涛哥画的管线图来说，三个顶点着色器同时运行时，每个着色器中</p>
 <p>的attribute值都不一样。这里的qt_Vertex，可以理解为分别是三角形的三个顶点。</p>
@@ -186,7 +185,7 @@ date: 2019-06-22 13:44:23</li>
 <p>并将结果存储在glsl的内置变量gl_Position中。</p>
 <h3>片段着色器</h3>
 <p>片段着色器中，就没有attribute了。uniform是一样的统一变量，varying是上一个阶段传递进来的数据。</p>
-<pre><code class="language-glsl">uniform sampler2D src;
+<pre><code class="lang-glsl">uniform sampler2D src;
 </code></pre>
 <p>sampler2D是二维纹理。所谓纹理嘛，可以理解成一张图片，一个Image。</p>
 <p>src这个变量，就代表外面传进来的那个Image。 sampler2D也可以是任意可视的Item(通过ShaderEffectSource传递进来)</p>
@@ -198,13 +197,13 @@ date: 2019-06-22 13:44:23</li>
 }
 </code></pre>
 <p>这里使用了纹理</p>
-<pre><code class="language-glsl">lowp vec4 tex = texture2D(src, coord);
+<pre><code class="lang-glsl">lowp vec4 tex = texture2D(src, coord);
 </code></pre>
 <p>texture2D是一个内置函数，专业术语叫“对纹理进行采样”，什么意思呢？</p>
 <p>假如coord的值是(0,0),那就是对src指代的这张图片，取x=0、y=0的坐标点的像素，作为返回值，存储在tex变量中。</p>
 <p>这里注意一下纹理坐标的取值范围。假如Qml中图片的大小是100x100，其取值范围从(0, 0) -&gt; (100, 100)</p>
 <p>这里的传进来的纹理坐标，取值范围是(0, 0) -&gt; (1, 1) ，GPU为了方便计算，都进行了归1化处理。将范围缩小到0 - 1</p>
-<pre><code class="language-glsl"> gl_FragColor = vec4(vec3(dot(tex.rgb, vec3(0.344, 0.5, 0.156) )), tex.a) * qt_Opacity;
+<pre><code class="lang-glsl"> gl_FragColor = vec4(vec3(dot(tex.rgb, vec3(0.344, 0.5, 0.156) )), tex.a) * qt_Opacity;
 </code></pre>
 <p>dot(tex.rgb, vec3(0.344, 0.5, 0.156) ) 是对两个三维向量进行了点乘。</p>
 <p>tex.rgb是GLSL中的取值器语法。 tex是一个四维变量，可以用tex.r tex.g tex.b tex.a分别取出其中一维，也可以任意两个组合、三个</p>
@@ -214,5 +213,5 @@ date: 2019-06-22 13:44:23</li>
 <p>这条语句其实是一个RGB转灰度的公式，可以自行搜索相关的资料。</p>
 <p>gl_FragColor 是内置变量，表示所在片段着色器的最终的输出颜色。</p>
 <h2>参考文献</h2>
-<p>[1] https://zhuanlan.zhihu.com/p/43467096</p>
-<p>[2] https://learnopengl-cn.github.io/</p>
+<p>[1] <a href="https://zhuanlan.zhihu.com/p/43467096">https://zhuanlan.zhihu.com/p/43467096</a></p>
+<p>[2] <a href="https://learnopengl-cn.github.io/">https://learnopengl-cn.github.io/</a></p>
