--- a/jaredtao.gitee.io/玩转Qml(17)-树组件的定制.html
+++ b/jaredtao.gitee.io/玩转Qml(17)-树组件的定制.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(17">仓库源文</a>-树组件的定制.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(17">站点原文</a>-树组件的定制)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(17">仓库源文</a>-树组件的定制.md)，<a href="https://jaredtao.gitee.io/玩转Qml(17">站点原文</a>-树组件的定制)</h2>
 <hr/>
 <p>title: 玩转Qml(17)-树组件的定制
 photos: /images/Qml13/1.png
@@ -14,14 +14,14 @@ date: 2020-06-15 23:44:23</li>
 </ul>
 <hr/>
 <ul>
-<li><a href="#%E7%AE%80%E4%BB%8B">简介</a></li>
-<li><a href="#%E5%8F%91%E8%A1%8C%E8%AF%B4%E6%98%8E">发行说明</a></li>
-<li><a href="#%E6%95%88%E6%9E%9C%E9%A2%84%E8%A7%88">效果预览</a></li>
-<li><a href="#qt%E6%9C%AC%E8%BA%AB%E7%9A%84%E5%9B%BD%E9%99%85%E5%8C%96">Qt本身的国际化</a></li>
-<li><a href="#%E5%AD%98%E5%9C%A8%E7%BF%BB%E8%AF%91%E4%B8%8D%E5%85%A8%E7%9A%84%E9%97%AE%E9%A2%98">存在翻译不全的问题</a></li>
-<li><a href="#%E6%96%B0%E7%9A%84%E6%96%B9%E6%A1%88">新的方案</a></li>
-<li><a href="#%E5%85%B3%E4%BA%8E%E6%89%B9%E9%87%8F%E7%BF%BB%E8%AF%91">关于批量翻译</a></li>
-<li><a href="#%E6%80%BB%E7%BB%93">总结</a></li>
+<li><a href="#简介">简介</a></li>
+<li><a href="#发行说明">发行说明</a></li>
+<li><a href="#效果预览">效果预览</a></li>
+<li><a href="#qt本身的国际化">Qt本身的国际化</a></li>
+<li><a href="#存在翻译不全的问题">存在翻译不全的问题</a></li>
+<li><a href="#新的方案">新的方案</a></li>
+<li><a href="#关于批量翻译">关于批量翻译</a></li>
+<li><a href="#总结">总结</a></li>
 </ul>
 <h2>简介</h2>
 <p>最近遇到一些需求，要在Qt/Qml中开发树结构，并能够导入、导出json格式。</p>
@@ -29,14 +29,14 @@ date: 2020-06-15 23:44:23</li>
 <p>在这里将源码、实现原理、以及性能测试都记录、分享出来，算是抛砖引玉吧，希望有更多人来讨论、交流。</p>
 <h2>TreeEdit源码</h2>
 <p>起初的代码在单独的仓库</p>
-<p>github https://github.com/jaredtao/TreeEdit</p>
-<p>gitee镜像 https://gitee.com/jaredtao/Tree</p>
+<p>github <a href="https://github.com/jaredtao/TreeEdit">https://github.com/jaredtao/TreeEdit</a></p>
+<p>gitee镜像 <a href="https://gitee.com/jaredtao/Tree">https://gitee.com/jaredtao/Tree</a></p>
 <p>后续会收录到《玩转Qml》配套的开源项目TaoQuick中</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
-<p>gitee镜像 https://gitee.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
+<p>gitee镜像 <a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h2>效果预览</h2>
 <p>看一下最终效果</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml13/1.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml13/1.png"/></p>
 <p>Qml实现的树结构编辑器, 功能包括:</p>
 <p>树结构的缩进
 节点展开、折叠
@@ -54,7 +54,7 @@ date: 2020-06-15 23:44:23</li>
 <h2>关键代码</h2>
 <h3>model</h3>
 <p>基本model的声明如下:</p>
-<pre><code class="language-C++">template &lt;typename T&gt;
+<pre><code class="lang-C++">template &lt;typename T&gt;
 class TaoListModel : public QAbstractListModel {
 public:
     //声明父类
@@ -87,7 +87,7 @@ protected:
 </code></pre>
 <p>其中数据成员使用 QList m_nodeList 存储, 大部分成员函数是对此数据的操作。</p>
 <p>Json格式的model声明如下：</p>
-<pre><code class="language-C++">const static QString cDepthKey = QStringLiteral("TModel_depth");
+<pre><code class="lang-C++">const static QString cDepthKey = QStringLiteral("TModel_depth");
 const static QString cExpendKey = QStringLiteral("TModel_expend");
 const static QString cChildrenExpendKey = QStringLiteral("TModel_childrenExpend");
 const static QString cHasChildendKey = QStringLiteral("TModel_hasChildren");
@@ -161,7 +161,7 @@ signals:
 <p>TaoJsonTreeModel继承于TaoListModel，并提供大量Q_INVOKABLE函数，以供Qml调用。</p>
 <h3>view</h3>
 <p>TreeView的模拟实现如下：</p>
-<pre><code class="language-qml">Item {
+<pre><code class="lang-qml">Item {
     id: root
     readonly property string __depthKey: "TModel_depth"
     readonly property string __expendKey: "TModel_expend"
@@ -262,10 +262,10 @@ signals:
 <h4>数据生成</h4>
 <p>使用node表示根节点的数量，depth表示每个根节点下面嵌套节点的层数。</p>
 <p>例如： node 等于 100， depth 等于10，则数据如下：</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml13/2.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml13/2.png"/></p>
 <p>顶层有100个节点，每个节点下面再嵌套10层，共计节点 100 + 100 * 10 = 1100.</p>
 <p>生成json数据的代码如下：</p>
-<pre><code class="language-C++">...
+<pre><code class="lang-C++">...
 //单元测试类
 class LoadTest : public QObject {
     Q_OBJECT
@@ -338,7 +338,7 @@ void LoadTest::initTestCase()
 <h3>测试过程</h3>
 <p>QTest十分好用，简单易上手，参考帮助文件即可</p>
 <p>例如测试加载的代码如下:</p>
-<pre><code class="language-C++">void LoadTest::prepareData()
+<pre><code class="lang-C++">void LoadTest::prepareData()
 {
     //添加两列数据
     QTest::addColumn&lt;int&gt;("node");
@@ -370,6 +370,6 @@ void LoadTest::test_load()
 }
 </code></pre>
 <h3>测试结果</h3>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml13/3.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml13/3.png"/></p>
 <p>一秒内最多可以加载的数据量在十万级别，包括</p>
 <p>10000 x 10耗时在 386毫秒，1000 x 100 耗时在671毫秒。</p>
