--- a/jaredtao.gitee.io/玩转Qml(5)-Qml与C++交互.html
+++ b/jaredtao.gitee.io/玩转Qml(5)-Qml与C++交互.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(5">仓库源文</a>-Qml与C++交互.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(5">站点原文</a>-Qml与C++交互)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(5">仓库源文</a>-Qml与C++交互.md)，<a href="https://jaredtao.gitee.io/玩转Qml(5">站点原文</a>-Qml与C++交互)</h2>
 <hr/>
 <p>title: 玩转Qml(5)-Qml与C++交互
 photos: /img/avatar.jpg
@@ -14,16 +14,16 @@ date: 2019-05-17 20:37:33</li>
 </ul>
 <hr/>
 <ul>
-<li><a href="#%E7%AE%80%E4%BB%8B">简介</a></li>
-<li><a href="#%E6%BA%90%E7%A0%81">源码</a></li>
-<li><a href="#c%E8%AE%BF%E9%97%AEqml">C++访问Qml</a><ul>
+<li><a href="#简介">简介</a></li>
+<li><a href="#源码">源码</a></li>
+<li><a href="#c访问qml">C++访问Qml</a><ul>
 <li><a href="#findchild">findChild</a></li>
 <li><a href="#qqmlcomponent">QQmlComponent</a></li>
 </ul>
 </li>
-<li><a href="#qml%E8%AE%BF%E9%97%AEc">Qml访问C++</a><ul>
-<li><a href="#%E6%B3%A8%E5%86%8C%E7%B1%BB%E5%B9%B6%E4%BD%BF%E7%94%A8">注册类并使用</a></li>
-<li><a href="#%E6%B3%A8%E5%86%8C%E5%AE%9E%E4%BE%8B%E5%B9%B6%E4%BD%BF%E7%94%A8">注册实例并使用</a></li>
+<li><a href="#qml访问c">Qml访问C++</a><ul>
+<li><a href="#注册类并使用">注册类并使用</a></li>
+<li><a href="#注册实例并使用">注册实例并使用</a></li>
 </ul>
 </li>
 </ul>
@@ -33,16 +33,16 @@ date: 2019-05-17 20:37:33</li>
 <p>这回涛哥尝试把所有Qml与C++交互相关的知识点都写出来，做一个透彻、全面的总结。</p>
 <h2>源码</h2>
 <p>《玩转Qml》系列文章，配套了一个优秀的开源项目:TaoQuick</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
 <p>访问不了或者速度太慢，可以用国内的镜像网站gitee</p>
-<p>https://gitee.com/jaredtao/TaoQuick</p>
+<p><a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h2>C++访问Qml</h2>
 <p>c++访问Qml有两种方式： findChild和 QQmlComponent。</p>
 <h3>findChild</h3>
 <p>了解Qt的人都知道，Qt的很多对象是QObject的子类，这些QObject只要设置了parent，就是有父子关系的，会产生一棵 "对象树"。</p>
 <p>只要有了根节点，树上的任意节点都可以通过findChild的方式获取到。</p>
 <p>写个简单的TaoObject，来示意一下:</p>
-<pre><code class="language-C++">class TaoObject
+<pre><code class="lang-C++">class TaoObject
 {
 public:
     //构造函数，传递parent进来
@@ -106,13 +106,12 @@ private:
     //父对象指针
     TaoObject *m_pParent = nullptr;
 };
-
 </code></pre>
 <p>Qml的基本元素,大多是继承于QQuickItem，而QQuickItem继承于QObject。</p>
 <p>所以Qml大多数对象都是QObject的子类，也是可以通过findChild的方式获取到对象指针。</p>
 <p>拿到了QObject，可以通过qobject_cast转换成具体的类型来使用，也可以直接用QObject的invok方法。</p>
 <p>例如有如下Qml代码:</p>
-<pre><code class="language-Qml">Item {
+<pre><code class="lang-Qml">Item {
     id: root
     ...
     Rectangle {
@@ -129,40 +128,38 @@ private:
     }
     ...
 }
-
 </code></pre>
 <p>那么在C++ 中访问的方式是：</p>
 <ul>
 <li>如果用QQuickView加载qml，就是</li>
 </ul>
-<pre><code class="language-C++">QQuickView view;
+<pre><code class="lang-C++">QQuickView view;
 ...
 QObject *centerObj = view.rootObject()-&gt;findChild&lt;QObject *&gt;("centerRect");
 if (!centerObj) { return;}
 </code></pre>
 <ul>
-<li>如果用QQmlEngine加载qml，就是</li>
-</ul>
-<pre><code class="language-c++">QQmlEngine engine;
+<li>如果用QQmlEngine加载qml，就是<pre><code class="lang-c++">QQmlEngine engine;
 ...
 QObject *centerObj = engine.rootObject()-&gt;findChild&lt;QObject *&gt;("centerRect");
 if (!centerObj) { return;}
 </code></pre>
-<p>(QObject类型也可以换成QQuickItem 或者其它)</p>
+(QObject类型也可以换成QQuickItem 或者其它)</li>
+</ul>
 <p>拿到了对象指针，接下来就好办了</p>
 <p>访问其属性</p>
-<pre><code class="language-C++">bool canSee = centerObj-&gt;property("canSee").toBool();
+<pre><code class="lang-C++">bool canSee = centerObj-&gt;property("canSee").toBool();
 </code></pre>
 <p>发射其信号(其实就是函数调用)</p>
-<pre><code class="language-C++">QObject::invokeMethod(centerObj, "sayHello");
+<pre><code class="lang-C++">QObject::invokeMethod(centerObj, "sayHello");
 QObject::invokeMethod(centerObj, "sayHelloTo", Q_ARG(QString, "Tao"))
 </code></pre>
 <p>调用其js函数,可以传参数过去,可以取得返回值</p>
-<pre><code class="language-C++">bool ok;
+<pre><code class="lang-C++">bool ok;
 QObject::invokeMethod(centerObj, "rotateToAngle", Q_RETURN_ARG(bool, ok), Q_ARG(qreal 180));
 </code></pre>
 <p>这里再补充一下, Qml中给自定义的信号写槽或连接到别的槽(Qml中的槽就是js函数):</p>
-<pre><code class="language-qml">Item {
+<pre><code class="lang-qml">Item {
     id: root
     ...
     Rectangle {
@@ -200,7 +197,7 @@ QObject::invokeMethod(centerObj, "rotateToAngle", Q_RETURN_ARG(bool, ok), Q_ARG(
 <p>(QQmlComponent这种方式不太多见，不过涛哥之前参与过开发一个框架，使用的就是QQmlComponent动态加载Qml，</p>
 <p>完全在c++中控制界面的加载，加载效率、内存占用上都比纯Qml优秀。)</p>
 <p>来看一个例子：</p>
-<pre><code class="language-qml">// Circle.qml
+<pre><code class="lang-qml">// Circle.qml
 Rectangle {
     width: 300
     height: width
@@ -208,7 +205,7 @@ Rectangle {
     color: "red"
 }
 </code></pre>
-<pre><code class="language-C++">QQmlEngine engine;
+<pre><code class="lang-C++">QQmlEngine engine;
 QQmlComponent component(&amp;engine, QUrl::fromLocalFile("Circle.qml"));
 
 QObject *circleObject = component.create();
@@ -223,7 +220,7 @@ int width = item-&gt;width();
 <p>Q_INVOKABLE 函数可以用在普通的结构体或者类中，但是这种用法不常见/不方便。常见的是在QObject的子类中，给非槽函数设置为Q_INVOKABLE</p>
 <p>枚举的注册Qt帮助文档很详细，而且5.10以后可以在qml中定义枚举了，这里涛哥就不展开了。</p>
 <p>QObject的属性 信号 槽，都是可以通过注册后，在qml中使用的。信号、槽都可以带参数，槽可以有返回值。</p>
-<pre><code class="language-C++">class BrotherTao : public QObject 
+<pre><code class="lang-C++">class BrotherTao : public QObject 
 {
     Q_OBJECT //这个宏一定要写上。不写可能的后果是，moc生成失败，信号 槽实现不了，编译过不了。
     Q_PROPERTY(QString name READ name WRITE setName NOTIFY nameChanged) //自定义属性，操作包括： 读、写和通知。Qml可以读写、获取通知
@@ -246,9 +243,9 @@ signals:
 <p>再说说怎么用：</p>
 <p>注册分为两种：注册类型和注册实例。</p>
 <h3>注册类并使用</h3>
-<pre><code class="language-C++">qmlRegisterTyle&lt;BrotherTao&gt;("BrotherTao",1, 0, "BrotherTao");
+<pre><code class="lang-C++">qmlRegisterTyle&lt;BrotherTao&gt;("BrotherTao",1, 0, "BrotherTao");
 </code></pre>
-<pre><code class="language-qml">import BrotherTao 1.0
+<pre><code class="lang-qml">import BrotherTao 1.0
 Item {
     BrotherTao {         //实例化一个对象
         id: tao
@@ -277,7 +274,7 @@ Item {
 }
 </code></pre>
 <h3>注册实例并使用</h3>
-<pre><code class="language-c++">BrotherTao tao;     //C++中创建的实例
+<pre><code class="lang-c++">BrotherTao tao;     //C++中创建的实例
 
 //如果用QQ'u'ic'kView加载Qml
 QQuickView view;
@@ -288,9 +285,8 @@ view.rootContext()-&gt;setContextProperty("tao", &amp;tao);    //注意这个名
 QQmlEngine engine;
 ...
 engine..rootContext()-&gt;setContextProperty("tao", &amp;tao); //注意这个名字不要用大写字母开头，规则和Qml中的id不能用大写字母开头一样。
-
 </code></pre>
-<pre><code class="language-qml">//这种不用再import了
+<pre><code class="lang-qml">//这种不用再import了
 Item {
     Connections {        //通过connectins连接信号
         target: tao     //指定target
