--- a/jaredtao.gitee.io/玩转Qml(7)-自绘组件.html
+++ b/jaredtao.gitee.io/玩转Qml(7)-自绘组件.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(7">仓库源文</a>-自绘组件.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(7">站点原文</a>-自绘组件)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(7">仓库源文</a>-自绘组件.md)，<a href="https://jaredtao.gitee.io/玩转Qml(7">站点原文</a>-自绘组件)</h2>
 <hr/>
 <p>title: 玩转Qml(7)-自绘组件
 photos: /images/Qml7/4.gif
@@ -14,13 +14,13 @@ date: 2019-05-19 12:33:44</li>
 </ul>
 <hr/>
 <ul>
-<li><a href="#%E7%AE%80%E4%BB%8B">简介</a></li>
-<li><a href="#%E6%BA%90%E7%A0%81">源码</a></li>
-<li><a href="#%E8%87%AA%E7%BB%98%E6%96%B9%E6%A1%88">自绘方案</a></li>
+<li><a href="#简介">简介</a></li>
+<li><a href="#源码">源码</a></li>
+<li><a href="#自绘方案">自绘方案</a></li>
 <li><a href="#qpainter">QPainter</a><ul>
-<li><a href="#qwidgetqpainter-%E7%A4%BA%E4%BE%8B">QWidget+QPainter 示例</a></li>
-<li><a href="#qquickpainteditemqpainter-%E7%A4%BA%E4%BE%8B">QQuickPaintedItem+QPainter 示例</a></li>
-<li><a href="#%E5%85%B3%E4%BA%8Eqpainter">关于QPainter</a></li>
+<li><a href="#qwidgetqpainter-示例">QWidget+QPainter 示例</a></li>
+<li><a href="#qquickpainteditemqpainter-示例">QQuickPaintedItem+QPainter 示例</a></li>
+<li><a href="#关于qpainter">关于QPainter</a></li>
 </ul>
 </li>
 <li><a href="#qml-canvas">Qml Canvas</a></li>
@@ -37,9 +37,9 @@ date: 2019-05-19 12:33:44</li>
 <p>如果要实现外观特殊的组件，就需要自己绘制了。</p>
 <h2>源码</h2>
 <p>《玩转Qml》系列文章，配套了一个优秀的开源项目:TaoQuick</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
 <p>访问不了或者速度太慢，可以用国内的镜像网站gitee</p>
-<p>https://gitee.com/jaredtao/TaoQuick</p>
+<p><a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h2>自绘方案</h2>
 <p>Qt中的自绘方案有这么一些：</p>
 <ul>
@@ -58,8 +58,8 @@ date: 2019-05-19 12:33:44</li>
 <p>(QWidget的控件在绘制时，还增加了qss样式表，让UI定制变得更加方便。)</p>
 <h3>QWidget+QPainter 示例</h3>
 <p>QWidget中使用QPainter的方法，是重载paintEvent事件，这里示例绘制一个进度条:</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/1.gif"/></p>
-<pre><code class="language-C++">//MainWindow.h
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/1.gif"/></p>
+<pre><code class="lang-C++">//MainWindow.h
 #pragma once
 
 #include &lt;QMainWindow&gt;
@@ -79,7 +79,7 @@ private:
     int mCurrent = 0;
 };
 </code></pre>
-<pre><code class="language-C++">//MainWindow.cpp
+<pre><code class="lang-C++">//MainWindow.cpp
 #include "MainWindow.h"
 #include &lt;QPainter&gt;
 #include &lt;QtMath&gt;
@@ -139,15 +139,14 @@ void MainWindow::paintEvent(QPaintEvent *event)
         painter.drawEllipse(x0  - r0, y0 - r0, 2 * r0, 2 * r0);
     }
 }
-
 </code></pre>
 <h3>QQuickPaintedItem+QPainter 示例</h3>
 <p>QQuickPaintedItem继承自QQuickItem，而QQuickItem就是Qml中的Item。</p>
 <p>QQuickPaintedItem通过重载paint函数,就可以使用QPainter绘制。</p>
 <p>自定义的QQuickPaintedItem子类需要注册到Qml中才能使用，注册类型或者注册实例都可以，具体可以参考《 Qml组件化编程5-Qml与C++交互》</p>
 <p>这里示例QQuickPaintedItem 中使用 QPainter绘制一个阴阳八卦:</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/2.gif"/></p>
-<pre><code class="language-C++">//PBar.h
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/2.gif"/></p>
+<pre><code class="lang-C++">//PBar.h
 #pragma once
 
 #include &lt;QQuickPaintedItem&gt;
@@ -165,7 +164,7 @@ private:
     int mCurrent = 0;
 };
 </code></pre>
-<pre><code class="language-C++">//PBar.cpp
+<pre><code class="lang-C++">//PBar.cpp
 #include "PBar.h"
 #include &lt;QPainter&gt;
 #include &lt;QtMath&gt;
@@ -263,9 +262,8 @@ void PBar::timerEvent(QTimerEvent *event)
     mCurrent =(mCurrent + 3) % 360;
     update();
 }
-
 </code></pre>
-<pre><code class="language-C++">//main.cpp
+<pre><code class="lang-C++">//main.cpp
 #include &lt;QGuiApplication&gt;
 #include &lt;QQmlApplicationEngine&gt;
 #include "PBar.h"
@@ -286,9 +284,8 @@ int main(int argc, char *argv[])
 
     return app.exec();
 }
-
 </code></pre>
-<pre><code class="language-qml">//main.qml
+<pre><code class="lang-qml">//main.qml
 import QtQuick 2.0
 import QtQuick.Window 2.0
 import PBar 1.0
@@ -302,7 +299,6 @@ Window {
         anchors.fill: parent
     }
 }
-
 </code></pre>
 <h3>关于QPainter</h3>
 <p>QPainter底层使用CPU做光栅化渲染，这种方式在没有GPU的设备中能够很好地工作。</p>
@@ -317,8 +313,8 @@ Window {
 <p>当然QPainter实现的功能，也都可以移植到Canvas中。</p>
 <p>Canvas渲染性能并不太好，如果有性能要求，还是不要用Canvas了。</p>
 <p>这里示例绘制一个笑脸</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/3.png"/></p>
-<pre><code class="language-qml">//main.qml
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/3.png"/></p>
+<pre><code class="lang-qml">//main.qml
 import QtQuick 2.0
 import QtQuick.Window 2.0
 
@@ -348,7 +344,6 @@ Window {
         }
     }
 }
-
 </code></pre>
 <h2>Qml Shapes</h2>
 <p>Qt5.10开始，Qml增加了Quick.Shapes功能。这是目前官方提供的自绘途径中，兼顾性能和易用性的最佳选择。</p>
@@ -356,8 +351,8 @@ Window {
 <p>属性绑定和属性动画，可以轻易实现各式各样的动态、酷炫的UI。</p>
 <p>(后续的自定义组件，涛哥将会优先使用Shapes。)</p>
 <p>这里示例实现一个任意圆角的Rectangle组件:</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/4.gif"/></p>
-<pre><code class="language-qml">// TRoundRect.qml
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/4.gif"/></p>
+<pre><code class="lang-qml">// TRoundRect.qml
 import QtQuick 2.12
 import QtQuick.Controls 2.5
 import QtQuick.Shapes 1.12
@@ -379,7 +374,7 @@ Shape {
     //多重采样抗锯齿
     layer.enabled: true
     layer.samples: 8
-    
+
     //平滑处理
     smooth: true
 
@@ -437,7 +432,7 @@ Shape {
 }
 </code></pre>
 <p>看一下TRoundRect的用法</p>
-<pre><code class="language-qml">import QtQuick 2.0
+<pre><code class="lang-qml">import QtQuick 2.0
 import QtQuick.Controls 2.5
 Rectangle {
     width: 800
@@ -496,28 +491,28 @@ Rectangle {
 <p>有的同学学习过OpenGL这类图形渲染API，Qt为OpenGL提供了便利的窗口和上下文环境。</p>
 <p>QOpenGLWidget用来在QWidget框架中集成OpenGL渲染，QOpenGLWindow用在Qml框架。</p>
 <p>使用方法都是子类重载下面三个函数：</p>
-<pre><code class="language-C++">void initializeGL();
+<pre><code class="lang-C++">void initializeGL();
 
 void paintGL();
 
 void resizeGL(int w, int h);
 </code></pre>
 <p>这里可以参考官方的示例：</p>
-<p><a href="%5Bhttps://doc.qt.io/qt-5/qtopengl-hellogl2-example.html">QOpenGLWidget示例</a></p>
+<p><a href="[https://doc.qt.io/qt-5/qtopengl-hellogl2-example.html">QOpenGLWidget示例</a></p>
 <p><a href="https://doc.qt.io/qt-5/qtgui-openglwindow-example.html">QOpenGLWindow示例</a></p>
 <p>Qt对OpenGL系列的函数都做了封装，一般使用QOpenGLFunctions就够了，QOpenGLFunctions是基于OpenGL ES 2.0 API的跨平台实现，删减了个别API。</p>
 <p>相应的有一个未删减的OpenGLES2 的封装：QOpenGLFunctions_ES2。</p>
 <p>当然为了兼容所有OpenGL版本，Qt分别封装了相应的类</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/5.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/5.png"/></p>
 <p>有特殊版本需要的时候，可以把QOpenGLFunctions换成相应的类。</p>
 <p>还有一个OpenGL ES3.0的封装， QOpenGLExtraFunctions，可以在支持OpenGL ES 3.0的设备上使用。</p>
 <p>使用这些functions，一定要在有OpenGL上下文环境的地方，先调用一下initializeOpenGLFunctions。有些版本的init有返回值的，要注意判断并处理。</p>
 <h2>Qml SceneGraph</h2>
 <p>Qml基于GPU实现了一套渲染框架，这个框架就是SceneGraph。</p>
 <p>SceneGraph提供了很多GPU渲染相关的功能，以方便进行自绘制，都是以QSG开头的类，如下图所示：</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/6.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml7/6.png"/></p>
 <p>使用方式是在QQuickItem的子类中，重载updatePaintNode函数：</p>
-<pre><code class="language-C++">  QSGNode *TaoItem::updatePaintNode(QSGNode *node, UpdatePaintNodeData *)
+<pre><code class="lang-C++">  QSGNode *TaoItem::updatePaintNode(QSGNode *node, UpdatePaintNodeData *)
   {
       QSGSimpleRectNode *n = static_cast&lt;QSGSimpleRectNode *&gt;(node);
       if (!n) {
@@ -527,7 +522,6 @@ void resizeGL(int w, int h);
       n-&gt;setRect(boundingRect());
       return n;
   }
-
 </code></pre>
 <p>在使用Qml框架的程序中，使用这些QSG功能，将自定义渲染直接加入SceneGraph框架的渲染流程，无疑是性能最优的。</p>
 <p>不过问题在于，这些QSG有点难以使用。需要有一定的OpenGL或DirectX相关图形学知识，并理解SceneGraph的节点交换机制，才能用好。</p>
