--- a/jaredtao.gitee.io/玩转Qml(9)-Model和View.html
+++ b/jaredtao.gitee.io/玩转Qml(9)-Model和View.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(9">仓库源文</a>-Model和View.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(9">站点原文</a>-Model和View)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(9">仓库源文</a>-Model和View.md)，<a href="https://jaredtao.gitee.io/玩转Qml(9">站点原文</a>-Model和View)</h2>
 <hr/>
 <p>title: 玩转Qml(9)-Model和View
 photos: /images/Qml9/1.png
@@ -14,33 +14,33 @@ date: 2019-05-24 18:44:23</li>
 </ul>
 <hr/>
 <ul>
-<li><a href="#%E7%AE%80%E4%BB%8B">简介</a></li>
-<li><a href="#%E6%BA%90%E7%A0%81">源码</a></li>
-<li><a href="#%E7%95%8C%E9%9D%A2%E6%95%B0%E6%8D%AE%E5%92%8C%E9%80%BB%E8%BE%91%E5%88%86%E7%A6%BB">界面、数据和逻辑分离</a></li>
-<li><a href="#qt%E5%86%85%E7%BD%AE%E7%9A%84model-view">Qt内置的Model-View</a></li>
-<li><a href="#%E6%95%B4%E6%95%B0%E5%81%9Amodel">整数做model</a><ul>
-<li><a href="#%E5%85%B3%E4%BA%8Edelegate">关于delegate</a></li>
-<li><a href="#view%E4%B8%8Erepeater%E7%9A%84%E5%8C%BA%E5%88%AB">View与Repeater的区别</a></li>
+<li><a href="#简介">简介</a></li>
+<li><a href="#源码">源码</a></li>
+<li><a href="#界面数据和逻辑分离">界面、数据和逻辑分离</a></li>
+<li><a href="#qt内置的model-view">Qt内置的Model-View</a></li>
+<li><a href="#整数做model">整数做model</a><ul>
+<li><a href="#关于delegate">关于delegate</a></li>
+<li><a href="#view与repeater的区别">View与Repeater的区别</a></li>
 </ul>
 </li>
 <li><a href="#listmodel">ListModel</a><ul>
-<li><a href="#%E9%9D%99%E6%80%81listmodel">静态ListModel</a></li>
-<li><a href="#%E5%8A%A8%E6%80%81listmodel">动态ListModel</a></li>
+<li><a href="#静态listmodel">静态ListModel</a></li>
+<li><a href="#动态listmodel">动态ListModel</a></li>
 </ul>
 </li>
 <li><a href="#xmllistmodel">XmlListModel</a></li>
 <li><a href="#objectmodel">ObjectModel</a></li>
-<li><a href="#c%E5%AF%BC%E5%87%BAmodel">C++导出Model</a><ul>
+<li><a href="#c导出model">C++导出Model</a><ul>
 <li><a href="#qlistt">QList&lt;T&gt;</a></li>
 <li><a href="#qjsonarray">QJsonArray</a></li>
 <li><a href="#qqmlpropertymap">QQmlPropertyMap</a></li>
 </ul>
 </li>
-<li><a href="#listview%E7%BC%BA%E5%A4%B1%E7%9A%84%E7%81%B5%E9%AD%82">ListView缺失的灵魂</a><ul>
-<li><a href="#%E6%90%9C%E7%B4%A2%E4%B8%8E%E6%8E%92%E5%BA%8F">搜索与排序</a></li>
-<li><a href="#%E9%80%89%E4%B8%AD">选中</a></li>
-<li><a href="#%E6%8B%96%E6%8B%BD">拖拽</a></li>
-<li><a href="#%E7%89%B9%E6%95%88">特效</a></li>
+<li><a href="#listview缺失的灵魂">ListView缺失的灵魂</a><ul>
+<li><a href="#搜索与排序">搜索与排序</a></li>
+<li><a href="#选中">选中</a></li>
+<li><a href="#拖拽">拖拽</a></li>
+<li><a href="#特效">特效</a></li>
 </ul>
 </li>
 </ul>
@@ -48,29 +48,29 @@ date: 2019-05-24 18:44:23</li>
 <p>本文是《玩转Qml》系列文章的第九篇，涛哥将教大家，Qml中Model和View的知识。</p>
 <h2>源码</h2>
 <p>《玩转Qml》系列文章，配套了一个优秀的开源项目:TaoQuick</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
 <p>访问不了或者速度太慢，可以用国内的镜像网站gitee</p>
-<p>https://gitee.com/jaredtao/TaoQuick</p>
+<p><a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h2>界面、数据和逻辑分离</h2>
 <p>界面架构的理念发展的非常快，主要在Web技术的驱动下，就有这么多架构：</p>
 <p>MVC、MVP、 MVVM、 Flux、Redux。</p>
 <p>架构太多太复杂，只要抓住一些关键点就够了：界面、数据和逻辑要分别处理，最终要能够正确处理用户输入并显示结果。</p>
 <p>先来看一下Qt中提供的架构：</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/1.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/1.png"/></p>
 <p>Model代表数据，View代表界面，这个Delegate嘛，就是用来定制View的显示方式和Controll的调用，也应该算进View里面去。</p>
 <p>这样看来Qt是M-V架构 ? 其实Qt算是MVC架构，这个Controll一般是自己实现的，和Model放在一起的。</p>
 <p>不过Qt有信号/槽机制，在QtQuick中以属性绑定的方式出现。信号/槽相当于Gof设计模式中的<a href="https://github.com/jaredtao/DesignPattern/tree/master/code/Behavior/Observer">观察者模式</a>，也相当于Flux中的订阅/发布模式。</p>
 <p>涛哥按自己的实践和理解，画了一个Qt的Model-View架构草图：</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/2.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/2.png"/></p>
 <h2>Qt内置的Model-View</h2>
 <p>View包括 ListView、TableView、TreeView这三种</p>
 <p>(ComboBox也可以算作ListView)</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/4.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/4.png"/></p>
 <p>对应的Model包括 ListModel、TableModel、TreeModel</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/3.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/3.png"/></p>
 <p>Qt提供了一些抽象的Model类，需要自己去继承并实现接口，也有一些可以直接用。</p>
 <p>下图是涛哥整理的Qt中model继承关系：</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/5.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/5.png"/></p>
 <p>其中的QStringListModel不是抽象类，可以直接用在ListView中。</p>
 <p>QStandardItemModel也不是抽象类，可以直接用在任意一种View中。</p>
 <p>在数据量大、有性能要求的地方，需要继承QAbstractItemModel类，重新实现一个model。</p>
@@ -80,8 +80,8 @@ date: 2019-05-24 18:44:23</li>
 <p>在ListView中，一个整数作为model，就可以创建多个delegate实例。</p>
 <p>整数作为model，也可以用在GridView、Combobox、Repeater等需要model的地方。</p>
 <p>&lt;Qml组件化编程6-进度条定制&gt;一文中，展示渐变效果，就用的整数作为model</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml6/Gradiant.gif"/></p>
-<pre><code class="language-Qml">import QtQuick 2.9
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml6/Gradiant.gif"/></p>
+<pre><code class="lang-Qml">import QtQuick 2.9
 import QtQuick.Controls 2.5
 
 Item {
@@ -138,7 +138,7 @@ Item {
 <h2>ListModel</h2>
 <p>Qml提供了ListModel这样的一个封装，可以直接在Qml中定义静态的model</p>
 <h3>静态ListModel</h3>
-<pre><code class="language-Qml">  import QtQuick 2.0
+<pre><code class="lang-Qml">  import QtQuick 2.0
 
   ListModel {
       id: fruitModel
@@ -154,7 +154,7 @@ Item {
   }
 </code></pre>
 <p>然后在ListView中使用</p>
-<pre><code class="language-Qml">ListView {
+<pre><code class="lang-Qml">ListView {
     anchors.fill: parent
     model: fruitModel
     delegate: Item {
@@ -171,19 +171,19 @@ Item {
 <p>第二个text直接用了cost，其实是modelData.cost省略了modelData。这种写法在静态的ListModel中是可以用的。</p>
 <h3>动态ListModel</h3>
 <p>ListModel还提供了一些动态修改数据的接口:</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/6.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml9/6.png"/></p>
 <p>像append、 set、insert这些，参数里的jsobject就是js环境中的Object类型，可以参考<a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object">JS手册</a></p>
 <p>这里涛哥示例一下，动态添加元素</p>
-<pre><code class="language-Qml">...
+<pre><code class="lang-Qml">...
 onClicked: {
     var banana = new Object()
-    
+
     //或者这样也行，按照js语法即可
     //var bababa = Object.create(null)
 
     banana["name"]="banana" //方括号 + key的方式设置成员
     babana.cost=15  //点+名字的方式设置成员
-    
+
     fruitModel.append(banana)   //将创建的banana添加到model
 }
 ...
@@ -193,7 +193,7 @@ onClicked: {
 <p>TaoQuick项目的插件机制，也是通过JSON动态添加Model元素。<a href="https://github.com/jaredtao/TaoQuick">TaoQuick</a></p>
 <h2>XmlListModel</h2>
 <p>处理xml的model，可以方便地使用XPath。</p>
-<pre><code class="language-Qml">  XmlListModel {
+<pre><code class="lang-Qml">  XmlListModel {
        id: feedModel
        source: "http://rss.news.yahoo.com/rss/oceania"
        query: "/rss/channel/item"
@@ -233,7 +233,7 @@ onClicked: {
 <p>QJsonArray也是可以直接导出给ListView用，不过注意是只读的。</p>
 <h3>QQmlPropertyMap</h3>
 <p>QQmlPropertyMap 是一个Map结构, 但是这个结构注册后，Qml中可以直接用"点 + 名字"的方式访问其中的数据</p>
-<pre><code class="language-C++">  // create our data
+<pre><code class="lang-C++">  // create our data
   QQmlPropertyMap ownerData;
   ownerData.insert("name", QVariant(QString("John Smith")));
   ownerData.insert("phone", QVariant(QString("555-5555")));
@@ -246,7 +246,7 @@ onClicked: {
   view.setSource(QUrl::fromLocalFile("main.qml"));
   view.show();
 </code></pre>
-<pre><code class="language-Qml">//main.qml
+<pre><code class="lang-Qml">//main.qml
 Text { 
     text: owner.name + " " + owner.phone 
 }
