--- a/jaredtao.gitee.io/玩转Qt(1)-输出彩色log.html
+++ b/jaredtao.gitee.io/玩转Qt(1)-输出彩色log.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQt(1">仓库源文</a>-输出彩色log.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt(1">站点原文</a>-输出彩色log)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qt(1">仓库源文</a>-输出彩色log.md)，<a href="https://jaredtao.gitee.io/玩转Qt(1">站点原文</a>-输出彩色log)</h2>
 <hr/>
 <p>title: 玩转Qt(1)-输出彩色log
 photos: /images/ConsoleColor/Image1.png
@@ -14,9 +14,9 @@ date: 2019-04-29 23:44:23</li>
 <h2>简介</h2>
 <p>我们在Qt Creator中开发程序的时候，经常要做的一件事情，就是看程序的输出Log。
 一般的log信息都是黑白的，比如这样的：
-<img alt="fa4bb028a52e28887c9ec2a3c8b192dc.png" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ConsoleColor/Image1.png"/></p>
+<img alt="fa4bb028a52e28887c9ec2a3c8b192dc.png" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ConsoleColor/Image1.png"/></p>
 <p>涛哥在这里告诉大家一个隐藏的技能，那就是输出彩色的log:</p>
-<p><img alt="293105e6f37901923d3576fcd12c650f.png" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ConsoleColor/2.jpg"/></p>
+<p><img alt="293105e6f37901923d3576fcd12c650f.png" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ConsoleColor/2.jpg"/></p>
 <p>从此看到的log，不再是黑白的，而是五颜六色的，生活更加绚丽多彩。</p>
 <h2>原理</h2>
 <p>要输出彩色信息有点类似于html的语法，即在要输出的文字前加上转义字符。
@@ -65,13 +65,12 @@ qDebug() &lt;&lt; "\033[0m";</p>
 　　/033[0J : 删除标到萤幕结尾
 　　/033[1J : 删除从萤幕开始到标处
 　　/033[2J : 删除整个屏幕
-
 </code></pre>
 <p>涛哥在QtCreator中测试了，只有颜色和加粗指令能生效。</p>
 <h2>代码</h2>
 <p>（代码使用C++11标准）</p>
 <p>为了方便、直观地使用，涛哥定义了一套枚举</p>
-<pre><code class="language-c++">enum class LogType {
+<pre><code class="lang-c++">enum class LogType {
     Reset = 0,
 
     Bold,
@@ -98,7 +97,7 @@ qDebug() &lt;&lt; "\033[0m";</p>
 };
 </code></pre>
 <p>之后又写了一个指令列表，顺序和前面的枚举一一对应</p>
-<pre><code class="language-c++">static const char * logCommands[] = {
+<pre><code class="lang-c++">static const char * logCommands[] = {
     "\033[0m",
     "\033[1m",
     "\033[2m",
@@ -121,11 +120,11 @@ qDebug() &lt;&lt; "\033[0m";</p>
 };
 </code></pre>
 <p>这样就可以通过查表的方式，拿到对应的颜色指令了</p>
-<pre><code class="language-c++">    logCommands[(int)(LogType::FrontYellow)]
+<pre><code class="lang-c++">    logCommands[(int)(LogType::FrontYellow)]
 </code></pre>
 <p>这个代码使用了c的强制转换，在c++11标准中会报警告，建议用static_cast。
 所以涛哥又写了一个转换函数,将枚举通过static_cast转换成int类型。</p>
-<pre><code class="language-cpp">template &lt;typename EnumType, typename IntType = int&gt;
+<pre><code class="lang-cpp">template &lt;typename EnumType, typename IntType = int&gt;
 int enumToInt(EnumType enumValue)
 {
     static_assert (std::is_enum&lt;EnumType&gt;::value, "EnumType must be enum");
@@ -134,7 +133,7 @@ int enumToInt(EnumType enumValue)
 }
 </code></pre>
 <p>最后就是代码的全貌了</p>
-<pre><code class="language-c++">#include &lt;QDebug&gt;
+<pre><code class="lang-c++">#include &lt;QDebug&gt;
 enum class LogType {
     Reset = 0,
 
@@ -200,7 +199,6 @@ int main(int argc, char *argv[])
                   "欢迎直接联系我寻求帮助" &lt;&lt; logCommands[0];
     return 0;
 }
-
 </code></pre>
 <p>顺便说一下，设置了console的工程不能显示出彩色，得把console去掉。
-<img alt="a03d569415d1c9ab1aaa6fb1a1d62d3a.png" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ConsoleColor/3.jpg"/></p>
+<img alt="a03d569415d1c9ab1aaa6fb1a1d62d3a.png" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ConsoleColor/3.jpg"/></p>
