--- a/jaredtao.gitee.io/玩转Qt(10)-github-Actions自动化编译.html
+++ b/jaredtao.gitee.io/玩转Qt(10)-github-Actions自动化编译.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQt(10">仓库源文</a>-github-Actions自动化编译.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt(10">站点原文</a>-github-Actions自动化编译)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qt(10">仓库源文</a>-github-Actions自动化编译.md)，<a href="https://jaredtao.gitee.io/玩转Qt(10">站点原文</a>-github-Actions自动化编译)</h2>
 <hr/>
 <p>title: 玩转Qt(10)-github-Actions自动化编译
 photos: /images/QtActions/1.png
@@ -12,34 +12,34 @@ date: 2019-11-19 12:44:23</li>
 </ul>
 <hr/>
 <ul>
-<li><a href="#%E5%89%8D%E8%A8%80">前言</a></li>
-<li><a href="#%E7%AE%80%E4%BB%8B">简介</a></li>
-<li><a href="#%E4%BB%A3%E7%A0%81%E4%BB%93%E5%BA%93">代码仓库</a></li>
-<li><a href="#%E6%95%88%E6%9E%9C%E9%A2%84%E8%A7%88">效果预览</a></li>
-<li><a href="#%E4%BD%BF%E7%94%A8%E6%96%B9%E5%BC%8F">使用方式</a></li>
-<li><a href="#%E5%8E%9F%E7%90%86">原理</a><ul>
-<li><a href="#actions%E5%AE%98%E6%96%B9%E6%96%87%E6%A1%A3">Actions官方文档</a></li>
-<li><a href="#actions%E7%9A%84%E9%BB%98%E8%AE%A4%E7%8E%AF%E5%A2%83">Actions的默认环境</a></li>
-<li><a href="#actions%E8%AF%AD%E6%B3%95">Actions语法</a></li>
-<li><a href="#actions%E6%A8%A1%E6%9D%BF">Actions模板</a></li>
-<li><a href="#qt%E9%A1%B9%E7%9B%AE%E7%9A%84%E7%BC%96%E8%AF%91%E6%B5%81%E7%A8%8B">Qt项目的编译流程</a></li>
-<li><a href="#qt%E7%9B%B8%E5%85%B3%E7%9A%84actions%E6%A8%A1%E6%9D%BF">Qt相关的Actions模板</a><ul>
+<li><a href="#前言">前言</a></li>
+<li><a href="#简介">简介</a></li>
+<li><a href="#代码仓库">代码仓库</a></li>
+<li><a href="#效果预览">效果预览</a></li>
+<li><a href="#使用方式">使用方式</a></li>
+<li><a href="#原理">原理</a><ul>
+<li><a href="#actions官方文档">Actions官方文档</a></li>
+<li><a href="#actions的默认环境">Actions的默认环境</a></li>
+<li><a href="#actions语法">Actions语法</a></li>
+<li><a href="#actions模板">Actions模板</a></li>
+<li><a href="#qt项目的编译流程">Qt项目的编译流程</a></li>
+<li><a href="#qt相关的actions模板">Qt相关的Actions模板</a><ul>
 <li><a href="#install-qt-action">install-qt-action</a></li>
 <li><a href="#action-setup-qt">action-setup-qt</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#%E6%89%A9%E5%B1%95">扩展</a><ul>
-<li><a href="#windows%E5%B9%B3%E5%8F%B0">Windows平台</a><ul>
-<li><a href="#%E9%BB%98%E8%AE%A4mingw%E4%B8%8D%E8%83%BD%E7%94%A8">默认mingw不能用</a></li>
-<li><a href="#windows%E5%B9%B3%E5%8F%B0%E6%8C%87%E5%AE%9Ashell">Windows平台指定shell</a></li>
+<li><a href="#扩展">扩展</a><ul>
+<li><a href="#windows平台">Windows平台</a><ul>
+<li><a href="#默认mingw不能用">默认mingw不能用</a></li>
+<li><a href="#windows平台指定shell">Windows平台指定shell</a></li>
 </ul>
 </li>
-<li><a href="#ubuntu%E5%B9%B3%E5%8F%B0">Ubuntu平台</a></li>
-<li><a href="#macos%E5%B9%B3%E5%8F%B0">MacOS平台</a></li>
-<li><a href="#android%E5%B9%B3%E5%8F%B0">Android平台</a></li>
-<li><a href="#ios%E5%B9%B3%E5%8F%B0">IOS平台</a></li>
+<li><a href="#ubuntu平台">Ubuntu平台</a></li>
+<li><a href="#macos平台">MacOS平台</a></li>
+<li><a href="#android平台">Android平台</a></li>
+<li><a href="#ios平台">IOS平台</a></li>
 </ul>
 </li>
 </ul>
@@ -58,20 +58,20 @@ date: 2019-11-19 12:44:23</li>
 <h2>效果预览</h2>
 <p>先来看看效果吧</p>
 <p>这是github的Actions页面</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/1.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/1.png"/></p>
 <p>图中可以看到，最后一次提交的代码，在Windows、Ubuntu、MacOS、Android、IOS五个平台都编译通过了(通过显示绿色的对勾✔，未通过显示红色的叉❌)。</p>
 <p>涛哥是个徽章爱好者，把这些徽章都链接进了README文件中。别人在预览代码仓库的时候，很容易就能看到仓库的编译状态。
-<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/2.png"/></p>
+<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/2.png"/></p>
 <p>当然，在commit页面，还可以详细查看每一次commit的代码，是否都编译通过
-<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/3.png"/></p>
+<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/3.png"/></p>
 <h2>使用方式</h2>
 <p>(这里假设各位读者会使用基本的git、github操作，不会的请去搜索相关教程)</p>
 <ol>
 <li>下载涛哥的仓库HelloActions-Qt</li>
 </ol>
-<pre><code class="language-shell">git clone https://github.com/jaredtao/HelloActions-Qt
+<pre><code class="lang-shell">git clone https://github.com/jaredtao/HelloActions-Qt
 </code></pre>
-<ol start="2">
+<ol>
 <li><p>拷贝文件夹'.github'到你的代码仓库根目录</p>
 </li>
 <li><p>在你的仓库中commit并添加.github文件夹中的文件</p>
@@ -82,7 +82,7 @@ date: 2019-11-19 12:44:23</li>
 <p>push完就可以了，到你的github相应仓库页面-Actions子页面查看状态吧。</p>
 <p>没错，复制、粘贴，就这么简单。</p>
 <p>.github/workflows文件夹中包括写好的5个模板：</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/4.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/4.png"/></p>
 <p>你也可以根据你的需要，只选择你需要的。</p>
 <h2>原理</h2>
 <p>授人以鱼，不如授人以渔</p>
@@ -101,10 +101,10 @@ date: 2019-11-19 12:44:23</li>
 <p>更多细节请大家参考文档，这里就不赘述了。</p>
 <h3>Actions模板</h3>
 <p>每个github仓库，都有一个Actions页面，在这里可以创建、管理Actions</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/5.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/5.png"/></p>
 <p>一般使用nodejs、python、golang等环境的项目，github提供了现成的Actions模板，可以</p>
 <p>直接在Actions创建页面或者Marketplace(github的应用商店)进行搜索、引用。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/6.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/6.png"/></p>
 <p>有闲暇的开发者，也可以开发自己的Actions并提交到github商店，甚至可以赚点零花钱哦。</p>
 <p>(Actions开发使用TypeScript)</p>
 <h3>Qt项目的编译流程</h3>
@@ -127,19 +127,19 @@ date: 2019-11-19 12:44:23</li>
 </li>
 </ol>
 <h3>Qt相关的Actions模板</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/7.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions/7.png"/></p>
 <h4>install-qt-action</h4>
 <p>Qt项目暂时没有公开、完整的Actions模板,不过有一个安装Qt的Actions，解决了在不同平台安装不同版本Qt的问题。</p>
 <p><a href="https://github.com/marketplace/actions/install-qt">install-qt-action</a></p>
 <p>github的Actions有一个非常强大的功能，就是引用外部模板。</p>
 <p>比如要引入这个install-qt-Actions模板，只要在配置文件中添加两行即可：</p>
-<pre><code class="language-yaml">...
+<pre><code class="lang-yaml">...
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
 ...
 </code></pre>
 <p>Qt的安装路径、版本、目标平台、目标架构都有默认配置，当然你也可以手动配置</p>
-<pre><code class="language-yaml">...
+<pre><code class="lang-yaml">...
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
         with:
@@ -163,16 +163,16 @@ date: 2019-11-19 12:44:23</li>
 <p>aqtinstall没有实现‘只安装指定模块’，默认全安装。希望后续能做支持，毕竟Qt全安装太大了。</p>
 <h4>action-setup-qt</h4>
 <p>涛哥还发现一个开源的action，并没有进商店，功能是适配所有平台的Qt环境变量</p>
-<p>https://github.com/Skycoder42/action-setup-qt</p>
+<p><a href="https://github.com/Skycoder42/action-setup-qt">https://github.com/Skycoder42/action-setup-qt</a></p>
 <p>可以在该作者的'Json序列化库'中，看到实际应用</p>
-<p>https://github.com/Skycoder42/QtJsonSerializer</p>
+<p><a href="https://github.com/Skycoder42/QtJsonSerializer">https://github.com/Skycoder42/QtJsonSerializer</a></p>
 <p>目前是固定在Qt5.13.2版本，包含winrt、wasm等所有平台。</p>
 <h2>扩展</h2>
 <p>接下来，说一下涛哥提供的模板，对各平台的配置。</p>
 <p>以方便那些，需要对模板做修改的同学。</p>
 <h3>Windows平台</h3>
 <p>涛哥在这个配置文件中，写了一些注释。</p>
-<pre><code class="language-yml"># windows.yml
+<pre><code class="lang-yml"># windows.yml
 name: Windows
 on: 
   # push代码时触发workflow
@@ -242,7 +242,6 @@ jobs:
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
           qmake
           nmake
-
 </code></pre>
 <p>大部分配置都是显而易见的，这里对一些特殊情况做一些说明吧。</p>
 <h4>默认mingw不能用</h4>
@@ -255,9 +254,9 @@ jobs:
 <p>使用msvc命令行编译项目时，一般要先调用'vcvarsxxx.bat'脚本来设置环境变量。</p>
 <p>Powershell虽然强大，却不太方便直接调用这个bat。要么安装Powershell扩展Pcsx，要么</p>
 <p>用一些取巧的方式：</p>
-<p>https://stackoverflow.com/questions/2124753/how-can-i-use-powershell-with-the-visual-studio-command-prompt</p>
+<p><a href="https://stackoverflow.com/questions/2124753/how-can-i-use-powershell-with-the-visual-studio-command-prompt">https://stackoverflow.com/questions/2124753/how-can-i-use-powershell-with-the-visual-studio-command-prompt</a></p>
 <p>github-Actions当然也可以直接指定使用cmd。</p>
-<pre><code class="language-yml">...
+<pre><code class="lang-yml">...
       # 编译msvc
       - name: build-msvc
         shell: cmd
@@ -271,7 +270,7 @@ jobs:
 </code></pre>
 <h3>Ubuntu平台</h3>
 <p>Ubuntu 平台看配置吧。</p>
-<pre><code class="language-yml"># ubuntu.yml
+<pre><code class="lang-yml"># ubuntu.yml
 name: Ubuntu
 # Qt官方没有linux平台的x86包
 on: 
@@ -308,7 +307,7 @@ jobs:
 </code></pre>
 <h3>MacOS平台</h3>
 <p>MacOS平台和Ubuntu差别不大</p>
-<pre><code class="language-yml"># macos.yml
+<pre><code class="lang-yml"># macos.yml
 name: MacOS
 on: 
   push:
@@ -339,14 +338,13 @@ jobs:
         run: |
           qmake
           make
-
 </code></pre>
 <h3>Android平台</h3>
 <p>Android使用ubuntu编译，Windows那个ndk似乎没装，未尝试。</p>
 <p>如果只使用Qt5.12.6，默认的配置可以直接用，编译前设置环境变量 ANDROID_SDK_ROOT</p>
 <p>和ANDROID_NDK_ROOT就可以了。</p>
 <p>Qt5.9.8要指定低版本的NDK、SDK才行，这里涛哥没有进一步尝试。</p>
-<pre><code class="language-yml"># android.yml
+<pre><code class="lang-yml"># android.yml
 name: Android
 on: 
   push:
@@ -397,7 +395,7 @@ jobs:
 <h3>IOS平台</h3>
 <p>ios只能使用MacOS编译。</p>
 <p>qmake的时候要指定平台、release模式等。</p>
-<pre><code class="language-yml">#ios.yml
+<pre><code class="lang-yml">#ios.yml
 name: IOS
 on: 
   push:
@@ -431,5 +429,4 @@ jobs:
         run: |
           qmake -r -spec macx-ios-clang CONFIG+=release CONFIG+=iphoneos
           make
-
 </code></pre>
