--- a/jaredtao.gitee.io/玩转Qt(11)-github-Actions自动化发行.html
+++ b/jaredtao.gitee.io/玩转Qt(11)-github-Actions自动化发行.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQt(11">仓库源文</a>-github-Actions自动化发行.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt(11">站点原文</a>-github-Actions自动化发行)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qt(11">仓库源文</a>-github-Actions自动化发行.md)，<a href="https://jaredtao.gitee.io/玩转Qt(11">站点原文</a>-github-Actions自动化发行)</h2>
 <hr/>
 <p>title: 玩转Qt(11)-github-Actions自动化发行
 photos: /images/QtActions2/2.png
@@ -68,14 +68,14 @@ date: 2019-12-3 12:44:23</li>
 <p>一般安装7z、rar之类的压缩工具，用一条命令行就行了。</p>
 <p>涛哥这里再说一下，github-Actions给所有平台都提供了PowerShell，而PowerShell内置了压缩命令Compress-Archive。</p>
 <p>使用也很简单，只要路径和名字，例如：</p>
-<pre><code class="language-powershell">Compress-Archive -Path .\MyFolder 'MyRelease.zip'
+<pre><code class="lang-powershell">Compress-Archive -Path .\MyFolder 'MyRelease.zip'
 </code></pre>
 <p>做安装包，Qt官方有功能很全面的安装包制作工具：QtInstallFrameWork, 稍微翻看一下文档或者例子即可。本文先不展开了。</p>
 <h3>上传</h3>
 <p>github 本身提供了'Release'功能，每个仓库都有一个'Release'页面</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions2/1.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions2/1.png"/></p>
 <p>可以将打包好的压缩包或者安装包，直接上传上去, 供他人下载。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions2/2.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions2/2.png"/></p>
 <p>github-Actions还提供了 创建'Release'、上传'Release'的模板</p>
 <p><a href="https://github.com/actions/create-release">actions/create-release</a></p>
 <p><a href="https://github.com/actions/upload-release-asset">actions/upload-release-asset</a></p>
@@ -91,7 +91,7 @@ date: 2019-12-3 12:44:23</li>
 <p>'每次提交tag'限定了发布的时机。</p>
 <p>涛哥尝试了一番，最终得到答案。</p>
 <p>回顾一下, Windows平台的编译配置：</p>
-<pre><code class="language-yml">name: Windows
+<pre><code class="lang-yml">name: Windows
 on: [push,pull_request]
 jobs:
   build:
@@ -131,7 +131,7 @@ jobs:
           nmake
 </code></pre>
 <p>steps中的每一个步骤，可以有触发条件。我们可以在这里指定，只有github的事件为tag时才执行:</p>
-<pre><code class="language-yml">  steps:
+<pre><code class="lang-yml">  steps:
     。。。
     # tag 打包
     - name: package
@@ -141,7 +141,7 @@ jobs:
 </code></pre>
 <h3>打包步骤</h3>
 <p>这里给出一个实际的打包步骤：</p>
-<pre><code class="language-yml">      # tag 打包
+<pre><code class="lang-yml">      # tag 打包
       - name: package
         if: startsWith(github.event.ref, 'refs/tags/')
         env:
@@ -176,14 +176,14 @@ jobs:
 <p>普通的设置环境变量，在步骤执行完成后就失效了，</p>
 <p>这里使用github-Actions的‘记录命令’set-env ，具体可以参考文档<a href="https://help.github.com/zh/actions/automating-your-workflow-with-github-actions/development-tools-for-github-actions">github-Actions记录命令</a></p>
 <p>文档说不要用双引号，应该都是针对linux的，我试出来的PowerShell用法如下：</p>
-<pre><code class="language-powershell">          $name = ${env:archiveName}
+<pre><code class="lang-powershell">          $name = ${env:archiveName}
           echo "::set-env name=packageName::$name"
 </code></pre>
 <p>先取环境变量到一个局部变量，再在‘记录命令’中引用局部变量。</p>
 <h3>多平台发布</h3>
 <p>如果只有一个平台、一种配置，直接用那两个模板就能解决问题。</p>
 <p>这是官方给的例子<a href="https://github.com/actions/upload-release-asset">upload-release-asset</a>：</p>
-<pre><code class="language-yml">    steps:
+<pre><code class="lang-yml">    steps:
       - name: Checkout code
         uses: actions/checkout@master
       - name: Build project # This would actually build your project, using zip for an example artifact
@@ -223,7 +223,7 @@ jobs:
 </ol>
 <p>调用REST API，涛哥依旧使用了方便的PowerShell,</p>
 <p>实际的配置如下：</p>
-<pre><code class="language-yml">      # tag 查询github-Release
+<pre><code class="lang-yml">      # tag 查询github-Release
       - name: queryReleaseWin
         id: queryReleaseWin
         if: startsWith(github.event.ref, 'refs/tags/')
@@ -302,7 +302,7 @@ jobs:
 </code></pre>
 <h3>最终配置</h3>
 <h4>windows版的最终配置</h4>
-<pre><code class="language-yml">name: Windows
+<pre><code class="lang-yml">name: Windows
 on: 
   # push代码时触发workflow
   push:
@@ -461,7 +461,7 @@ jobs:
           asset_content_type: application/zip
 </code></pre>
 <h4>MacOS最终配置</h4>
-<pre><code class="language-yml">name: MacOS
+<pre><code class="lang-yml">name: MacOS
 on: 
   push:
     paths-ignore:
@@ -577,7 +577,7 @@ jobs:
           asset_content_type: application/applefile
 </code></pre>
 <h3>结果和代码</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions2/2.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtActions2/2.png"/></p>
 <p>代码在github <a href="https://github.com/jaredtao/HelloActions-Qt">HelloActions-Qt</a></p>
 <p>另外在涛哥的Qml控件库TaoQuick，也使用了这一套配置</p>
 <p><a href="https://github.com/jaredtao/TaoQuick">TaoQuick</a></p>
