--- a/jaredtao.gitee.io/玩转Qt(12)-github-Actions缓存优化.html
+++ b/jaredtao.gitee.io/玩转Qt(12)-github-Actions缓存优化.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQt(12">仓库源文</a>-github-Actions缓存优化.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt(12">站点原文</a>-github-Actions缓存优化)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qt(12">仓库源文</a>-github-Actions缓存优化.md)，<a href="https://jaredtao.gitee.io/玩转Qt(12">站点原文</a>-github-Actions缓存优化)</h2>
 <hr/>
 <p>title: 玩转Qt(12)-github-Actions缓存优化
 photos: /images/QtActions2/3.png
@@ -58,7 +58,7 @@ date: 2019-12-4 12:44:23</li>
 <p>加上cache后，平均只有25秒。</p>
 <h3>无缓存的配置</h3>
 <p>先看一个Qt项目的编译配置</p>
-<pre><code class="language-yml">name: Windows
+<pre><code class="lang-yml">name: Windows
 on: [push,pull_request]
 jobs:
   build:
@@ -99,7 +99,7 @@ jobs:
 </code></pre>
 <h3>加缓存</h3>
 <p>缓存步骤，一般尽量写steps最前面。</p>
-<pre><code class="language-yml">    # 步骤
+<pre><code class="lang-yml">    # 步骤
     steps:
       # 缓存
       - name: cacheQt
@@ -115,7 +115,7 @@ jobs:
 <p>缓存只是把文件还原了，环境变量并没有还原，我们还需要手动还原环境变量。</p>
 <p>install-qt-action这个模板增加了一个环境变量Qt5_Dir,值为Qt的安装路径,并把对应的bin添加到了Path。</p>
 <p>我们要做的，就是在缓存恢复成功后，重新设置这两个变量，并去掉install-qt的步骤。</p>
-<pre><code class="language-yml">      - name: setupQt
+<pre><code class="lang-yml">      - name: setupQt
         if: steps.WindowsCacheQt.outputs.cache-hit == 'true'
         shell: pwsh
         env:
@@ -123,7 +123,7 @@ jobs:
         run: |
           $qt_Path=${env:QtPath}
           echo "::set-env name=Qt5_Dir::$qt_Path"
-          echo "::add-path::$qt_Path/bin"   
+          echo "::add-path::$qt_Path/bin"
 </code></pre>
 <p>steps.WindowsCacheQt.outputs.cache-hit == 'true'</p>
 <p>是缓存模板的输出值，可以作为后续步骤的条件判断。</p>
@@ -138,7 +138,7 @@ if: cache-hit == 'true'</li>
 if: cache-hit = 'false'</li>
 </ul>
 <p>实际配置</p>
-<pre><code class="language-yml">name: Windows
+<pre><code class="lang-yml">name: Windows
 on: 
   # push代码时触发workflow
   push:
