--- a/jaredtao.gitee.io/玩转Qt(13)-安卓5.12.4环境搭建.html
+++ b/jaredtao.gitee.io/玩转Qt(13)-安卓5.12.4环境搭建.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQt(13">仓库源文</a>-安卓5.12.4环境搭建.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt(13">站点原文</a>-安卓5.12.4环境搭建)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qt(13">仓库源文</a>-安卓5.12.4环境搭建.md)，<a href="https://jaredtao.gitee.io/玩转Qt(13">站点原文</a>-安卓5.12.4环境搭建)</h2>
 <hr/>
 <p>title: 玩转Qt(13)-安卓5.12.4环境搭建
 photos: /images/Android/1.png
@@ -18,7 +18,7 @@ date: 2019-12-8 00:44:23</li>
 <p>Qt for android 环境搭建，以Windows平台 Qt5.12为基准。</p>
 <h1>安装Qt</h1>
 <p>需要先安装Android版的Qt。 一般在Qt的安装包中都有集成，安装的时候勾上就行</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/1.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/1.png"/></p>
 <h1>安装必备工具链</h1>
 <p>Android开发必备的工具链包括：</p>
 <ul>
@@ -27,23 +27,23 @@ date: 2019-12-8 00:44:23</li>
 <li>Android NDK</li>
 </ul>
 <p>下载链接分别点击QtCreator中的按钮就能跳转到</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/3.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/3.png"/></p>
 <p>如果不能访问，找镜像网站。</p>
 <p>这里要注意版本，和Qt5.12适配的才能用。Qt官方也没有说，都是自己试出来的。</p>
 <p>JDK： OpenJDK没有试过，Oracle 的JDK， LTS版本有 1.8 和1.11，但是目前的Android SDK都是基于1.8开发的，1.11还用不了。</p>
 <p>SDK： SDK下最新的就好。</p>
 <p>NDK： Qt5.12能用的NDK是R19C，当前最新的是R20，里面工具链修改了，Qt还没有跟上，得后续版本（Qt5.12.5）</p>
 <p>都装好就行了，不要去修改环境变量。直接在QtCreator里面选好路径即可。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/2.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/2.png"/></p>
 <h1>更新SDK，build Tool</h1>
 <p>到SDK 管理页面，安装一堆必要的工具和镜像。注意Android SDK Build Tool ， 能用的是28.0.3，最新的29用不了。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/4.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/4.png"/></p>
 <h1>创建项目</h1>
 <p>创建一个Qt项目，使用Andorid kit。</p>
 <p>之后在项目管理页面中，点一下 “Create Template”按钮，生成一堆android相关配置文件。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/5.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/5.png"/></p>
 <p>之后去项目路径下，找到build.gradle文件</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/6.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/6.png"/></p>
 <p>把buildToolsVersion改成"28.0.3"</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/7.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Android/7.png"/></p>
 <p>最后编译运行就可以了。模拟器或真机连接，就不说了。</p>
