--- a/jaredtao.gitee.io/玩转Qt(4)-用好qmake.html
+++ b/jaredtao.gitee.io/玩转Qt(4)-用好qmake.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQt(4">仓库源文</a>-用好qmake.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt(4">站点原文</a>-用好qmake)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qt(4">仓库源文</a>-用好qmake.md)，<a href="https://jaredtao.gitee.io/玩转Qt(4">站点原文</a>-用好qmake)</h2>
 <hr/>
 <p>title: 玩转Qt(4)-用好qmake
 photos: /img/avatar.jpg
@@ -48,29 +48,29 @@ date: 2019-05-29 18:44:23</li>
 <p>pro文件中，除了常规的组织项目结构外，还可以做很多事情, 比如 指定编译选项、链接选项、制定目标生成规则、扩展编译规则 等等。</p>
 <p>pro文件中的qmake语法，包括 变量声明和使用、内建变量、替换函数、测试函数等，帮助文档都有详细的介绍。</p>
 <p>搜索关键词为qmake， 或者和普通的类查看帮助文档方式一样，光标放在pro文件要查看的变量上，按F1就能看到相应的说明。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/3.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/3.gif"/></p>
 <p>涛哥就不赘述了，后面用到的会单独说明。</p>
 <h2>添加第三方库</h2>
 <p>c++开发，使用第三方库也是家常便饭了，这是一个必备的技能。</p>
 <p>这里首选的方法，是使用QtCreator提供的添加库UI。在pro文件里(或者项目文件夹), 鼠标右键-&gt;添加库，然后根据自己的需要下一步、下一步点一下即可。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/1.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/1.gif"/></p>
 <p>熟练的人也可以直接按pro语法(perl语法)写，给LIBS变量赋值。</p>
 <p>下面给几个示例，至于动态库/静态库的差异，大家自己实践吧。</p>
 <h3>示例1 - 直接链接库的全路径</h3>
-<pre><code class="language-shell">  LIBS += c:/mylibs/math.lib
+<pre><code class="lang-shell">  LIBS += c:/mylibs/math.lib
 </code></pre>
-<p>我们都知道windows系统默认的路径分割符是''，但在qmake中要写成'\'才行。qmake也支持写成'/'，其它unix系统又都是'/'，</p>
+<p>我们都知道windows系统默认的路径分割符是'\'，但在qmake中要写成'\'才行。qmake也支持写成'/'，其它unix系统又都是'/'，</p>
 <p>所以干脆都写成'/'，方便处理。</p>
 <h3>示例2 - 路径中包含空格等特殊字符，用引号括起来。</h3>
-<pre><code class="language-shell">  LIBS += "C:/mylibs/extra libs/extra.lib"
+<pre><code class="lang-shell">  LIBS += "C:/mylibs/extra libs/extra.lib"
 </code></pre>
 <h3>示例3 - 分别指定路径和库</h3>
-<pre><code class="language-shell">LIBS += "C:/mylibs/extra libs" -lextra
+<pre><code class="lang-shell">LIBS += "C:/mylibs/extra libs" -lextra
 </code></pre>
 <p>这里的LIBS指定要链接的库，'-L'是指定链接库的路径，'-l'指定要链接的库名称</p>
 <p>名称可以省略lib前缀和 扩展名后缀，Qt会自动处理。 后缀包括 '.so' '.dll' '.dylib' 等。</p>
 <h3>示例4 - 分平台条件链接</h3>
-<pre><code class="language-shell">  win32:LIBS += "C:/mylibs/extra libs/extra.lib"
+<pre><code class="lang-shell">  win32:LIBS += "C:/mylibs/extra libs/extra.lib"
   unix:LIBS += "-L/home/user/extra libs" -lextra
 </code></pre>
 <p>条件链接可以很方便地实现不同平台链接不同的库。</p>
@@ -79,7 +79,7 @@ date: 2019-05-29 18:44:23</li>
 <h3>原理</h3>
 <p>Qt内置了一些perl脚本，在执行qmake解析时会包含这些脚本。其中一些脚本会来处理这个LIBS变量，将其转换成编译器/链接器的参数。</p>
 <p>内置的脚本路径在[QTDIR]/mkspecs/features文件夹下，扩展名为prf。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/2.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/2.png"/></p>
 <p>后续的很多变量，也是一样的原理, 只是处理方式各不相同。</p>
 <p>很多pro文件的语法、功能实现，都可以参考这些prf来实现。</p>
 <p>(注意：不熟悉的同学，不要乱改prf，容易改坏)</p>
@@ -89,14 +89,14 @@ date: 2019-05-29 18:44:23</li>
 <h2>影子构建</h2>
 <p>影子构建，就是编译生成的产物和源代码在不同的文件夹。这样可以防止源代码文件夹被污染。</p>
 <p>QtCreator默认导入pro工程时，就会生成一个影子构建路径。比如这样：</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/4.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/4.png"/></p>
 <pre><code>F:\Dev\Qt\build-HelloTaoQuick-Desktop_Qt_5_12_3_MSVC2017_64bit-Debug
 </code></pre>
 <p>之后编译项目时生成的中间文件及目标文件，都在这个文件夹中。</p>
 <p>这个路径很长，而且编译器或者编译选项不同时都有可能不一样。</p>
 <p>有时候要做一些特定的操作 比如目标exe生成到特定目录、拷贝资源文件等等，直接用这个路径会不太方便/不太可靠，我们需要一些定制。</p>
 <h3>指定目标路径</h3>
-<pre><code class="language-shell">DESTDIR = $$PWD/bin
+<pre><code class="lang-shell">DESTDIR = $$PWD/bin
 </code></pre>
 <p>通过给DESTDIR变量赋值， 可以指定生成的lib/exe放在哪个目录下</p>
 <p>'PWD'是qmake内置变量，'$$'是内置变量取值的写法。'/bin'是字符串拼接在变量后面。</p>
@@ -104,7 +104,7 @@ date: 2019-05-29 18:44:23</li>
 <p>当然也可以参考那一堆prf和conf文件。</p>
 <h3>指定中间件生成路径</h3>
 <p>可以通过这几个变量指定中间件生成的路径</p>
-<pre><code class="language-qmake">config(debug, debug|release) {
+<pre><code class="lang-qmake">config(debug, debug|release) {
     OBJECTS_DIR = build/debug/obj
     MOC_DIR = build/debug/moc
     RCC_DIR = build/debug/rcc
@@ -115,10 +115,9 @@ date: 2019-05-29 18:44:23</li>
     RCC_DIR = build/release/rcc
     UI_DIR = build/release/uic
 }
-
 </code></pre>
 <p>config(debug, debug|release) 是一个条件表达式，可以理解为</p>
-<pre><code class="language-qmake">if (debug === true) {
+<pre><code class="lang-qmake">if (debug === true) {
 
 } else if (release == true) {
 
@@ -131,7 +130,7 @@ date: 2019-05-29 18:44:23</li>
 <h3>拷贝资源示例</h3>
 <p>这里以TaoQuick为例,来说明：</p>
 <p>我在TaoQuick库目录下，有个叫qmldir的文件，需要在编译代码时自动拷贝到bin目录下。(先别管这个文件干嘛的，下一篇文章会说)</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/5.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/5.png"/></p>
 <p>关键目录结构如下：</p>
 <pre><code>TaoQuick
     TaoQuick.pro
@@ -143,7 +142,7 @@ date: 2019-05-29 18:44:23</li>
             qmldir
 </code></pre>
 <p>那么我在TaoQuickCore.pro文件中的写法如下：</p>
-<pre><code class="language-shell">!equals(_PRO_FILE_PWD_, $$DESTDIR) {
+<pre><code class="lang-shell">!equals(_PRO_FILE_PWD_, $$DESTDIR) {
     copy_qmldir.target = $$DESTDIR/qmldir
     copy_qmldir.depends = $$_PRO_FILE_PWD_/qmldir
     win32 {
@@ -153,9 +152,8 @@ date: 2019-05-29 18:44:23</li>
     copy_qmldir.commands = $${QMAKE_COPY_FILE} $${copy_qmldir.depends} $${copy_qmldir.target}
     QMAKE_EXTRA_TARGETS += copy_qmldir
 }
-
 </code></pre>
-<p>‘!equals(<em>PRO_FILE_PWD</em>, $$DESTDIR)’ 这一句是执行条件，即: 目标路径不等于pro文件所在路径时 执行下面的操作。</p>
+<p>‘!equals(_PRO_FILE<em>PWD</em>, $$DESTDIR)’ 这一句是执行条件，即: 目标路径不等于pro文件所在路径时 执行下面的操作。</p>
 <p>剩下的事情就是在创建一个"编译目标"（Target），将这个编译目标添加到QMAKE_EXTRA_TARGETS变量中就行了。</p>
 <p>熟悉MakeFiles的同学应该都清楚什么是"目标"。不懂MakeFiles也没关系，这里的目标就理解为自己声明的一个变量即可。</p>
 <p>这个变量有三个很重要的"子变量":</p>
@@ -177,7 +175,7 @@ copy_qmldir.commands 指定拷贝操作的执行命令 (就是怎么拷贝)</p>
 <pre><code>    PRE_TARGETDEPS += $$copy_qmldir.target
 </code></pre>
 <p>也就是把"目标"加到 PRE_TARGETDEPS变量</p>
-<pre><code class="language-shell">!equals(_PRO_FILE_PWD_, $$DESTDIR) {
+<pre><code class="lang-shell">!equals(_PRO_FILE_PWD_, $$DESTDIR) {
     copy_qmldir.target = $$DESTDIR/qmldir
     copy_qmldir.depends = $$_PRO_FILE_PWD_/qmldir
     win32 {
@@ -188,13 +186,12 @@ copy_qmldir.commands 指定拷贝操作的执行命令 (就是怎么拷贝)</p>
     QMAKE_EXTRA_TARGETS += copy_qmldir
     PRE_TARGETDEPS += $$copy_qmldir.target
 }
-
 </code></pre>
 <h2>安装</h2>
 <p>pro中还有一种INSTALL功能，可以执行文件拷贝。</p>
 <p>和编译期拷贝 类似，INSTALL用起来更简单无脑一些，而且INSTALL只在执行make install指令时，才会拷贝资源。</p>
 <p>还是以TaoQuick为例, 我有一堆文件，需要在make install时，安装到Qt的Qml路径中</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/6.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/6.png"/></p>
 <p>如上图所示所有的文件, 除了TaoQuickDesigner.pri, 都要按照这个结构拷贝。</p>
 <p>(这个pri文件是pro文件的一小部分，可以直接在pro中通过include引入。</p>
 <p>pri和pro语法一样，但是qmake不直接识别pri，只识别pro</p>
@@ -222,19 +219,18 @@ taoquick_degisner_images.files = $$PWD/designer/images/*.png
 taoquick_degisner_images.path = $$[QT_INSTALL_QML]/$${uri}/designer/images
 
 INSTALLS  += taoquick_designer toaquick_qmldir taoquick_qml_buttons taoquick_qml_mouse taoquick_qml_others taoquick_qml_progress taoquick_degisner_images
-
 </code></pre>
 <p>自定义一个变量，然后其子变量files指定要拷贝的文件，子变量path指定目标路径。</p>
 <p>把自定义变量加入INSTALLS变量就行了。</p>
 <p>QT_INSTALL_QML也是一个内置变量，默认值为[QTDIR]/qml。</p>
 <p>之后只要执行以下命令，就能完成资源拷贝。</p>
-<pre><code class="language-shell">qmake
+<pre><code class="lang-shell">qmake
 make 
 make install
 </code></pre>
 <p>当然QtCreator中也能执行make install</p>
 <p>如下图所示:</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/QtCreator-install.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt2/QtCreator-install.png"/></p>
 <p>任意编译器kit都可以，项目-&gt;构建步骤-&gt;添加build步骤-&gt;Make，添加之后在make参数中输入install。最后重新构建工程，即可完成安装。</p>
 <h2>结束语</h2>
 <p>以上案例，大部分都在TaoQuick项目中实践过，可以去Github参考。</p>
