--- a/jaredtao.gitee.io/玩转Qt(5)-理解事件循环.html
+++ b/jaredtao.gitee.io/玩转Qt(5)-理解事件循环.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQt(5">仓库源文</a>-理解事件循环.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt(5">站点原文</a>-理解事件循环)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qt(5">仓库源文</a>-理解事件循环.md)，<a href="https://jaredtao.gitee.io/玩转Qt(5">站点原文</a>-理解事件循环)</h2>
 <hr/>
 <p>title: 玩转Qt(5)-理解事件循环
 photos: /images/Qt3/1.png
@@ -47,7 +47,7 @@ date: 2019-07-06 18:44:23</li>
 <h2>事件与事件循环</h2>
 <h3>Hello World</h3>
 <p>从Hello World说起吧</p>
-<pre><code class="language-C++">#include &lt;stdio.h&gt;
+<pre><code class="lang-C++">#include &lt;stdio.h&gt;
 int main(int argc, char *argv[]) 
 {
     printf("Hello World");
@@ -58,7 +58,7 @@ int main(int argc, char *argv[])
 <h3>循环处理</h3>
 <p>我们稍微加点需求: 程序能够一直运行，每次用户输入一些信息并按下回车时，打印出用户的输入。直到输入的内容为“quit”时才退出。</p>
 <p>按照这个需求，代码实现如下：</p>
-<pre><code class="language-C++">#include &lt;stdio.h&gt;
+<pre><code class="lang-C++">#include &lt;stdio.h&gt;
 #include &lt;string.h&gt;
 int main(int argc, char* argv[])
 {
@@ -82,7 +82,7 @@ int main(int argc, char* argv[])
 <p>一般对于带UI窗口的程序来说，“事件”是由操作系统或程序框架在不同的时刻发出的。</p>
 <p>当用户按下鼠标、敲下键盘，或者是窗口需要重新绘制的时候，计时器触发的时候，都会发出一个相应的事件。</p>
 <p>我们把“事件循环”的代码 提炼/抽象 如下：</p>
-<pre><code class="language-C++">function loop() {
+<pre><code class="lang-C++">function loop() {
     initialize();
     bool shouldQuit = false;
     while(false == shouldQuit)
@@ -103,7 +103,7 @@ int main(int argc, char* argv[])
 <h2>不同操作系统的事件循环</h2>
 <h3>Windows</h3>
 <p>先来看一个Windows系统的事件循环示例(win32 API)：</p>
-<pre><code class="language-C++">    MSG msg = { 0 };
+<pre><code class="lang-C++">    MSG msg = { 0 };
     bool done = false;
     bool result = false;
     while (!done)
@@ -122,7 +122,7 @@ int main(int argc, char* argv[])
 <p>思路和前面介绍的一致</p>
 <h3>Linux X11窗口</h3>
 <p>有些linux系统使用X11窗口系统，看看其窗口事件循环</p>
-<pre><code class="language-C++">Atom wmDeleteMessage = XInternAtom(mDisplay, "WM_DELETE_WINDOW", False);
+<pre><code class="lang-C++">Atom wmDeleteMessage = XInternAtom(mDisplay, "WM_DELETE_WINDOW", False);
 XSetWMProtocols(display, window, &amp;wmDeleteMessage, 1);
 
 XEvent event;
@@ -147,7 +147,6 @@ while (running)
             break;
     }
 }
-
 </code></pre>
 <p>思路也是和前面一致的</p>
 <h3>MacOS Cocoa Application</h3>
@@ -161,7 +160,7 @@ while (running)
 <p>和Qt做了类似工作的，还有glfw、SDL等等很多开源库。</p>
 <h3>QEventLoop类</h3>
 <p>QEventLoop即Qt中的事件循环类，主要接口如下：</p>
-<pre><code class="language-C++">int exec(QEventLoop::ProcessEventsFlags flags = AllEvents)
+<pre><code class="lang-C++">int exec(QEventLoop::ProcessEventsFlags flags = AllEvents)
 void exit(int returnCode = 0)
 bool isRunning() const
 bool processEvents(QEventLoop::ProcessEventsFlags flags = AllEvents)
@@ -170,16 +169,16 @@ void wakeUp()
 </code></pre>
 <p>其中exec是启动事件循环，调用exec以后，调用exec的函数就会被“阻塞”，直到EventLoop里面的while循环结束。</p>
 <p>这里画个简单的示意图:</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt3/1.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt3/1.png"/></p>
 <p>exit是退出事件循环(将EventLoop中的退出标识设为true)</p>
 <p>processEvents是及时处理队列中的事件(这个很有用，后面还会讲)。</p>
 <p>这里有个问题，exec阻塞了当前函数，还怎么退出EventLoop呢？</p>
 <p>答案是：在派发事件后，某个事件处理的函数中，达到事件退出条件时，调用exit函数，将EventLoop中的退出标识设为true。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt3/2.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt3/2.png"/></p>
 <p>这样的程序运行流程，我们叫做 “事件驱动”式的程序。</p>
 <h3>QCoreApplication 主事件循环</h3>
 <p>一般的Qt程序，main函数中都有一个QCoreApplication/QGuiApplication/QApplication，并在末尾调用 exec。</p>
-<pre><code class="language-C++">int main(int argc, char *argv[])
+<pre><code class="lang-C++">int main(int argc, char *argv[])
 {
     QCoreApplication app(argc, argv);
     //或者QGuiApplication， 或者 QApplication
@@ -246,21 +245,20 @@ virtual void keyReleaseEvent(QKeyEvent *event)
 <p>在没有计算完成之前，函数不会退出（相当于阻塞），事件循环得不到及时处理，就会发生UI卡住的现象。</p>
 <p>这种场景下，就可以使用Qt为我们提供的接口，立即处理一次事件循环，来保证UI的流畅</p>
 <p>(后续再讨论多线程)</p>
-<pre><code class="language-c++">//耗时操作
+<pre><code class="lang-c++">//耗时操作
 someWork1()
 //适当的位置，插入一个processEvents,保证事件循环被处理
 QCoreApplication::processEvents();
 
 //耗时操作
 someWork2()
-
 </code></pre>
 <h3>QEventLoop模拟同步调用</h3>
 <p>经常会有这种场景： “触发 ”了某项操作，必须等该操作完成后才能进行“ 下一步 ”</p>
 <p>比如：软件的登录界面，向服务器发起登录请求后，必须等收到服务器返回的登录数据，才知道登录结果并决定下一步如何执行。</p>
 <p>这种场景，如果设计成异步调用，直接用Qt的信号/槽即可，如果要设计成同步调用，就可以使用本地QEventLoop</p>
 <p>这里写段伪代码示例一下：</p>
-<pre><code class="language-C++">bool login(const QString &amp;userName, const QString &amp;passwdHash, const QString &amp;slat)
+<pre><code class="lang-C++">bool login(const QString &amp;userName, const QString &amp;passwdHash, const QString &amp;slat)
 {
     //声明本地EventLoop
     QEventLoop loop;
