--- a/jaredtao.gitee.io/玩转Qt(6)-认清信号槽的本质.html
+++ b/jaredtao.gitee.io/玩转Qt(6)-认清信号槽的本质.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQt(6">仓库源文</a>-认清信号槽的本质.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt(6">站点原文</a>-认清信号槽的本质)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qt(6">仓库源文</a>-认清信号槽的本质.md)，<a href="https://jaredtao.gitee.io/玩转Qt(6">站点原文</a>-认清信号槽的本质)</h2>
 <hr/>
 <p>title: 玩转Qt(6)-认清信号槽的本质
 photos: /images/Qt4/1.jpg
@@ -39,13 +39,13 @@ date: 2019-07-23 18:44:23</li>
 <h2>猫和老鼠的故事</h2>
 <p>如果一上来就讲一大堆概念和定义，读者很容易读睡着。所以涛哥从一个故事/场景开始说起。</p>
 <p>涛哥小时候喜欢看动画片《猫和老鼠》, 里面有汤姆猫(Tom)和杰瑞鼠(Jerry)斗智斗勇的故事。。。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt4/1.jpg"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt4/1.jpg"/></p>
 <p>现在做个简单的设定：Tom有个技能叫"喵"，就是发出猫叫，而正在偷吃东西的Jerry,听见猫叫声就会逃跑。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt4/TomCat.png"/></p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt4/jerry.jpg"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt4/TomCat.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt4/jerry.jpg"/></p>
 <p>我们尝试用C++面向对象的思想，描述这个设定。</p>
 <p>先是定义Tom和Jerry两种对象</p>
-<pre><code class="language-C++">//Tom的定义
+<pre><code class="lang-C++">//Tom的定义
 
 class Tom
 {
@@ -72,7 +72,7 @@ public:
 };
 </code></pre>
 <p>接下来模拟场景</p>
-<pre><code class="language-C++">int main(int argc, char *argv[])
+<pre><code class="lang-C++">int main(int argc, char *argv[])
 {
     //实例化tom
     Tom tom;
@@ -88,7 +88,6 @@ public:
 
     return 0;
 }
-
 </code></pre>
 <p>这个场景看起来很简单，tom发出叫声之后手动调用了jerry的逃跑。</p>
 <p>我们再看几种稍微复杂的场景:</p>
@@ -124,10 +123,10 @@ public:
 <p>RunAway函数可以用 函数指针|成员函数指针 或者C++11-function 来存储，都可以称作 "回调函数"。</p>
 <p>(下面的代码以C++11 function的写法为主，函数指针的写法稍微复杂一些，本质一样)</p>
 <p>我们先用一个简单的Map来存储映射关系, 就用一个字符串作为映射关系的名字</p>
-<pre><code class="language-c++">std::map&lt;std::string, std::function&lt;void()&gt;&gt; callbackMap;
+<pre><code class="lang-c++">std::map&lt;std::string, std::function&lt;void()&gt;&gt; callbackMap;
 </code></pre>
 <p>我们还要实现 "建立映射关系" 和 "调用"功能，所以这里封装一个Connections类</p>
-<pre><code class="language-C++">class Connections 
+<pre><code class="lang-C++">class Connections 
 {
 public:
     //按名称“建立映射关系”
@@ -151,7 +150,7 @@ private:
 </code></pre>
 <p>那么这个映射关系存储在哪里呢? 显然是一个Tom和Jerry共有的"上下文环境"中。</p>
 <p>我们用一个全局变量来表示，这样就可以简单地模拟了：</p>
-<pre><code class="language-c++">//全局共享的Connections。
+<pre><code class="lang-c++">//全局共享的Connections。
 static Connections s_connections;
 
 //Tom的定义
@@ -223,21 +222,20 @@ int main(int argc, char *argv[])
 
     //A间接调用tom的MiaoW，发出猫叫声
     a.Miao();
-    
+
     return 0;
 }
-
 </code></pre>
 <p>看一下运行结果：</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt4/run.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt4/run.png"/></p>
 <p>RunAway没有被直接调用，而是被自动触发。</p>
 <p>分析：这里是以"mouse"这个字符串作为连接tom和jerry的关键。这只是一种简单、粗糙的示例实现。</p>
 <h2>观察者模式</h2>
 <p>在GOF四人帮的书籍《设计模式》中，有一种观察者模式，可以比较优雅地实现同样的功能。</p>
-<p>(顺便说一下，GOF总结的设计模式一共有23种，涛哥曾经用C++11实现了全套的，github地址是:https://github.com/jaredtao/DesignPattern)</p>
+<p>(顺便说一下，GOF总结的设计模式一共有23种，涛哥曾经用C++11实现了全套的，github地址是:<a href="https://github.com/jaredtao/DesignPattern">https://github.com/jaredtao/DesignPattern</a>)</p>
 <p>初级的观察者模式，涛哥就不重复了。这里涛哥用C++11搭配一点模板技巧，实现一个更加通用的观察者模式。</p>
 <p>也可以叫发布-订阅模式。</p>
-<pre><code class="language-C++">//Subject.hpp
+<pre><code class="lang-C++">//Subject.hpp
 #pragma once
 #include &lt;vector&gt;
 #include &lt;algorithm&gt;
@@ -273,7 +271,7 @@ private:
     std::vector&lt;ObserverType *&gt; m_observerList;
 };
 </code></pre>
-<pre><code class="language-C++">//main.cpp
+<pre><code class="lang-C++">//main.cpp
 #include "Subject.hpp"
 #include &lt;functional&gt;
 #include &lt;iostream&gt;
@@ -336,7 +334,7 @@ int main(int argc, char *argv[])
 <p>信号-槽 是Qt自定义的一种通信机制，它不同于标准C/C++ 语言。</p>
 <p>信号-槽的使用方法，是在普通的函数声明之前，加上signal、slot标记，然后通过connect函数把信号与槽 连接起来。</p>
 <p>后续只要调用 信号函数,就可以触发连接好的信号或槽函数。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt4/signals-slot.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt4/signals-slot.png"/></p>
 <p>连接的时候，前面的是发送者，后面的是接收者。信号与信号也可以连接，这种情况把接收者信号看做槽即可。</p>
 <h3>信号-槽分两种</h3>
 <p>信号-槽要分成两种来看待，一种是同一个线程内的信号-槽，另一种是跨线程的信号-槽。</p>
@@ -355,7 +353,7 @@ int main(int argc, char *argv[])
 <p>MOC的本质，其实是一个反射器。标准C++没有反射功能(将来会有)，所以Qt用moc实现了反射功能。</p>
 <p>什么叫反射呢？ 简单来说，就是运行过程中，获取对象的构造函数、成员函数、成员变量。</p>
 <p>举个例子来说明，有下面这样一个类声明：</p>
-<pre><code class="language-C++">class Tom {
+<pre><code class="lang-C++">class Tom {
 public:
     Tom() {}
     const std::string &amp; getName() const
@@ -380,4 +378,4 @@ private:
 <p>文章有点长了，这次先到这里，剩下的下次再讨论。</p>
 <h2>参考文献</h2>
 <p>[1] Qt帮助文档, 搜索关键词 Signals &amp; Slots
-[2] IBM文档库 https://www.ibm.com/developerworks/cn/linux/guitoolkit/qt/signal-slot/index.html</p>
+[2] IBM文档库 <a href="https://www.ibm.com/developerworks/cn/linux/guitoolkit/qt/signal-slot/index.html">https://www.ibm.com/developerworks/cn/linux/guitoolkit/qt/signal-slot/index.html</a></p>
