--- a/jaredtao.gitee.io/玩转Qt(8)-掌握信号槽使用细节.html
+++ b/jaredtao.gitee.io/玩转Qt(8)-掌握信号槽使用细节.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQt(8">仓库源文</a>-掌握信号槽使用细节.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt(8">站点原文</a>-掌握信号槽使用细节)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qt(8">仓库源文</a>-掌握信号槽使用细节.md)，<a href="https://jaredtao.gitee.io/玩转Qt(8">站点原文</a>-掌握信号槽使用细节)</h2>
 <hr/>
 <p>title: 玩转Qt(8)-掌握信号槽使用细节
 photos: /images/Qt4/signals-slot.png
@@ -52,7 +52,7 @@ date: 2019-09-02 12:44:23</li>
 <p>之后在"signals:" 字段之后声明一些函数，这些函数就是信号。</p>
 <p>在"public slots:" 之后声明的函数，就是槽函数。</p>
 <p>例如下面的代码:</p>
-<pre><code class="language-c++">//Tom.h
+<pre><code class="lang-c++">//Tom.h
 #pragma once
 
 #include &lt;QObject&gt;
@@ -73,7 +73,7 @@ signals:
     void miao();
 };
 </code></pre>
-<pre><code class="language-C++">//Jerry.h
+<pre><code class="lang-C++">//Jerry.h
 #pragma once
 
 #include &lt;QObject&gt;
@@ -98,15 +98,15 @@ public slots:
 <p>信号 就是普通的类成员函数，信号只要声明(declare)，不需要实现(implement)，实现由moc(元对象编译器)自动生成。</p>
 <p>信号的触发，可以用emit，也可以直接调用函数。</p>
 <p>例如:</p>
-<pre><code class="language-C++">	//实例化一个tom对象
-	Tom tom;
-	//通过emit发射信号
-	emit tom.miao();
-	//直接调用信号。效果和emit一样。
-	tom.miao();
+<pre><code class="lang-C++">    //实例化一个tom对象
+    Tom tom;
+    //通过emit发射信号
+    emit tom.miao();
+    //直接调用信号。效果和emit一样。
+    tom.miao();
 </code></pre>
 <p>Qt源码的qobejctdefs.h头文件中，可以看到emit宏其实是空的。</p>
-<pre><code class="language-C++">//qobejctdefs.h
+<pre><code class="lang-C++">//qobejctdefs.h
 #ifndef QT_NO_EMIT
 # define emit
 #endif
@@ -116,15 +116,15 @@ public slots:
 <h2>信号-槽的"元调用"</h2>
 <p>信号-槽特殊的地方，是moc(元对象编译器)为其生成了一份"元信息",可以通过QMetaObject::invokeMethod的方式调用</p>
 <p>例如:</p>
-<pre><code class="language-C++">	//实例化一个tom对象
-	Tom tom;
-	//通过invok方式调用信号
-	QMetaObject::invokeMethod(&amp;tom, "miao");
-	
-	//实例化一个jerry对象
-	Jerry jerry;
-	//通过invok方式调用槽
-	QMetaObject::invokeMethod(&amp;jerry, "runAway");
+<pre><code class="lang-C++">    //实例化一个tom对象
+    Tom tom;
+    //通过invok方式调用信号
+    QMetaObject::invokeMethod(&amp;tom, "miao");
+
+    //实例化一个jerry对象
+    Jerry jerry;
+    //通过invok方式调用槽
+    QMetaObject::invokeMethod(&amp;jerry, "runAway");
 </code></pre>
 <p>一般在知道如何声明qobject的场景，没必要多此一举用invoke。</p>
 <p>在一些需要"运行期反射"的情况下(头文件都没有,只知道有这么个对象,和函数的名字)，invoke十分有用。</p>
@@ -136,7 +136,7 @@ public slots:
 <p>通常写的继承于QObject的子类，本身已经附带了元信息，可以直接在信号-槽中使用。</p>
 <p>不是继承于QObject的结构体、类等自定义类型，可以通过Q_DECLARE_METATYPE宏 和 qRegisterMetaType函数进行注册，之后就可以在信号-槽中使用。</p>
 <p>例如：</p>
-<pre><code class="language-C++">  struct MyStruct
+<pre><code class="lang-C++">  struct MyStruct
   {
       int i;
       ...
@@ -145,7 +145,7 @@ public slots:
   Q_DECLARE_METATYPE(MyStruct)
 </code></pre>
 <p>或者带命名空间的：</p>
-<pre><code class="language-C++">  namespace MyNamespace
+<pre><code class="lang-C++">  namespace MyNamespace
   {
       ...
   }
@@ -156,7 +156,7 @@ public slots:
 <p>用于队列方式的信号、槽，需要用qRegisterMetaType进行注册。而qRegisterMetaType要求"全定义"，也就是</p>
 <p>提供类的"复制构造函数"和"赋值操作符"。</p>
 <p>前面那种简单类型，C++编译器默认提供浅拷贝的"复制构造函数"和"赋值操作符"实现，可以直接用。</p>
-<pre><code class="language-c++">  struct MyStruct
+<pre><code class="lang-c++">  struct MyStruct
   {
       int i;
   };
@@ -171,21 +171,21 @@ public slots:
 <p>元方法式、函数指针式、functor式</p>
 <h3>元方法式</h3>
 <p>元方法式是最常用的写法，函数声明如下：</p>
-<pre><code class="language-C++">    //connect(1) 字符串式信号槽
+<pre><code class="lang-C++">    //connect(1) 字符串式信号槽
     static QMetaObject::Connection connect(const QObject *sender, const char *signal,
                         const QObject *receiver, const char *member, Qt::ConnectionType = Qt::AutoConnection);
     //connect(2) QMetaMethod式信号槽
     static QMetaObject::Connection connect(const QObject *sender, const QMetaMethod &amp;signal,
                         const QObject *receiver, const QMetaMethod &amp;method,
                         Qt::ConnectionType type = Qt::AutoConnection);
-	//connect(3) 对(1)的重载, 非static去掉receiver
-	inline QMetaObject::Connection connect(const QObject *sender, const char *signal,
+    //connect(3) 对(1)的重载, 非static去掉receiver
+    inline QMetaObject::Connection connect(const QObject *sender, const char *signal,
                         const char *member, Qt::ConnectionType type = Qt::AutoConnection) const;
 </code></pre>
 <p>Qt应用程序中用到最多的是connect(1)的写法，例如:</p>
-<pre><code class="language-C++">	Tom tom;
-	Jerry jerry;
-	connect(&amp;tom, SIGNAL(miao()), &amp;jerry, SLOT(runAway()))
+<pre><code class="lang-C++">    Tom tom;
+    Jerry jerry;
+    connect(&amp;tom, SIGNAL(miao()), &amp;jerry, SLOT(runAway()))
 </code></pre>
 <p>其中SIGNAL、SLOT两个宏, 作用是将函数转换成字符串。</p>
 <p>connect(1)的实现是靠字符串去查找元方法，以实现连接。</p>
@@ -193,28 +193,28 @@ public slots:
 <p>connect(3)是对connect(1)的重载，非静态成员函数，本身有this指针，所以省略了receiver参数。</p>
 <h3>函数指针式</h3>
 <p>函数指针式写法，声明如下：</p>
-<pre><code class="language-C++">	//connect(4) 连接信号到qobject的成员函数
-	template &lt;typename Func1, typename Func2&gt;
+<pre><code class="lang-C++">    //connect(4) 连接信号到qobject的成员函数
+    template &lt;typename Func1, typename Func2&gt;
     static inline QMetaObject::Connection connect(const typename QtPrivate::FunctionPointer&lt;Func1&gt;::Object *sender, Func1 signal,
                                      const typename QtPrivate::FunctionPointer&lt;Func2&gt;::Object *receiver, Func2 slot,
                                      Qt::ConnectionType type = Qt::AutoConnection);
-									 
-	//connect(5) 连接信号到非成员函数。
-	template &lt;typename Func1, typename Func2&gt;
+
+    //connect(5) 连接信号到非成员函数。
+    template &lt;typename Func1, typename Func2&gt;
     static inline typename std::enable_if&lt;int(QtPrivate::FunctionPointer&lt;Func2&gt;::ArgumentCount) &gt;= 0, QMetaObject::Connection&gt;::type
             connect(const typename QtPrivate::FunctionPointer&lt;Func1&gt;::Object *sender, Func1 signal, Func2 slot);
-    
-	//connect(6) 连接信号到非成员函数。比(5)多一个context,可以设置连接类型
-	template &lt;typename Func1, typename Func2&gt;
+
+    //connect(6) 连接信号到非成员函数。比(5)多一个context,可以设置连接类型
+    template &lt;typename Func1, typename Func2&gt;
     static inline typename std::enable_if&lt;int(QtPrivate::FunctionPointer&lt;Func2&gt;::ArgumentCount) &gt;= 0 &amp;&amp;
                                           !QtPrivate::FunctionPointer&lt;Func2&gt;::IsPointerToMemberFunction, QMetaObject::Connection&gt;::type
             connect(const typename QtPrivate::FunctionPointer&lt;Func1&gt;::Object *sender, Func1 signal, const QObject *context, Func2 slot,
-                    Qt::ConnectionType type = Qt::AutoConnection);			
+                    Qt::ConnectionType type = Qt::AutoConnection);
 </code></pre>
 <p>connect(4)用的也比较多，用法如下:</p>
-<pre><code class="language-C++">	Tom tom;
-	Jerry jerry;
-	connect(&amp;tom, &amp;Tom::miao, &amp;jerry, &amp;Jerry::runAway);
+<pre><code class="lang-C++">    Tom tom;
+    Jerry jerry;
+    connect(&amp;tom, &amp;Tom::miao, &amp;jerry, &amp;Jerry::runAway);
 </code></pre>
 <p>信号-槽换成了C++的 取成员函数指针 的形式。</p>
 <p>connect(4)本身的实现，比connect(1)快一些，因为省去了字符串查找的过程。</p>
@@ -226,11 +226,11 @@ public slots:
 <p>信号-槽函数有重载的情况下，写函数指针式connect会报错，就需要类型转换。</p>
 <p>比如：QLocalSocket有一个成员函数error,也有一个信号error,直接写connect会报错的。</p>
 <p>Qt为我们提供了QOverload这个模板类，以解决这个问题。</p>
-<pre><code class="language-C++">//连接重载过的函数，使用QOverload做leixing 转换
+<pre><code class="lang-C++">//连接重载过的函数，使用QOverload做leixing 转换
 connect(socket, QOverload&lt;QLocalSocket::LocalSocketError&gt;::of(&amp;QLocalSocket::error), this, &amp;XXX::onError);
 </code></pre>
 <p>编译器支持C++14，还可以用qOverload模板函数</p>
-<pre><code class="language-C++">//连接重载过的函数，使用QOverload做leixing 转换
+<pre><code class="lang-C++">//连接重载过的函数，使用QOverload做leixing 转换
 connect(socket, qOverload&lt;QLocalSocket::LocalSocketError&gt;(&amp;QLocalSocket::error), this, &amp;XXX::onError);
 </code></pre>
 <p>还有像QNetworkReply::error、QProcess::finished等等，都有重载，用的时候要转换处理一下。</p>
@@ -244,16 +244,16 @@ connect(socket, qOverload&lt;QLocalSocket::LocalSocketError&gt;(&amp;QLocalSocke
 <p>并增加了connect(7)和connect(8)以支持functor。</p>
 <h4>functor</h4>
 <p>functor式写法，声明如下：</p>
-<pre><code class="language-C++">	//connect(7) 连接信号到任意functor
+<pre><code class="lang-C++">    //connect(7) 连接信号到任意functor
     template &lt;typename Func1, typename Func2&gt;
     static inline typename std::enable_if&lt;QtPrivate::FunctionPointer&lt;Func2&gt;::ArgumentCount == -1, QMetaObject::Connection&gt;::type
             connect(const typename QtPrivate::FunctionPointer&lt;Func1&gt;::Object *sender, Func1 signal, Func2 slot);
-			
+
     //connect(8) 连接信号到任意functor。比(7)多一个context,可以设置连接类型
-	template &lt;typename Func1, typename Func2&gt;
+    template &lt;typename Func1, typename Func2&gt;
     static inline typename std::enable_if&lt;QtPrivate::FunctionPointer&lt;Func2&gt;::ArgumentCount == -1, QMetaObject::Connection&gt;::type
             connect(const typename QtPrivate::FunctionPointer&lt;Func1&gt;::Object *sender, Func1 signal, const QObject *context, Func2 slot,
-                    Qt::ConnectionType type = Qt::AutoConnection);			
+                    Qt::ConnectionType type = Qt::AutoConnection);
 </code></pre>
 <p>connect(7)可以连接信号到任意lambda、std::bind上。</p>
 <p>connect(8)是对(7)的重载，增加了一个context对象代替reveicer对象的作用。这种连接是可以设置连接类型的。</p>
@@ -261,11 +261,11 @@ connect(socket, qOverload&lt;QLocalSocket::LocalSocketError&gt;(&amp;QLocalSocke
 <p>connectType为连接类型，默认为AutoConnection，即Qt自动处理，大部分情况下也不用管。个别情况，需要手动指定。</p>
 <p>可选的连接类型有
 自动 AutoConnection
-直连 DirectConnection
+直连 DirectConnection 
 队列 QueuedConnection
 唯一连接 UniqueConnection</p>
 <p>自动处理的逻辑是，如果发送信号的线程和receiver在同一个线程，就是DirectConnection(直接函数调用),不是同一个线程，则转换为QueuedConnection。</p>
-<pre><code class="language-doc">
+<pre><code class="lang-doc">
 //引用自《Qt原理-窥探信号槽的实现细节》
 
 如果信号-槽连接方式为QueuedConnection，不论是否在同一个线程，按队列处理。
@@ -273,7 +273,7 @@ connect(socket, qOverload&lt;QLocalSocket::LocalSocketError&gt;(&amp;QLocalSocke
 如果信号-槽连接方式为Auto，且不在同一个线程，也按队列处理。
 
 如果信号-槽连接方式为阻塞队列BlockingQueuedConnection，按阻塞处理。
- 
+
 (注意同一个线程就不要按阻塞队列调用了。因为同一个线程，同时只能做一件事，
 
 本身就是阻塞的，直接调用就好了，如果走阻塞队列，则多了加锁的过程。如果槽中又发了
