--- a/jaredtao.gitee.io/玩转QtQuick(2)-默认渲染器.html
+++ b/jaredtao.gitee.io/玩转QtQuick(2)-默认渲染器.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQtQuick(2">仓库源文</a>-默认渲染器.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQtQuick(2">站点原文</a>-默认渲染器)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转QtQuick(2">仓库源文</a>-默认渲染器.md)，<a href="https://jaredtao.gitee.io/玩转QtQuick(2">站点原文</a>-默认渲染器)</h2>
 <hr/>
 <p>title: 玩转QtQuick(2)-默认渲染器
 photos: /images/qt_extended_48x48.png
@@ -13,41 +13,41 @@ date: 2021-01-21 13:44:23</li>
 </ul>
 <hr/>
 <ul>
-<li><a href="#%E7%AE%80%E4%BB%8B">简介</a></li>
-<li><a href="#qt-quick%E7%9A%84%E9%BB%98%E8%AE%A4%E6%B8%B2%E6%9F%93%E5%99%A8">Qt Quick的默认渲染器</a><ul>
-<li><a href="#%E6%89%B9%E6%AC%A1%E6%B8%B2%E6%9F%93">批次渲染</a><ul>
-<li><a href="#%E4%B8%8D%E9%80%8F%E6%98%8E%E5%9B%BE%E5%85%83">不透明图元</a></li>
-<li><a href="#alpha%E6%B7%B7%E5%90%88%E5%9B%BE%E5%85%83">Alpha混合图元</a></li>
-<li><a href="#%E6%B7%B7%E5%90%883d%E5%9B%BE%E5%85%83">混合3D图元</a></li>
-<li><a href="#%E7%BA%B9%E7%90%86%E9%9B%86">纹理集</a></li>
+<li><a href="#简介">简介</a></li>
+<li><a href="#qt-quick的默认渲染器">Qt Quick的默认渲染器</a><ul>
+<li><a href="#批次渲染">批次渲染</a><ul>
+<li><a href="#不透明图元">不透明图元</a></li>
+<li><a href="#alpha混合图元">Alpha混合图元</a></li>
+<li><a href="#混合3d图元">混合3D图元</a></li>
+<li><a href="#纹理集">纹理集</a></li>
 </ul>
 </li>
-<li><a href="#%E6%89%B9%E6%AC%A1%E6%B8%B2%E6%9F%93%E7%9A%84%E6%A0%B9%E8%8A%82%E7%82%B9">批次渲染的根节点</a><ul>
-<li><a href="#%E5%8F%98%E6%8D%A2%E7%9A%84%E8%8A%82%E7%82%B9">变换的节点</a></li>
-<li><a href="#%E8%A3%81%E5%89%AA">裁剪</a></li>
-<li><a href="#%E9%A1%B6%E7%82%B9%E7%BC%93%E5%86%B2">顶点缓冲</a></li>
+<li><a href="#批次渲染的根节点">批次渲染的根节点</a><ul>
+<li><a href="#变换的节点">变换的节点</a></li>
+<li><a href="#裁剪">裁剪</a></li>
+<li><a href="#顶点缓冲">顶点缓冲</a></li>
 </ul>
 </li>
-<li><a href="#%E6%8A%97%E9%94%AF%E9%BD%BF">抗锯齿</a><ul>
-<li><a href="#%E9%A1%B6%E7%82%B9%E6%8A%97%E9%94%AF%E9%BD%BF">顶点抗锯齿</a></li>
-<li><a href="#%E5%A4%9A%E9%87%87%E6%A0%B7%E6%8A%97%E9%94%AF%E9%BD%BF">多采样抗锯齿</a></li>
+<li><a href="#抗锯齿">抗锯齿</a><ul>
+<li><a href="#顶点抗锯齿">顶点抗锯齿</a></li>
+<li><a href="#多采样抗锯齿">多采样抗锯齿</a></li>
 </ul>
 </li>
-<li><a href="#%E6%80%A7%E8%83%BD">性能</a></li>
-<li><a href="#%E5%8F%AF%E8%A7%86%E5%8C%96">可视化</a><ul>
-<li><a href="#%E6%89%B9%E6%AC%A1%E5%8F%AF%E8%A7%86%E5%8C%96">批次可视化</a></li>
-<li><a href="#%E8%A3%81%E5%89%AA%E5%8F%AF%E8%A7%86%E5%8C%96">裁剪可视化</a></li>
-<li><a href="#%E5%8F%98%E6%9B%B4%E5%8F%AF%E8%A7%86%E5%8C%96">变更可视化</a></li>
-<li><a href="#overdraw-%E8%BF%87%E6%B8%A1%E7%BB%98%E5%88%B6%E5%8F%AF%E8%A7%86%E5%8C%96">OverDraw 过渡绘制可视化</a></li>
+<li><a href="#性能">性能</a></li>
+<li><a href="#可视化">可视化</a><ul>
+<li><a href="#批次可视化">批次可视化</a></li>
+<li><a href="#裁剪可视化">裁剪可视化</a></li>
+<li><a href="#变更可视化">变更可视化</a></li>
+<li><a href="#overdraw-过渡绘制可视化">OverDraw 过渡绘制可视化</a></li>
 </ul>
 </li>
-<li><a href="#%E9%80%9A%E8%BF%87qtrhi%E7%A1%AC%E4%BB%B6%E6%B8%B2%E6%9F%93%E6%8E%A5%E5%8F%A3-%E8%BF%9B%E8%A1%8C%E6%B8%B2%E6%9F%93">通过QtRHI(硬件渲染接口) 进行渲染</a></li>
+<li><a href="#通过qtrhi硬件渲染接口-进行渲染">通过QtRHI(硬件渲染接口) 进行渲染</a></li>
 </ul>
 </li>
 </ul>
 <h1>简介</h1>
 <p>这是《玩转QtQuick》系列文章的第二篇，主要是介绍Qt Quick的默认渲染器。</p>
-<p>****本文会涉及到一些图形学的基本概念，例如：材质、纹理、光栅化、图元等，建议参考相关资料，本文不做进一步的解释。****</p>
+<p><strong><strong>本文会涉及到一些图形学的基本概念，例如：材质、纹理、光栅化、图元等，建议参考相关资料，本文不做进一步的解释。</strong></strong></p>
 <p>因为Qt官方文档写的比较全面，所以本文主要是对官方文档的翻译，同时会补充一些个人理解。</p>
 <p>翻译主要参考Qt5.15的文档，适当做了一些调整，尽量信达雅，尽量说人话。</p>
 <p>下面翻译开始</p>
@@ -69,7 +69,7 @@ date: 2021-01-21 13:44:23</li>
 <p>传统的2D API (例如QPainter，Cairo或者Context2D)被设计为每帧处理大量单独的DrawCall,而当DrawCall的次数</p>
 <p>非常少且状态更改保持在一定水平时，OpenGL和其它硬件加速的API表现最佳。</p>
 <p>考虑以下用例：</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batching.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batching.png"/></p>
 <p>绘制此列表的最简单方法是逐行进行。</p>
 <p>首先，绘制背景。背景是特定颜色的矩形。在OpenGL术语中，这意味着使用一个着色器程序进行纯色填充，设置填充颜色，</p>
 <p>设置包含x和y偏移量的转换矩阵，然后使用例如<code>glDrawArrays</code>绘制组成矩形的两个三角形。</p>
@@ -97,7 +97,7 @@ date: 2021-01-21 13:44:23</li>
 <p>alpha混合图元的批次渲染在渲染器内需要更多的工作，因为重叠的元素需要以正确的顺序进行渲染，以使alpha看起来正确。</p>
 <p>仅仅依靠Z缓冲是不够的。渲染器在所有alpha混合图元上进行传递，除了其材质状态外，还将查询其边框，以确定哪些元素</p>
 <p>可以批次渲染，哪些元素不能批次。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batching2.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batching2.png"/></p>
 <p>上图左边的情况，可以在一次DrawCall中渲染蓝色背景，而在另一次DrawCall中渲染两个文本元素，因为这些文本仅与其</p>
 <p>同一层的背景重叠。</p>
 <p>右边的情况，<code>Item 4</code>的背景覆盖了<code>Item 3</code>的背景，因此每一个背景和文本需要在不同的DrawCall中渲染。</p>
@@ -163,7 +163,7 @@ date: 2021-01-21 13:44:23</li>
 <p>如果用户通过<code>QQuickWindow::setFormat()</code>将<code>QSurfaceFormat</code>设置为大于0的值，请求OpenGL多重采样，“场景图”将首选</p>
 <p>基于多重采样的抗锯齿(MSAA)。</p>
 <p>这两种技术将影响渲染器的内部实现方式，并且具有不同的限制。</p>
-<p>通过设置环境变量<code>QSG_ANTIALIASING_METHOD </code>为<code>msaa</code>或者<code>vertex</code>也可以覆盖使用的抗锯齿方法。</p>
+<p>通过设置环境变量<code>QSG_ANTIALIASING_METHOD</code>为<code>msaa</code>或者<code>vertex</code>也可以覆盖使用的抗锯齿方法。</p>
 <p>即使两个图元的边在数学上相同，顶点抗锯齿也会在相邻图元的边缘之间产生接缝。多重采样抗锯齿则不会如此。</p>
 <h3>顶点抗锯齿</h3>
 <p>可以使用<code>Item::antialiasing</code>属性启用和禁用单个<code>Item</code>的顶点抗锯齿。在硬件支持的前提下，无论是正常渲染的图元，还是捕获到</p>
@@ -177,7 +177,7 @@ date: 2021-01-21 13:44:23</li>
 <p>硬件需要更多的内存和GPU周期来渲染一帧，</p>
 <p>使用多采样可以对许多图元进行抗锯齿（例如圆角矩形和图片），并且在“场景图”中仍然是不透明的。这意味着在创建渲染批次时，</p>
 <p>渲染器的工作会更加轻松，并且可以依赖<code>early-z</code>来避免过渡渲染。</p>
-<p>使用多重采样抗锯齿时，渲染到帧缓冲区对象中的内容需要额外的扩展以支持帧缓冲区的多重采样。通常是<code>GL_EXT_framebuffer_multisample </code></p>
+<p>使用多重采样抗锯齿时，渲染到帧缓冲区对象中的内容需要额外的扩展以支持帧缓冲区的多重采样。通常是<code>GL_EXT_framebuffer_multisample</code></p>
 <p>和<code>GL_EXT_framebuffer_blit</code>。大多数台式机芯片都具有这些扩展，但是在嵌入式芯片中却很少见。</p>
 <p>如果硬件中不提供帧缓冲区多采样，则不会进行多采样抗锯齿，包括<code>ShaderEffectSource</code>。</p>
 <h2>性能</h2>
@@ -211,23 +211,21 @@ date: 2021-01-21 13:44:23</li>
 <li><p>一些材质的标志会阻止批次渲染，其中最受限制的一个是<code>QSGMaterial::RequiresFullMatrix</code>,它阻止了所有批次渲染。</p>
 </li>
 <li><p>具有单色背景的应用程序应使用<code>QQuickWindow::setColor()</code>而不是顶级带颜色的<code>Rectangle</code>。</p>
-</li>
-</ul>
 <p><code>QQuickWindow::setColor()</code>将在<code>glClear()</code>的调用中使用，这是比较快的。</p>
-<ul>
+</li>
 <li><p>生成<code>Mipmap</code>的<code>Image</code>不会放在纹理集中，也不会进行批次渲染。</p>
 </li>
 <li><p>存在一个OpenGL驱动程序相关的<code>Bug</code>：帧缓冲对象(FBO)回读时发生的一些错误会损坏渲染的字形。如果在环境变量</p>
 </li>
 </ul>
-<p>中设置<code>QML_USE_GLYPHCACHE_WORKAROUND </code>，则Qt会在<code>RAM</code>中保留该字形的其它副本。这意味着当渲染以前</p>
+<p>中设置<code>QML_USE_GLYPHCACHE_WORKAROUND</code>，则Qt会在<code>RAM</code>中保留该字形的其它副本。这意味着当渲染以前</p>
 <p>未渲染的字形时，性能会稍低，因为Qt通过CPU访问额外的副本。这也意味着字形缓存将使用两倍的内存。渲染质量不受影响。</p>
 <p>如果应用程序性能不佳，需要确认瓶颈是否在渲染。此时可以使用探查器<code>Profiler</code>! 设置环境变量<code>QSG_RENDER_TIMING=1</code></p>
 <p>将输出许多有用的时序参数，这些参数可以用来查明问题所在。</p>
 <h2>可视化</h2>
 <p>为了可视化“场景图”默认渲染器的各个方面，可以将<code>QSG_VISUALIZE</code>环境变量设置为下面每个部分中详细介绍的值其中之一。</p>
 <p>下面这段Qml代码提供了一些变量输出的示例：</p>
-<pre><code class="language-qml"> import QtQuick 2.2
+<pre><code class="lang-qml"> import QtQuick 2.2
 
  Rectangle {
      width: 200
@@ -284,29 +282,29 @@ date: 2021-01-21 13:44:23</li>
 <p>左侧的<code>ListView</code>,我们将其<code>clip</code>属性设置为true。右侧的<code>ListView</code>，我们将每个<code>delegate</code>的clip属性设置为true。</p>
 <p>以此来说明裁剪对批次渲染的影响。</p>
 <p>这是正常的运行结果</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batch1.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batch1.png"/></p>
 <p>可视化元素不考虑裁剪，并且渲染顺序是任意的。</p>
 <h3>批次可视化</h3>
 <p>设置环境变量<code>QSG_VISUALIZE</code>为<code>batches</code>可以在渲染器中可视化查看批次。</p>
 <p>合并过的批次以纯色渲染，未合并的批次以对角线图案渲染。独立的颜色越少意味着批次分配的越好。</p>
 <p>如果未合并的批次中包含许多单独的节点，则是比较糟糕的。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batch2.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batch2.png"/></p>
 <p>QSG_VISUALIZE=batches</p>
 <h3>裁剪可视化</h3>
-<p>设置环境变量<code>QSG_VISUALIZE </code>为<code>clip</code>,渲染器会在“场景图”中渲染红色区域来指示裁剪区域。</p>
+<p>设置环境变量<code>QSG_VISUALIZE</code>为<code>clip</code>,渲染器会在“场景图”中渲染红色区域来指示裁剪区域。</p>
 <p>默认情况下<code>Item</code>不裁剪，因此不会显示裁剪区域。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batch3.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batch3.png"/></p>
 <p>QSG_VISUALIZE=clip</p>
 <h3>变更可视化</h3>
-<p>设置环境变量<code>QSG_VISUALIZE </code>为<code>changes</code>,可以在“场景图”中看到变更。“场景图”中的变更以随机颜色的</p>
+<p>设置环境变量<code>QSG_VISUALIZE</code>为<code>changes</code>,可以在“场景图”中看到变更。“场景图”中的变更以随机颜色的</p>
 <p>闪烁叠加显示。图元上的变更以纯色显示，而批次渲染根节点的变更以特定的<code>pattern</code>显示。</p>
 <h3>OverDraw 过渡绘制可视化</h3>
-<p>设置环境变量<code>QSG_VISUALIZE </code>为<code>overdraw </code>,可以在“场景图”中看到过渡绘制。可视化的3D视图中，</p>
+<p>设置环境变量<code>QSG_VISUALIZE</code>为<code>overdraw</code>,可以在“场景图”中看到过渡绘制。可视化的3D视图中，</p>
 <p>所有过渡绘制的<code>Item</code>会高亮显示。此模式也可以用来检测视口之外的几何图元。不透明的<code>Item</code>以绿色显示，</p>
 <p>而半透明的<code>Item</code>以红色显示。视口的边框为蓝色显示。不透明的内容使“场景图”更易于处理，渲染速度更快。</p>
 <p>请注意，上面的代码中顶层矩形框<code>Rectangle</code>是多余的，因为窗口也是白色的，在这种情况下渲染矩形框会造成资源浪费。</p>
 <p>将其更改为<code>Item</code>会略微提高性能。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batch4.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/batch4.png"/></p>
 <p>QSG_VISUALIZE=overdraw</p>
 <h2>通过QtRHI(硬件渲染接口) 进行渲染</h2>
 <p>从Qt5.14开始，默认适配层增加了一个选项，可以使用 QtGui模块提供的图形抽象层Qt Rendering Hardware Interface (RHI)</p>
@@ -314,17 +312,45 @@ date: 2021-01-21 13:44:23</li>
 <p>Vulkan,Metal或者Direct3D调用。</p>
 <p>通过一次编写着色器代码，编译为SPIR-V,然后转换为适用于各种图形API的语法，实现着色器的统一处理。</p>
 <p>要启用此功能，代替直接OpenGL调用，可以通过下面的变量:</p>
-<p>|环境变量|有效值|描述|
-|--|--|--|
-|QSG_RHI|1|启用通过RHI的渲染。除非被<code>QSG_RHI_BACKEND</code>覆盖，否则将根据平台选择目标图像API。默认值为window平台使用Direct3D 11, MacOS平台使用metal，其它平台使用OpenGL|
-|QSG_RHI_BACKEND|vulkan,metal,opengl,d2d11|请求使用指定的图形API|
-|QSG_INFO|1|与基于OpenGL的渲染路径一样，设置此选项将在初始化Qt Quick“场景图”时启用打印信息。 这对于故障排除非常有用。|
-|QSG_RHI_DEBUG_LAYER|1|在适用的情况下（Vulkan，Direct3D），启用图形API实现的调试或验证层（如果有）。|
-|QSG_RHI_PREFER_SOFTWARE_RENDERER|1|请求使用软光栅化的适配器或物理设备。仅在API支持枚举适配器(Direct3D或Vulkan)时适用，否则会被忽略|</p>
+<table>
+<thead><tr>
+<th>环境变量</th>
+<th>有效值</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>QSG_RHI</td>
+<td>1</td>
+<td>启用通过RHI的渲染。除非被<code>QSG_RHI_BACKEND</code>覆盖，否则将根据平台选择目标图像API。默认值为window平台使用Direct3D 11, MacOS平台使用metal，其它平台使用OpenGL</td>
+</tr>
+<tr>
+<td>QSG_RHI_BACKEND</td>
+<td>vulkan,metal,opengl,d2d11</td>
+<td>请求使用指定的图形API</td>
+</tr>
+<tr>
+<td>QSG_INFO</td>
+<td>1</td>
+<td>与基于OpenGL的渲染路径一样，设置此选项将在初始化Qt Quick“场景图”时启用打印信息。 这对于故障排除非常有用。</td>
+</tr>
+<tr>
+<td>QSG_RHI_DEBUG_LAYER</td>
+<td>1</td>
+<td>在适用的情况下（Vulkan，Direct3D），启用图形API实现的调试或验证层（如果有）。</td>
+</tr>
+<tr>
+<td>QSG_RHI_PREFER_SOFTWARE_RENDERER</td>
+<td>1</td>
+<td>请求使用软光栅化的适配器或物理设备。仅在API支持枚举适配器(Direct3D或Vulkan)时适用，否则会被忽略</td>
+</tr>
+</tbody>
+</table>
 <p>希望始终使用单个指定的图形API运行应用程序，也可以通过C++代码来设置。</p>
 <p>例如，在构造任何<code>QQuickWindow</code>之前，在main函数的早期进行以下调用将强制使用vulkan</p>
-<pre><code class="language-C++"> QQuickWindow::setSceneGraphBackend(QSGRendererInterface::VulkanRhi);
+<pre><code class="lang-C++"> QQuickWindow::setSceneGraphBackend(QSGRendererInterface::VulkanRhi);
 </code></pre>
-<p>可以查看<code>QSGRendererInterface::GraphicsApi</code>文档。以Rhi结尾的枚举值等价于设置<code>QSG_RHI </code>和<code>QSG_RHI_BACKEND </code>。</p>
-<p>除非被<code>QSG_RHI_PREFER_SOFTWARE_RENDERER </code>或特定后端的变量（例如<code>QT_D3D_ADAPTER_INDEX</code> 或者 <code>QT_VK_PHYSICAL_DEVICE_INDEX</code>）覆盖，</p>
+<p>可以查看<code>QSGRendererInterface::GraphicsApi</code>文档。以Rhi结尾的枚举值等价于设置<code>QSG_RHI</code>和<code>QSG_RHI_BACKEND</code>。</p>
+<p>除非被<code>QSG_RHI_PREFER_SOFTWARE_RENDERER</code>或特定后端的变量（例如<code>QT_D3D_ADAPTER_INDEX</code> 或者 <code>QT_VK_PHYSICAL_DEVICE_INDEX</code>）覆盖，</p>
 <p>否则所有QRhi后端都会选择系统默认的GPU适配器或物理设备。目前没有进一步的适配器相关配置项。</p>
