--- a/jaredtao.gitee.io/玩转Qml(10)-自定义Quick模块.html
+++ b/jaredtao.gitee.io/玩转Qml(10)-自定义Quick模块.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(10">仓库源文</a>-自定义Quick模块.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(10">站点原文</a>-自定义Quick模块)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(10">仓库源文</a>-自定义Quick模块.md)，<a href="https://jaredtao.gitee.io/玩转Qml(10">站点原文</a>-自定义Quick模块)</h2>
 <hr/>
 <p>title: 玩转Qml(10)-自定义Quick模块
 photos: /images/Qml10/1.gif
@@ -47,28 +47,28 @@ date: 2019-06-01 12:44:23</li>
 <p>特别是最近的研究结果：如何让Qml模块在Designer中拖拽使用。涛哥希望有更多的人学会这个技能。</p>
 <h2>源码</h2>
 <p>《玩转Qml》系列文章，配套了一个优秀的开源项目:TaoQuick</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
 <p>访问不了或者速度太慢，可以用国内的镜像网站gitee</p>
-<p>https://gitee.com/jaredtao/TaoQuick</p>
+<p><a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h2>近期讯息</h2>
 <p>(先播点新闻)</p>
 <h3>Qt Design Studio</h3>
 <p>2019年5月20的时候，Qt官方放出了Qt Design Studio的beta版， 免费使用/暂不开源。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/1.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/1.png"/></p>
 <p>下载地址在这：</p>
-<p>http://download.qt.io/development_releases/qtdesignstudio/1.2/1.2.0-beta1-community/</p>
+<p><a href="http://download.qt.io/development_releases/qtdesignstudio/1.2/1.2.0-beta1-community/">http://download.qt.io/development_releases/qtdesignstudio/1.2/1.2.0-beta1-community/</a></p>
 <p>Qt Design Studio是主要给美工使用的一款UI工具。</p>
 <p>Qt在Photo Shop/Sketch这两款工具中，提供了QtBridge插件，可以将设计好的资源直接导出成Qml工程。</p>
 <p>导出的工程可以用Qt Design Studio/QtCreator打开，用托托拽拽的方式，实现各种功能、动画等等。</p>
 <p>QtDesignStudio目前还不成熟，但未来是一片光明。等Designer做好了，就不再需要手写Qml代码，托托拽拽就能搞定界面部分。</p>
 <p>只剩下逻辑处理和后端功能才需要写代码/写js脚本。</p>
 <p>Qt Design Studio目前与QtCreator的差异是，前者内置了一些特殊的模块：包括 Shapes图元、Effects等，</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/2.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/2.png"/></p>
 <p>Qt Design Studio还使用了qmlproject文件作工程管理。</p>
 <p>除此之外，功能都是一样的。帧动画编辑器在QtCreator中也是可以使用的。</p>
 <h3>TaoQuick</h3>
 <p>最新的TaoQuick (tag: 0.1.6), 已经支持在QtCreator中拖拽使用了</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/1.gif"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/1.gif"/></p>
 <p>代码仓库在这：<a href="https://github.com/jaredtao/TaoQuick">TaoQuick</a></p>
 <p>(下面进入正题)</p>
 <h2>Qt资源管理</h2>
@@ -78,7 +78,7 @@ date: 2019-06-01 12:44:23</li>
 <p>qrc文件是xml格式的文本文件，里面记录着添加的各种资源。</p>
 <h3>qrc内容</h3>
 <p>示例 TaoResource.qrc:</p>
-<pre><code class="language-xml">  &lt;!DOCTYPE RCC&gt;&lt;RCC version="1.0"&gt;
+<pre><code class="lang-xml">  &lt;!DOCTYPE RCC&gt;&lt;RCC version="1.0"&gt;
   &lt;qresource&gt;
       &lt;file&gt;images/copy.png&lt;/file&gt;
       &lt;file&gt;images/cut.png&lt;/file&gt;
@@ -92,19 +92,19 @@ date: 2019-06-01 12:44:23</li>
 <h3>编译和加载qrc</h3>
 <p>只要在pro文件中写上 RESOURCES = TaoResource.qrc就可以了。qmake会自动将资源压缩、打包进exe/dll程序</p>
 <p>也可以使用命令行手动编译：</p>
-<pre><code class="language-shell">rcc -binary TaoResource.qrc -o TaoResource.rcc
+<pre><code class="lang-shell">rcc -binary TaoResource.qrc -o TaoResource.rcc
 </code></pre>
 <p>或者</p>
 <pre><code>rcc -binary TaoResource.qrc -o TaoResource.dll
 </code></pre>
 <p>这种方式编译出来的，是一个纯粹的资源插件，扩展名写什么都无所谓的。</p>
 <p>可以在代码中动态加载资源、卸载资源</p>
-<pre><code class="language-C++">    QResource::registerResource("/path/to/TaoResource.rcc");
+<pre><code class="lang-C++">    QResource::registerResource("/path/to/TaoResource.rcc");
     QResource::unRegisterResource("/path/to/TaoResource.rcc");
 </code></pre>
 <h3>资源的引用</h3>
 <p>使用":/" 或者 "qrc:/"开头的路径即可，这两者的区别涛哥未作总结，大家自己实践吧。</p>
-<pre><code class="language-C+=">    cutAct = new QAction(QIcon(":/images/cut.png")
+<pre><code class="lang-C+=">    cutAct = new QAction(QIcon(":/images/cut.png")
 </code></pre>
 <h3>插件中注册资源</h3>
 <p>在Qt插件中，添加了资源的情况下，需要用宏Q_INIT_RESOURCE来注册资源</p>
@@ -126,7 +126,7 @@ date: 2019-06-01 12:44:23</li>
 <li>导出Qml插件类</li>
 </ol>
 <p>如果要支持designer，还要加上一步：</p>
-<ol start="4">
+<ol>
 <li>创建designer文件夹，编写metainfo文件</li>
 </ol>
 <p>这一步暂时没有任何文档和工具，涛哥照猫画虎做出来的。以后文档肯定会出来的，现在有些功能不完善。</p>
@@ -169,12 +169,11 @@ TFPS 1.0 BasicComponent/Others/TFPS.qml
 
 # 支持designer
 designersupported
-
 </code></pre>
 <p>还有单例singleton、内部类型internal、C++类型描述typeinfo， 这些用法TaoQuick没有用到，就不多说了。</p>
 <p>plugin TaoQuick这一句，表示对应的dll文件名称。dll是要写一个C++类，继承自QQmlExtensionPlugin</p>
 <p>看一下TaoQuick中的实现</p>
-<pre><code class="language-C++">//taoquick_plugin.h
+<pre><code class="lang-C++">//taoquick_plugin.h
 #pragma once
 
 #include &lt;QQmlExtensionPlugin&gt;
@@ -188,7 +187,7 @@ public:
     void registerTypes(const char *uri) override;
 };
 </code></pre>
-<pre><code class="language-C++">//taoquick_plugin.cpp
+<pre><code class="lang-C++">//taoquick_plugin.cpp
 #include "taoquick_plugin.h"
 void TaoQuickPlugin::registerTypes(const char *uri)
 {
@@ -197,7 +196,7 @@ void TaoQuickPlugin::registerTypes(const char *uri)
 }
 </code></pre>
 <p>运行时候的bin路径文件结构是这样的:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/3.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/3.png"/></p>
 <p>TaoQuick文件夹的名字就是模块名字</p>
 <h4>不用开放Qml源码</h4>
 <p>这里说一下，TaoQuick项目中还有一个qmldir文件：</p>
@@ -220,13 +219,12 @@ TToolTip 1.0 BasicComponent/Others/TToolTip.qml
 TDialog 1.0 BasicComponent/Others/TDialog.qml
 TPopup 1.0 BasicComponent/Others/TPopup.qml
 TFPS 1.0 BasicComponent/Others/TFPS.qml
-
 </code></pre>
 <p>这里面module、plugin这些东西都没有，只有组件。而且这个文件是加入了qrc的，即编译进dll里面了。</p>
 <p>前面那个qmldir，需要和dll放在同级目录，dll模块才能被Qml引擎导入。</p>
 <p>后面这个qmldir的作用是，导出dll插件时，不用带上qml源码，直接import 这个qmldir的资源路径，就能够用里面的组件了。</p>
 <p>也就是说，使用的地方，要写两句import</p>
-<pre><code class="language-qml">import TaoQuick 1.0
+<pre><code class="lang-qml">import TaoQuick 1.0
 import "qrc:/Tao/Qml/"
 </code></pre>
 <p>这种用法不能在QtCreator高亮，运行没问题。（商业版似乎有更高级的资源内建功能，或许可以支持高亮，后续再研究）</p>
@@ -234,17 +232,17 @@ import "qrc:/Tao/Qml/"
 <p>TaoQuick中的qmake语法，可以参考另一篇文章 &lt;Qt实用技能2-用好qmake&gt;</p>
 <h2>Designer支持</h2>
 <p>再看一下效果：</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/2.gif"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/2.gif"/></p>
 <p>要支持Designer，需要以下步骤：</p>
 <p>首先要在Qml路径下，创建一个designer文件夹。必须叫这个名字</p>
 <p>其次要放一个扩展名为.metainfo的文件，里面按格式写上组件信息。名字似乎没有要求。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/4.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/4.png"/></p>
 <p>最后，将整个Qml文件夹拷贝到[QTDIR]/qml/路径下，并把文件夹名字改成模块名字。</p>
 <p>TaoQuick项目的路径是这样的：</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/5.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml10/5.png"/></p>
 <h3>metainfo</h3>
 <p>metainfo文件，目前没有文档、没有自动生成工具，只能手动写，语法和qml语法类似。(可以参考QtCreator源码，里面有完整的解析器)</p>
-<pre><code class="language-qml">MetaInfo {
+<pre><code class="lang-qml">MetaInfo {
     Type {
         name: "TaoQuick.BasicComponent.Button.TGradientBtn"
         icon: "images/TGradientBtn.png"
@@ -265,14 +263,16 @@ import "qrc:/Tao/Qml/"
 <p>接下来一个Type就对应Designer中的一个可拖拽的组件：</p>
 <pre><code>* name应该算作Qml组件文件的路径，路径分隔符用"点"， 路径默认从[QTDIR]/qml开始，如果有自定义qml 导入路径，应该可以从相应的路径开始查找（未尝试）。
 
-* icon 就是小图标了，用来在Designer界面上预览。这里的images路径，默认从designer文件夹开始</code></pre>
+* icon 就是小图标了，用来在Designer界面上预览。这里的images路径，默认从designer文件夹开始
+</code></pre>
 <p>ItemLibraryEntry 是对这个组件更详细的描述：</p>
 <pre><code>* name 显示在Designer上面的名字
 * category 分组的名字
 * libraryIcon 小图标，和前面那个一样（不懂有什么区别，先照抄）
 * version 版本 （TaoQuick都是1.0）
 * requiredImport 必要的导入的模块
-* Property 属性。就是可以在Designer中调整、做帧动画的。</code></pre>
+* Property 属性。就是可以在Designer中调整、做帧动画的。
+</code></pre>
 <p>Property支持的关键字有 name type value三个。 type 的值，暂时没有完整的支持列表，源码里面能翻到Qml的基础类型["boolean", "int", "real", "string", "url", "color"], Qt发行的Qml中，还能看到"binding"。</p>
 <p>(qtcreator-4.9.0\qt-creator-opensource-src-4.9.0\src\plugins\qmldesigner\designercore\metainfo\metainfo.cpp)</p>
 <p>属性这里，应该是QtCreator还没有开发完整。Qml组件里，什么属性都不写，Designer里面一个属性都看不到。就写一个width属性，其它的导出属性也自动给列出来了。</p>
@@ -283,7 +283,7 @@ import "qrc:/Tao/Qml/"
 <p>所以在前面的TaoQuick安装路径中，有一个dll文件。C:\Qt\5.12.3\msvc2017_64\qml\TaoQuick\TaoQuick.dll</p>
 <p>然后封装这个组件的时候，还要再import一下TaoQuick.dll, 即import TaoQuick 1.0</p>
 <p>图片路径就用资源路径</p>
-<pre><code class="language-qml">//TFPS.qml
+<pre><code class="lang-qml">//TFPS.qml
 import QtQuick 2.12
 import QtQuick.Controls 2.12
 import TaoQuick 1.0
@@ -326,7 +326,6 @@ Item {
         }
     }
 }
-
 </code></pre>
 <h3>安装</h3>
 <p>可以手动拷贝文件夹，也可以参考TaoQuick的自动化安装。</p>
@@ -355,5 +354,4 @@ taoquick_degisner_images.files = $$PWD/designer/images/*.png
 taoquick_degisner_images.path = $$[QT_INSTALL_QML]/$${uri}/designer/images
 
 INSTALLS  += taoquick_designer toaquick_qmldir taoquick_qml_buttons taoquick_qml_mouse taoquick_qml_others taoquick_qml_progress taoquick_degisner_images
-
 </code></pre>
