--- a/jaredtao.gitee.io/玩转Qml(11)-更强的拖动组件.html
+++ b/jaredtao.gitee.io/玩转Qml(11)-更强的拖动组件.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(11">仓库源文</a>-更强的拖动组件.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(11">站点原文</a>-更强的拖动组件)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(11">仓库源文</a>-更强的拖动组件.md)，<a href="https://jaredtao.gitee.io/玩转Qml(11">站点原文</a>-更强的拖动组件)</h2>
 <hr/>
 <p>title: 玩转Qml(11)-更强的拖动组件
 photos: /images/Qml11/1.gif
@@ -17,15 +17,15 @@ date: 2019-6-2 18:44:23</li>
 <p>拖动组件，这次涛哥将教大家，实现更多功能的可拖动组件。</p>
 <h2>源码</h2>
 <p>《玩转Qml》系列文章，配套了一个优秀的开源项目:TaoQuick</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
 <p>访问不了或者速度太慢，可以用国内的镜像网站gitee</p>
-<p>https://gitee.com/jaredtao/TaoQuick</p>
+<p><a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h1>效果图</h1>
-<p><img alt="1" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml11/1.gif"/></p>
+<p><img alt="1" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml11/1.gif"/></p>
 <h1>使用</h1>
 <p>封装的组件名称是TemplateBorder。</p>
 <p>使用很简单，在要支持拖拽的目标组件上，创建一个TemplateBorder实例即可，例如：</p>
-<pre><code class="language-qml">    Rectangle {
+<pre><code class="lang-qml">    Rectangle {
         x: 100
         y: 200
         width: 300
@@ -58,7 +58,7 @@ date: 2019-6-2 18:44:23</li>
 <p>拖拽本身可以使用MouseArea的 drag.target，但这个target限制为item及其子类。</p>
 <p>有时候还需要处理无边框窗口的拖动，窗口不是item，就不能用drag.target。</p>
 <p>所以需要一个通用的拖拽算法：</p>
-<pre><code class="language-qml">    ...
+<pre><code class="lang-qml">    ...
     MouseArea {
         id: mouseArea
         anchors.fill: parent
