--- a/jaredtao.gitee.io/玩转Qml(13)-动画特效-飞入.html
+++ b/jaredtao.gitee.io/玩转Qml(13)-动画特效-飞入.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(13">仓库源文</a>-动画特效-飞入.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(13">站点原文</a>-动画特效-飞入)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(13">仓库源文</a>-动画特效-飞入.md)，<a href="https://jaredtao.gitee.io/玩转Qml(13">站点原文</a>-动画特效-飞入)</h2>
 <hr/>
 <p>title: 玩转Qml(13)-动画特效-飞入
 photos: /img/avatar.jpg
@@ -35,12 +35,12 @@ date: 2019-06-08 12:44:23</li>
 <p>这次涛哥将会教大家一些Qml动画相关的知识。</p>
 <h2>源码</h2>
 <p>《玩转Qml》系列文章，配套了一个优秀的开源项目:TaoQuick</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
 <p>访问不了或者速度太慢，可以用国内的镜像网站gitee</p>
-<p>https://gitee.com/jaredtao/TaoQuick</p>
+<p><a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h2>飞入效果预览</h2>
 <p>第一篇文章，就放一个简单的动画效果</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Animation/1.gif"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Animation/1.gif"/></p>
 <h2>实现原理</h2>
 <p>进场动画，使用了QtQuick的动画系统，以及ShaderEffect特效。</p>
 <p>Qml中有一个模块QtGraphicalEffects，提供了部分特效，就是使用ShaderEffect实现的。</p>
@@ -49,7 +49,7 @@ date: 2019-06-08 12:44:23</li>
 <h3>动画组件</h3>
 <p>Qt动画系统，在帮助文档有详细的介绍，搜索关键词"Animation"，涛哥在这里说一些重点。</p>
 <p>涛哥用思维导图列出了Qml中所有的动画组件:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Ani1/1.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Ani1/1.png"/></p>
 <ul>
 <li><p>右边带虚线框的部分比较常用，是做动画必须要掌握的，尤其是属性动画PropertyAnimation和数值动画NumberAinmation。
 常见的各种坐标动画、宽高动画、透明度动画、颜色动画等等，都可以用这些组件来实现。</p>
@@ -66,7 +66,7 @@ date: 2019-06-08 12:44:23</li>
 <h4>用例一 直接声明动画</h4>
 <p>直接声明动画，指定target和property，之后可以在槽函数/js脚本中通过id控制动画的运行。</p>
 <p>也可以通过设定loops 和 running属性来控制动画</p>
-<pre><code class="language-qml">  Rectangle {
+<pre><code class="lang-qml">  Rectangle {
       id: flashingblob
       width: 75; height: 75
       color: "blue"
@@ -139,7 +139,7 @@ date: 2019-06-08 12:44:23</li>
 <p>使用Shader开发，需要一定的图形学知识。其中使用GLSL需要熟悉OpenGL, 使用HLSL需要熟悉DirectX。</p>
 <h2>飞入效果源码</h2>
 <p>封装了一个平移进入的动画组件,能够支持从四个方向进场。</p>
-<pre><code class="language-qml">//ASlowEnter.qml
+<pre><code class="lang-qml">//ASlowEnter.qml
 import QtQuick 2.12
 import QtQuick.Controls 2.12
 import "../.."
@@ -178,7 +178,7 @@ Item {
 }
 </code></pre>
 <p>进场组件的使用</p>
-<pre><code class="language-qml">//Enter.qml
+<pre><code class="lang-qml">//Enter.qml
 
 import QtQuick 2.12
 import QtQuick.Controls 2.12
@@ -252,5 +252,4 @@ Item {
         }
     }
 }
-
 </code></pre>
