--- a/jaredtao.gitee.io/玩转Qml(16)-移植ShaderToy.html
+++ b/jaredtao.gitee.io/玩转Qml(16)-移植ShaderToy.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(16">仓库源文</a>-移植ShaderToy.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(16">站点原文</a>-移植ShaderToy)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(16">仓库源文</a>-移植ShaderToy.md)，<a href="https://jaredtao.gitee.io/玩转Qml(16">站点原文</a>-移植ShaderToy)</h2>
 <hr/>
 <p>title: 玩转Qml(16)-移植ShaderToy
 photos: /img/avatar.jpg
@@ -14,22 +14,22 @@ date: 2019-07-04 13:44:23</li>
 </ul>
 <hr/>
 <ul>
-<li><a href="#%E7%AE%80%E4%BB%8B">简介</a></li>
-<li><a href="#%E6%BA%90%E7%A0%81">源码</a></li>
-<li><a href="#%E6%95%88%E6%9E%9C%E9%A2%84%E8%A7%88">效果预览</a><ul>
-<li><a href="#%E7%A9%BF%E4%BA%91%E6%B4%9E">穿云洞</a></li>
-<li><a href="#%E6%98%9F%E7%90%83%E4%B9%8B%E5%85%89">星球之光</a></li>
-<li><a href="#%E8%9C%97%E7%89%9B">蜗牛</a></li>
-<li><a href="#%E8%B6%85%E7%BA%A7%E9%A9%AC%E9%87%8C%E5%A5%A5">超级马里奥</a></li>
+<li><a href="#简介">简介</a></li>
+<li><a href="#源码">源码</a></li>
+<li><a href="#效果预览">效果预览</a><ul>
+<li><a href="#穿云洞">穿云洞</a></li>
+<li><a href="#星球之光">星球之光</a></li>
+<li><a href="#蜗牛">蜗牛</a></li>
+<li><a href="#超级马里奥">超级马里奥</a></li>
 </ul>
 </li>
-<li><a href="#%E5%85%B3%E4%BA%8Eshadertoy">关于ShaderToy</a></li>
-<li><a href="#%E5%85%B3%E4%BA%8Eshadereffect">关于ShaderEffect</a></li>
-<li><a href="#shadertoy%E5%8E%9F%E7%90%86">ShaderToy原理</a><ul>
-<li><a href="#%E7%BA%A6%E5%AE%9A%E7%9A%84%E5%8F%98%E9%87%8F">约定的变量</a></li>
-<li><a href="#glsl%E7%89%88%E6%9C%AC%E5%8F%B7">glsl版本号</a></li>
-<li><a href="#glsl%E7%89%88%E6%9C%AC%E5%85%BC%E5%AE%B9">glsl版本兼容</a></li>
-<li><a href="#shadertoy%E9%80%82%E9%85%8D">ShaderToy适配</a></li>
+<li><a href="#关于shadertoy">关于ShaderToy</a></li>
+<li><a href="#关于shadereffect">关于ShaderEffect</a></li>
+<li><a href="#shadertoy原理">ShaderToy原理</a><ul>
+<li><a href="#约定的变量">约定的变量</a></li>
+<li><a href="#glsl版本号">glsl版本号</a></li>
+<li><a href="#glsl版本兼容">glsl版本兼容</a></li>
+<li><a href="#shadertoy适配">ShaderToy适配</a></li>
 </ul>
 </li>
 <li><a href="#taoshadertoy">TaoShaderToy</a></li>
@@ -38,19 +38,19 @@ date: 2019-07-04 13:44:23</li>
 <p>这次涛哥将会教大家移植ShaderToy的特效到Qml</p>
 <h2>源码</h2>
 <p>《玩转Qml》系列文章，配套了一个优秀的开源项目:TaoQuick</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
 <p>访问不了或者速度太慢，可以用国内的镜像网站gitee</p>
-<p>https://gitee.com/jaredtao/TaoQuick</p>
+<p><a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h2>效果预览</h2>
 <p>先看几个效果图</p>
 <h3>穿云洞</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderToy/Preview1.gif"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderToy/Preview1.gif"/></p>
 <h3>星球之光</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderToy/Preview2.gif"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderToy/Preview2.gif"/></p>
 <h3>蜗牛</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderToy/Preview3.gif"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderToy/Preview3.gif"/></p>
 <h3>超级马里奥</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderToy/Preview4.gif"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/ShaderToy/Preview4.gif"/></p>
 <p>gif录制质量较低，可编译运行TaoQuick源码或使用涛哥打包好的可执行程序，查看实际运行效果。</p>
 <p>可执行程序下载链接(包括windows 和 MacOS平台) <a href="https://github.com/jaredtao/TaoQuick/releases">https://github.com/jaredtao/TaoQuick/releases</a></p>
 <h2>关于ShaderToy</h2>
@@ -58,14 +58,14 @@ date: 2019-07-04 13:44:23</li>
 <p>用一些Shader代码和简单的纹理，就可以输出各种酷炫的图形效果和音频效果。</p>
 <p>如果你还不知道，赶紧去看看吧<a href="https://www.shadertoy.com">https://www.shadertoy.com</a></p>
 <p>顺便提一下，该网站的作者是IQ大神，这里有他的博客：</p>
-<p>http://www.iquilezles.org/www/articles/raymarchingdf/raymarchingdf.htm</p>
+<p><a href="http://www.iquilezles.org/www/articles/raymarchingdf/raymarchingdf.htm">http://www.iquilezles.org/www/articles/raymarchingdf/raymarchingdf.htm</a></p>
 <p>本文主要讨论图形效果，音频效果以后再实现。</p>
 <h2>关于ShaderEffect</h2>
 <p>Qml中实现ShaderToy，最快的途径就是ShaderEffect了。</p>
 <p>上一篇文章《Qml特效-着色器效果ShaderEffect》已经介绍过ShaderEffect了, 本文重点是移植ShaderToy。</p>
 <p>在涛哥写这篇文章之前，已经有两位前辈做过相关的研究。</p>
-<p>陈锦明： https://zhuanlan.zhihu.com/p/38942460</p>
-<p>qyvlik: https://zhuanlan.zhihu.com/p/44417680</p>
+<p>陈锦明： <a href="https://zhuanlan.zhihu.com/p/38942460">https://zhuanlan.zhihu.com/p/38942460</a></p>
+<p>qyvlik: <a href="https://zhuanlan.zhihu.com/p/44417680">https://zhuanlan.zhihu.com/p/44417680</a></p>
 <p>涛哥参考了他们的实现，做了一些改进、完善。</p>
 <p>在此感谢两位前辈。</p>
 <p>下面正文开始</p>
@@ -76,20 +76,20 @@ date: 2019-07-04 13:44:23</li>
 <p>只要不是太老的OpenGL版本，内置函数、变量基本都是通用的。</p>
 <h3>约定的变量</h3>
 <p>ShaderToy网站约定的变量如下：</p>
-<pre><code class="language-glsl">vec3        iResolution             image/buffer        The viewport resolution (z is pixel aspect ratio, usually 1.0)
-float       iTime                   image/sound/buffer	Current time in seconds
+<pre><code class="lang-glsl">vec3        iResolution             image/buffer        The viewport resolution (z is pixel aspect ratio, usually 1.0)
+float       iTime                   image/sound/buffer  Current time in seconds
 float       iTimeDelta              image/buffer        Time it takes to render a frame, in seconds
 int         iFrame                  image/buffer        Current frame
 float       iFrameRate              image/buffer        Number of frames rendered per second
 float       iChannelTime[4]         image/buffer        Time for channel (if video or sound), in seconds
-vec3        iChannelResolution[4]	image/buffer/sound	Input texture resolution for each channel
+vec3        iChannelResolution[4]   image/buffer/sound  Input texture resolution for each channel
 vec4        iMouse                  image/buffer        xy = current pixel coords (if LMB is down). zw = click pixel
-sampler2D	iChannel{i}             image/buffer/sound	Sampler for input textures i
-vec4        iDate                   image/buffer/sound	Year, month, day, time in seconds in .xyzw
-float       iSampleRate             image/buffer/sound	The sound sample rate (typically 44100)
+sampler2D   iChannel{i}             image/buffer/sound  Sampler for input textures i
+vec4        iDate                   image/buffer/sound  Year, month, day, time in seconds in .xyzw
+float       iSampleRate             image/buffer/sound  The sound sample rate (typically 44100)
 </code></pre>
 <p>Qml中的相应实现</p>
-<pre><code class="language-qml">ShaderEffect {
+<pre><code class="lang-qml">ShaderEffect {
     id: shader
 
     //properties for shader
@@ -118,14 +118,14 @@ float       iSampleRate             image/buffer/sound	The sound sample rate (ty
     property var        iChannelResolution: [calcResolution(iChannel0), calcResolution(iChannel1), calcResolution(iChannel2), calcResolution(iChannel3)]
     property vector4d   iDate;
     property real       iSampleRate: 44100
-    
+
     ...
 
 }
 </code></pre>
 <p>其中时间、日期通过Timer刷新，鼠标位置用MouseArea刷新。</p>
 <p>同时涛哥导出了hoverEnabled、running属性和restart函数，以方便Qml中控制Shader的运行。</p>
-<pre><code class="language-qml">ShaderEffect {
+<pre><code class="lang-qml">ShaderEffect {
     id: shader
 ...
     //properties for Qml controller
@@ -175,23 +175,73 @@ float       iSampleRate             image/buffer/sound	The sound sample rate (ty
 </code></pre>
 <h3>glsl版本号</h3>
 <p>GLSL Versions</p>
-<p>|OpenGL Version	|GLSL Version|
-|--|--|
-|2.0|110|
-|2.1|120|
-|3.0|130|
-|3.1|140|
-|3.2|150|
-|3.3|330|
-|4.0|400|
-|4.1|410|
-|4.2|420|
-|4.3|430|</p>
+<table>
+<thead><tr>
+<th>OpenGL Version</th>
+<th>GLSL Version</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>2.0</td>
+<td>110</td>
+</tr>
+<tr>
+<td>2.1</td>
+<td>120</td>
+</tr>
+<tr>
+<td>3.0</td>
+<td>130</td>
+</tr>
+<tr>
+<td>3.1</td>
+<td>140</td>
+</tr>
+<tr>
+<td>3.2</td>
+<td>150</td>
+</tr>
+<tr>
+<td>3.3</td>
+<td>330</td>
+</tr>
+<tr>
+<td>4.0</td>
+<td>400</td>
+</tr>
+<tr>
+<td>4.1</td>
+<td>410</td>
+</tr>
+<tr>
+<td>4.2</td>
+<td>420</td>
+</tr>
+<tr>
+<td>4.3</td>
+<td>430</td>
+</tr>
+</tbody>
+</table>
 <p>GLSL ES Versions (Android, iOS, WebGL)</p>
-<p>|OpenGL ES Version|	GLSL ES Version|
-|--|--|
-|2.0|100|
-|3.0|300|</p>
+<table>
+<thead><tr>
+<th>OpenGL ES Version</th>
+<th>GLSL ES Version</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>2.0</td>
+<td>100</td>
+</tr>
+<tr>
+<td>3.0</td>
+<td>300</td>
+</tr>
+</tbody>
+</table>
 <h3>glsl版本兼容</h3>
 <p>ShaderToy限定了WebGL 2.0，而我们移植到Qml中，自然是希望能够在所有可以运行Qml的设备上运行ShaderToy效果。</p>
 <p>所以要做一些glsl版本相关的处理。</p>
@@ -199,7 +249,7 @@ float       iSampleRate             image/buffer/sound	The sound sample rate (ty
 <p>glsl各个版本的差异，可以参考这里 <a href="https://github.com/mattdesl/lwjgl-basics/wiki/glsl-versions">https://github.com/mattdesl/lwjgl-basics/wiki/glsl-versions</a></p>
 <p>涛哥总结出了如下的代码和注释说明：</p>
 <p>注意"#version  xxx"必须是着色器的第一行，不能换行</p>
-<pre><code class="language-qml">    
+<pre><code class="lang-qml">
     // 如果环境是OpenGL ES2，默认的version是 version 110, 不需要写出来。
     // 比ES2更老的版本是ES 1.0 和 ES 1.1, 这种古董设备，建议还是不要玩Shader了吧。
     // ES2没有texture函数，要用旧的texture2D代替
@@ -283,7 +333,7 @@ out vec4 fragColor;
 <h3>ShaderToy适配</h3>
 <p>本来是不需要写顶点着色器的。如果我们想把ShaderToy做成一个任意坐标开始的Item来用，就需要适配一下坐标。</p>
 <p>涛哥写的顶点着色器如下，仅在默认着色器的基础上，传递qt_Vertex给下一阶段的vertex</p>
-<pre><code class="language-qml">
+<pre><code class="lang-qml">
     vertexShader: "
               uniform mat4 qt_Matrix;
               attribute vec4 qt_Vertex;
@@ -295,10 +345,9 @@ out vec4 fragColor;
                   gl_Position = qt_Matrix * vertex;
                   qt_TexCoord0 = qt_MultiTexCoord0;
               }"
-
 </code></pre>
 <p>片段着色器这里处理一下，适配出一个符合shaderToy的mainImage作为入口函数</p>
-<pre><code class="language-qml">    readonly property string startCode: "
+<pre><code class="lang-qml">    readonly property string startCode: "
         void main(void)
         {
             mainImage(gl_FragColor, vec2(vertex.x, iResolution.y - vertex.y));
@@ -317,21 +366,21 @@ out vec4 fragColor;
 <p>所以要翻一下。</p>
 <h2>TaoShaderToy</h2>
 <p>最后，看一下代码的全貌吧</p>
-<pre><code class="language-qml">//TaoShaderToy.qml
+<pre><code class="lang-qml">//TaoShaderToy.qml
 import QtQuick 2.12
 import QtQuick.Controls 2.12
 /*
 vec3        iResolution             image/buffer        The viewport resolution (z is pixel aspect ratio, usually 1.0)
-float       iTime                   image/sound/buffer	Current time in seconds
+float       iTime                   image/sound/buffer  Current time in seconds
 float       iTimeDelta              image/buffer        Time it takes to render a frame, in seconds
 int         iFrame                  image/buffer        Current frame
 float       iFrameRate              image/buffer        Number of frames rendered per second
 float       iChannelTime[4]         image/buffer        Time for channel (if video or sound), in seconds
-vec3        iChannelResolution[4]	image/buffer/sound	Input texture resolution for each channel
+vec3        iChannelResolution[4]   image/buffer/sound  Input texture resolution for each channel
 vec4        iMouse                  image/buffer        xy = current pixel coords (if LMB is down). zw = click pixel
-sampler2D	iChannel{i}             image/buffer/sound	Sampler for input textures i
-vec4        iDate                   image/buffer/sound	Year, month, day, time in seconds in .xyzw
-float       iSampleRate             image/buffer/sound	The sound sample rate (typically 44100)
+sampler2D   iChannel{i}             image/buffer/sound  Sampler for input textures i
+vec4        iDate                   image/buffer/sound  Year, month, day, time in seconds in .xyzw
+float       iSampleRate             image/buffer/sound  The sound sample rate (typically 44100)
 */
 ShaderEffect {
     id: shader
@@ -504,5 +553,4 @@ out vec4 fragColor;
     property string pixelShader: ""
     fragmentShader: forwardString + (pixelShader ? pixelShader : defaultPixelShader) + startCode
 }
-
 </code></pre>
