--- a/jaredtao.gitee.io/玩转Qml(18)-用户向导.html
+++ b/jaredtao.gitee.io/玩转Qml(18)-用户向导.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(18">仓库源文</a>-用户向导.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(18">站点原文</a>-用户向导)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(18">仓库源文</a>-用户向导.md)，<a href="https://jaredtao.gitee.io/玩转Qml(18">站点原文</a>-用户向导)</h2>
 <hr/>
 <p>title: 玩转Qml(18)-用户向导
 photos: /images/Qml18/wizard.gif
@@ -14,24 +14,24 @@ date: 2020-11-10 13:44:23</li>
 </ul>
 <hr/>
 <ul>
-<li><a href="#%E7%AE%80%E4%BB%8B">简介</a></li>
-<li><a href="#%E6%95%88%E6%9E%9C%E9%A2%84%E8%A7%88">效果预览</a></li>
-<li><a href="#%E6%BA%90%E7%A0%81">源码</a></li>
-<li><a href="#%E5%8E%9F%E7%90%86%E8%AF%B4%E6%98%8E">原理说明</a><ul>
-<li><a href="#%E9%9C%80%E6%B1%82%E8%AF%B4%E6%98%8E">需求说明</a></li>
-<li><a href="#%E5%8E%9F%E7%90%86">原理</a><ul>
-<li><a href="#qml%E5%AF%B9%E8%B1%A1%E4%BD%9C%E7%94%A8%E5%9F%9F">Qml对象作用域</a></li>
-<li><a href="#qobject%E5%AF%B9%E8%B1%A1%E6%A0%91">QObject对象树</a></li>
+<li><a href="#简介">简介</a></li>
+<li><a href="#效果预览">效果预览</a></li>
+<li><a href="#源码">源码</a></li>
+<li><a href="#原理说明">原理说明</a><ul>
+<li><a href="#需求说明">需求说明</a></li>
+<li><a href="#原理">原理</a><ul>
+<li><a href="#qml对象作用域">Qml对象作用域</a></li>
+<li><a href="#qobject对象树">QObject对象树</a></li>
 </ul>
 </li>
-<li><a href="#%E5%AE%9E%E7%8E%B0">实现</a><ul>
-<li><a href="#%E6%9C%80%E5%B0%8F%E6%94%B9%E5%8A%A8">最小改动</a></li>
-<li><a href="#%E8%8E%B7%E5%8F%96%E7%84%A6%E7%82%B9%E5%8C%BA%E5%9F%9F">获取焦点区域</a><ul>
-<li><a href="#%E6%89%BE%E5%88%B0%E5%AF%B9%E8%B1%A1">找到对象</a></li>
-<li><a href="#%E5%8F%96%E5%9D%90%E6%A0%87">取坐标</a></li>
-<li><a href="#%E5%90%91%E5%AF%BC%E9%A1%B5">向导页</a></li>
-<li><a href="#%E5%90%91%E5%AF%BC%E7%BB%84%E4%BB%B6">向导组件</a></li>
-<li><a href="#%E5%90%91%E5%AF%BC%E6%95%B0%E6%8D%AE%E6%BA%90">向导数据源</a></li>
+<li><a href="#实现">实现</a><ul>
+<li><a href="#最小改动">最小改动</a></li>
+<li><a href="#获取焦点区域">获取焦点区域</a><ul>
+<li><a href="#找到对象">找到对象</a></li>
+<li><a href="#取坐标">取坐标</a></li>
+<li><a href="#向导页">向导页</a></li>
+<li><a href="#向导组件">向导组件</a></li>
+<li><a href="#向导数据源">向导数据源</a></li>
 </ul>
 </li>
 </ul>
@@ -45,16 +45,16 @@ date: 2020-11-10 13:44:23</li>
 <p>这次涛哥就分享一个Qml制作“用户向导”的方案。</p>
 <h2>效果预览</h2>
 <p>看一下最终效果</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml18/wizard.png"/>
-<img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml18/wizard.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml18/wizard.png"/>
+<img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml18/wizard.gif"/></p>
 <p>在整个软件界面上，覆盖一层遮罩，只保留一部分镂空区域，并用箭头指向镂空区域，</p>
 <p>以此,将用户的眼球聚焦到镂空区域，并用适当的文字,说明镂空区域的作用。</p>
 <p>这个遮罩层是不能操作到软件界面的，点击任意区域，会转到下一步的向导，直到最后向导退出。</p>
 <h2>源码</h2>
 <p>《玩转Qml》系列文章，配套了一个优秀的开源项目:TaoQuick</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
 <p>访问不了或者速度太慢，可以用国内的镜像网站gitee</p>
-<p>https://gitee.com/jaredtao/TaoQuick</p>
+<p><a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h2>原理说明</h2>
 <p>向导的实现方案有很多，比如贴图之类的。按不同的需求，方案也不尽相同。</p>
 <p>这里先列一个涛哥的需求，再讨论方案才有意义。</p>
@@ -100,36 +100,35 @@ date: 2020-11-10 13:44:23</li>
 <p>在已有的Qml代码中，对于想当作焦点区域的组件，最小改动是增加一个objectName</p>
 <p>例如涛哥想把已有的标题栏按钮，作为焦点区域：</p>
 <p>改动前:</p>
-<pre><code class="language-qml">  ...
+<pre><code class="lang-qml">  ...
         SkinBtn {
             width: 24
             height: 24
             anchors.verticalCenter: parent.verticalCenter
         }
-  ...        
+  ...
 </code></pre>
 <p>改动后:</p>
-<pre><code class="language-qml">  ...
+<pre><code class="lang-qml">  ...
         SkinBtn {
             width: 24
             height: 24
             anchors.verticalCenter: parent.verticalCenter
             objectName: "skinBtn"
         }
-  ...        
+  ...
 </code></pre>
 <h4>获取焦点区域</h4>
 <h5>找到对象</h5>
 <p>像前面的组件，只要有了objectName，就可以从任意位置获取到它了</p>
 <p>这需要一点C++代码扩展</p>
-<pre><code class="language-C++">QQuickItem *getObject(QObject * pRootObject, const QString &amp;targetObjName)
+<pre><code class="lang-C++">QQuickItem *getObject(QObject * pRootObject, const QString &amp;targetObjName)
 {
     if (!pRootObject) {
         return nullptr;
     }
     return pRootObject-&gt;findChild&lt;QQuickItem *&gt;(targetObjName);
 }
-
 </code></pre>
 <p>通过findChild就可以拿到目标对象了, rootObject是根节点，可以从任意节点向上找到，</p>
 <p>也可以通过QQmlContex直接获取到。</p>
@@ -137,7 +136,7 @@ date: 2020-11-10 13:44:23</li>
 <p>找到了对象，就可以计算它的坐标，用于向导了。</p>
 <p>为了方便计算，同时避免处理繁杂的父子关系，可以直接把坐标映射到顶层窗口。向导的坐标也以顶层窗口为准即可。</p>
 <p>这里进一步封装了C++代码,直接计算好坐标</p>
-<pre><code class="language-C++">QRect getItemGeometryToScene(const QString &amp;targetObjName) const
+<pre><code class="lang-C++">QRect getItemGeometryToScene(const QString &amp;targetObjName) const
 {
     if (!pRootObject) {
         return {};
@@ -339,7 +338,7 @@ Item {
 <h5>向导组件</h5>
 <p>向导一般不止一页，而是很多页，这里就封装了一个向导组件。</p>
 <p>使用model-view的方式,数据源由外部设置，组件只管按照model去实例化对应的向导页即可</p>
-<pre><code class="language-qml">//CusWizard.qml
+<pre><code class="lang-qml">//CusWizard.qml
 
 import QtQuick 2.9
 import QtQuick.Controls 2.2
@@ -398,11 +397,10 @@ Item {
         color: "white"
     }
 }
-
 </code></pre>
 <h5>向导数据源</h5>
 <p>最后来看一下，TaoQuick项目的首页，提供的向导数据model</p>
-<pre><code class="language-qml">    ListModel {
+<pre><code class="lang-qml">    ListModel {
         id:wizardModel
         ListElement {
             name: "TitleBar"
