--- a/jaredtao.gitee.io/玩转Qml(6)-进度条定制.html
+++ b/jaredtao.gitee.io/玩转Qml(6)-进度条定制.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQml(6">仓库源文</a>-进度条定制.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQml(6">站点原文</a>-进度条定制)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qml(6">仓库源文</a>-进度条定制.md)，<a href="https://jaredtao.gitee.io/玩转Qml(6">站点原文</a>-进度条定制)</h2>
 <hr/>
 <p>title: 玩转Qml(6)-进度条定制
 photos: /images/Qml6/ProgressBar.gif
@@ -24,15 +24,15 @@ date: 2019-05-18 12:44:23</li>
 <p>本文是《玩转Qml》系列文章的第六篇，涛哥将教大家，进度条组件的定制。</p>
 <h2>源码</h2>
 <p>《玩转Qml》系列文章，配套了一个优秀的开源项目:TaoQuick</p>
-<p>github https://github.com/jaredtao/TaoQuick</p>
+<p>github <a href="https://github.com/jaredtao/TaoQuick">https://github.com/jaredtao/TaoQuick</a></p>
 <p>访问不了或者速度太慢，可以用国内的镜像网站gitee</p>
-<p>https://gitee.com/jaredtao/TaoQuick</p>
+<p><a href="https://gitee.com/jaredtao/TaoQuick">https://gitee.com/jaredtao/TaoQuick</a></p>
 <h2>先看预览图</h2>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml6/ProgressBar.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml6/ProgressBar.gif"/></p>
 <h2>新的渐变效果</h2>
 <p>Qt 5.12 加入了新的渐变效果，一共180种，效果来自这个网站<a href="https://webgradients.com">https://webgradients.com</a></p>
 <p>按照帮助文档的介绍，可以通过下面这两种方式使用</p>
-<pre><code class="language-qml">  Rectangle {
+<pre><code class="lang-qml">  Rectangle {
       y: 0; width: 80; height: 80
       gradient: Gradient.NightFade
   }
@@ -43,7 +43,7 @@ date: 2019-05-18 12:44:23</li>
   }
 </code></pre>
 <p>涛哥立即想到了，枚举不就是数字嘛</p>
-<pre><code class="language-qml">  Rectangle {
+<pre><code class="lang-qml">  Rectangle {
       y: 0; width: 80; height: 80
       gradient: 1
   }
@@ -58,10 +58,10 @@ date: 2019-05-18 12:44:23</li>
 </code></pre>
 <p>试了一下，这样也是可以啊，哈哈。</p>
 <p>于是涛哥就把180种渐变效果都拉出来看看。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml6/Gradiant.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml6/Gradiant.gif"/></p>
 <p>Qt只支持水平和垂直的渐变，其中有小部分是不能用的，所以只有165个能用。</p>
 <p>看一下展示全部渐变的Qml代码：</p>
-<pre><code class="language-qml">import QtQuick 2.9
+<pre><code class="lang-qml">import QtQuick 2.9
 import QtQuick.Controls 2.5
 
 Item {
@@ -109,7 +109,7 @@ Item {
 <p>普通进度条的原理，就是有一个比较长的矩形做背景，在上面放一个颜色不同的矩形，其宽度跟着百分比变化,</p>
 <p>100%时宽度与背景一致。</p>
 <p>可以写一个很简要的进度条。</p>
-<pre><code class="language-qml">Rectangle {
+<pre><code class="lang-qml">Rectangle {
     id: back
     width: 300
     height: 50
@@ -128,7 +128,7 @@ Item {
 </code></pre>
 <p>再添加一点元素，在右侧放一个文本，表示百分比，或者放图片。甚至给进度条加个闪光特效。</p>
 <p>经过一系列的加工，封装成一个综合的组件，最终结果如下：</p>
-<pre><code class="language-qml">//NormalProgressBar.qml
+<pre><code class="lang-qml">//NormalProgressBar.qml
 
 import QtQuick 2.12
 import QtQuick.Controls 2.12
@@ -230,12 +230,11 @@ Item {
         }
     }
 }
-
 </code></pre>
 <h2>圆形进度条</h2>
 <p>将一个Rectangle做成圆形: 宽高相等，半径为宽度一半。</p>
 <p>再把 颜色设置为透明，边框不透明，边框加粗一点，就是一个圆环了。</p>
-<pre><code class="language-qml">Rectangle {
+<pre><code class="lang-qml">Rectangle {
     id: back
     width: 120
     height: width
@@ -246,7 +245,7 @@ Item {
 }
 </code></pre>
 <p>接下来给圆环贴上一个圆形渐变色，渐变按照百分比来做。</p>
-<pre><code class="language-qml">import QtGraphicalEffects 1.12
+<pre><code class="lang-qml">import QtGraphicalEffects 1.12
 Rectangle {
     id: back
     width: 120
@@ -296,7 +295,7 @@ Rectangle {
 }
 </code></pre>
 <p>再加点料,封装成组件</p>
-<pre><code class="language-qml">//CircleProgressBar.qml
+<pre><code class="lang-qml">//CircleProgressBar.qml
 import QtQuick 2.12
 import QtQuick.Controls 2.12
 import QtGraphicalEffects 1.12
@@ -364,7 +363,6 @@ Item {
         }
     }
 }
-
 </code></pre>
 <p>最后，来个合影</p>
 <pre><code>Item {
@@ -481,4 +479,4 @@ Item {
 }
 </code></pre>
 <p>效果如下：</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml6/ProgressBar.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml6/ProgressBar.gif"/></p>
