--- a/jaredtao.gitee.io/玩转Qt(3)-用好QtCreator.html
+++ b/jaredtao.gitee.io/玩转Qt(3)-用好QtCreator.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQt(3">仓库源文</a>-用好QtCreator.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt(3">站点原文</a>-用好QtCreator)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qt(3">仓库源文</a>-用好QtCreator.md)，<a href="https://jaredtao.gitee.io/玩转Qt(3">站点原文</a>-用好QtCreator)</h2>
 <hr/>
 <p>title: 玩转Qt(3)-用好QtCreator
 photos: /img/avatar.jpg
@@ -13,15 +13,15 @@ date: 2019-05-18 18:44:23</li>
 </ul>
 <hr/>
 <ul>
-<li><a href="#%E7%AE%80%E4%BB%8B">简介</a></li>
-<li><a href="#%E7%8E%AF%E5%A2%83%E8%AF%B4%E6%98%8E">环境说明</a></li>
-<li><a href="#qtcreator%E6%8A%98%E5%8F%A0%E5%85%A8%E9%83%A8%E4%BB%A3%E7%A0%81">QtCreator折叠全部代码</a></li>
-<li><a href="#qtcreator%E5%B1%9E%E6%80%A7%E7%94%9F%E6%88%90">QtCreator属性生成</a></li>
-<li><a href="#qtcreator%E6%B3%A8%E9%87%8A%E4%BB%A3%E7%A0%81">QtCreator注释代码</a></li>
-<li><a href="#qtcreator%E4%BB%A3%E7%A0%81%E7%89%87%E6%AE%B5">QtCreator代码片段</a></li>
-<li><a href="#qtcreator%E4%BB%A3%E7%A0%81%E6%A0%BC%E5%BC%8F%E5%8C%96">QtCreator代码格式化</a></li>
-<li><a href="#qtcreator%E4%BC%9A%E8%AF%9D%E7%AE%A1%E7%90%86">QtCreator会话管理</a></li>
-<li><a href="#%E7%BB%93%E5%B0%BE">结尾</a></li>
+<li><a href="#简介">简介</a></li>
+<li><a href="#环境说明">环境说明</a></li>
+<li><a href="#qtcreator折叠全部代码">QtCreator折叠全部代码</a></li>
+<li><a href="#qtcreator属性生成">QtCreator属性生成</a></li>
+<li><a href="#qtcreator注释代码">QtCreator注释代码</a></li>
+<li><a href="#qtcreator代码片段">QtCreator代码片段</a></li>
+<li><a href="#qtcreator代码格式化">QtCreator代码格式化</a></li>
+<li><a href="#qtcreator会话管理">QtCreator会话管理</a></li>
+<li><a href="#结尾">结尾</a></li>
 </ul>
 <h2>简介</h2>
 <p>这次涛哥将教大家，一些QtCreator的实用技巧。</p>
@@ -37,7 +37,7 @@ date: 2019-05-18 18:44:23</li>
 <p>经常需要给自定义的QObject类写一些属性，QtCreator是可以自动生成get、set函数以及change信号的。</p>
 <p>只要写上Q_PROPERTY那一行，光标放在Q_PROPERTY上, 用右键菜单 -&gt; Refactor -&gt; Generate Missing Q_PROPERTY Memory 即可生成。</p>
 <p>也可以使用快捷键，光标放在Q_PROPERTY上，按Alt + Enter。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml3/1.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qml3/1.gif"/></p>
 <h2>QtCreator注释代码</h2>
 <p>快捷键，注释当前行代码或者当前选中的多行代码</p>
 <p>Ctrl + /</p>
@@ -45,7 +45,7 @@ date: 2019-05-18 18:44:23</li>
 <h2>QtCreator代码片段</h2>
 <p>前面的Q_PROPERTY自动生成，其实就是一种代码片段。</p>
 <p>比如经常要写这样一段代码</p>
-<pre><code class="language-C++">if (pObj) {
+<pre><code class="lang-C++">if (pObj) {
     delete pObj;
     pObj = nullptr;
 }
@@ -53,7 +53,7 @@ date: 2019-05-18 18:44:23</li>
 <p>其中的pObj出现了多次，在不同的地方只是pObj这个名字不同，其它if 和 delete操作一模一样。</p>
 <p>可以把这段代码封装成模板函数，也可以做成QtCreator的代码片段。(不建议定义宏, 不类型安全和不方便调试)</p>
 <p>模板是这样的：</p>
-<pre><code class="language-C++">template&lt;class T&gt;
+<pre><code class="lang-C++">template&lt;class T&gt;
 safeDelete (T *pObj) 
 {
     if (pObj) 
@@ -65,24 +65,24 @@ safeDelete (T *pObj)
 </code></pre>
 <p>代码片段是在写代码时就把实际的代码生成出来了，模板是编译的时候才去生成。所以代码片段可以加快编译速度。</p>
 <p>代码片段是这么做的，在菜单的 工具-&gt;选项 弹出选项窗口，然后到文本编辑器-&gt;片段-&gt;下拉选C++</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/3.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/3.png"/></p>
 <p>添加一个片段，起名字叫safeD，并填上内容</p>
-<pre><code class="language-c++">if ($$) {
+<pre><code class="lang-c++">if ($$) {
     delete $$;
     $$ = nullptr;
 }
 </code></pre>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/4.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/4.png"/></p>
 <p>写好后点击确定。再回到代码中，输入safeD，按回车就会自动补全前面的片段。</p>
 <p>光标出现在$$的地方，有一个高亮颜色，此时只要输入一个名字，按下回车键，后续的地方自动替换成输入的名字了。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/5.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/5.gif"/></p>
 <h2>QtCreator代码格式化</h2>
 <p>都9102年了，如果还有人跟你计较大括号要不要换行、指针符号靠左还是靠右这种问题，请用自动格式化工具怼他/她。</p>
 <p>QtCreator支持很多种格式化工具，涛哥用的是clang-format。VisualStudio 2017、2019、以及VSCode也支持clang-format</p>
 <p>的,都不需要额外安装任何插件。配置起来很简单，只要在项目pro文件同级目录下，放一个配置好的.clang-format的文件就行了。</p>
 <p>团队合作的时候，使用同一个.clang-format配置文件，大家的代码格式就都一致了。</p>
 <p>clang-format有默认的google、llvm等格式可选，也可以自定义。下面是一个涛哥使用的自定义配置文件，并做了详细的注释</p>
-<pre><code class="language-clang-format">---
+<pre><code class="lang-clang-format">---
 # 语言: None, Cpp, Java, JavaScript, ObjC, Proto, TableGen, TextProto
 Language:        Cpp
 # BasedOnStyle:  WebKit
@@ -308,12 +308,12 @@ UseTab:          Never
 <h2>QtCreator会话管理</h2>
 <p>QtCreator的"会话管理"和"最近使用"功能配合，是涛哥接触过的所有IDE/Editor中，管理项目最好用的，没有之一。</p>
 <p>包括VisualStudio、VSCode、AndroidStudio、XCode、Unity3D Editor等等，都只有"最近使用"，没有"会话管理"。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/6.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/6.png"/></p>
 <p>如上图，左边是会话列表，右边是最近使用列表。</p>
 <p>会话管理的最大用处是，同时打开多个Qt项目，以及快速切换并还原状态。</p>
 <p>涛哥用示例来说明:</p>
 <p>涛哥正在开发TaoQuick项目，这个项目包含两个不同路径下的pro项目, 每个项目分别有自己的子项目。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/session1.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/session1.png"/></p>
 <p>当我正在调试TaoView.cpp文件，并且打了断点的时候，有小伙伴来问我关于另一个项目HelloCI的一些问题。</p>
 <p>这时候我需要把代码切换到HelloCI项目，有些人可能会想着再打开一个QtCreator，当然这样也行，就是</p>
 <p>窗口太多了容易搞混了。涛哥更信赖“会话管理”功能，切换到HelloCI这个会话，做了一些处理。</p>
@@ -321,7 +321,7 @@ UseTab:          Never
 <p>又过了一段时间，涛哥需要重启一下电脑，重启后打开QtCreator，直接点开TaoQuick这个会话，又给我切换回</p>
 <p>刚才调试的TaoQuick.cpp文件了，项目结构展开和重启之前是一样的,只有断点没有了。</p>
 <p>简而言之，大家把平常用的多个相关的项目，放进一个会话里面，就可以放心地关掉QtCreator。下一次想打开的时候，只要点一下会话就可以了。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/7.gif"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/Qt1/7.gif"/></p>
 <h2>结尾</h2>
 <p>这次就分享这么多了，以上内容，大部分都可以在TaoQuick的代码仓库中看到</p>
 <p><a href="https://github.com/jaredtao/taoquick">https://github.com/jaredtao/taoquick</a></p>
