--- a/jaredtao.gitee.io/玩转Qt(9)-程序发布指南.html
+++ b/jaredtao.gitee.io/玩转Qt(9)-程序发布指南.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQt(9">仓库源文</a>-程序发布指南.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQt(9">站点原文</a>-程序发布指南)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转Qt(9">仓库源文</a>-程序发布指南.md)，<a href="https://jaredtao.gitee.io/玩转Qt(9">站点原文</a>-程序发布指南)</h2>
 <hr/>
 <p>title: 玩转Qt(9)-程序发布指南
 photos: /img/avatar.jpg
@@ -51,13 +51,14 @@ date: 2019-09-12 18:44:23</li>
 <p>对新手来说，细节上能多说几句，都将是莫大的帮助，少走弯路，节省几个小时、甚至几天都是有可能的。</p>
 <p>如果有疏漏、错误，也欢迎大家补充、指正。</p>
 <h1>Qt的安装</h1>
-<p>Qt官网下载地址在这： http://download.qt.io/official_releases</p>
+<p>Qt官网下载地址在这： <a href="http://download.qt.io/official_releases">http://download.qt.io/official_releases</a></p>
 <p>离线安装包 或者 在线安装包 都行。</p>
 <p>关于Qt版本的选择，涛哥建议：</p>
-<pre><code>体验新特性，就用最新版本；项目开发，用长期支持版(LTS)的最后一个修正版本，稳定、bug最少。</code></pre>
-<p>可以在Qt官方wiki上查看相关信息 https://wiki.qt.io/Main</p>
+<pre><code>体验新特性，就用最新版本；项目开发，用长期支持版(LTS)的最后一个修正版本，稳定、bug最少。
+</code></pre>
+<p>可以在Qt官方wiki上查看相关信息 <a href="https://wiki.qt.io/Main">https://wiki.qt.io/Main</a></p>
 <p>目前为止(2019/9/2)，最新版为5.13.0，LTS版本有5.9 和 5.12， 而5.9最后一个修正版本是5.9.8， 5.12则是到5.12.4</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/01.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/01.png"/></p>
 <p>例如上图是5.9.8的离线安装包，提供了windows、mac以及linux三种系统的可执行程序。</p>
 <p>其中windows的安装程序"qt-opensource-windoiws-x86-5.9.8.exe", 大小有2.4G，里面</p>
 <p>包含了msvc_x86、msvc_x64、mingw、Android等多个版本的Qt工具链。在下载完成，安装</p>
@@ -68,28 +69,28 @@ date: 2019-09-12 18:44:23</li>
 <p>涛哥用的是Windows 10系统，安装的Qt版本是5.12.4，以此为例来说明，其它系统和版本以实际为准。</p>
 <h2>Qt安装路径</h2>
 <p>涛哥安装在了D:\Qt\Online 路径下, 如图:</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/QtStruct.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/QtStruct.png"/></p>
 <p>其中“vcredist”文件夹包含了msvc2015 和 msvc2017的运行时库安装程序(后面会说怎么用,不是msvc编译器不需要)</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/2.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/2.png"/></p>
 <p>"Tools"文件夹，包括QtCreator、OpenSSL库(可选)以及两种版本MinGW(可选)。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/3.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/3.png"/></p>
 <p>(图中还有Qt3DStudio,可忽略)</p>
 <p>“5.12.4”文件夹，是Qt的核心路径, 里面包含多个版本的Qt工具链、头文件、动态链接库等</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/1.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/1.png"/></p>
 <p>这里涛哥安装了msvc2017、msvc2017_64、mingw73_64以及android_x86.</p>
 <p>注意msvc2017是x86架构的Qt库，msvc2017_64则是x64架构的。</p>
 <p>如果有msvc2013、msvc2015也同理。</p>
 <h2>Qt核心路径</h2>
 <p>接下来看一下重点，Qt的核心路径， 以msvc2017_64文件夹为例</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/4.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/4.png"/></p>
 <p>bin文件夹包含了Qt提供的各种工具exe程序，以及动态链接库的dll</p>
 <p>其中工具包括qmake.exe 和 windeployqt.exe，windeployqt.exe是我们今天主要讨论的工具。</p>
 <p>动态链接库全部是两份dll，比如Qt5Cored.dll和Qt5Core.dll，文件名末尾带'd'表示debug版本的，另一个不带'd'的是release版本。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/5.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/5.png"/></p>
 <p>debug版本和release版本的主要区别：debug没有开编译器优化、携带了调试信息，release开了编译器优化O2,去掉了多余的信息</p>
 <p>(图中还有pdb文件，是涛哥单独安装的，用来调试Qt源码，可以忽略)</p>
 <p>和bin同级的，还有plugins文件夹，包含一些Qt用到的插件</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/6.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/6.png"/></p>
 <p>比如imageformats文件夹中提供了jepg、gif、webp等图片格式的功能支持的插件，platforms文件夹则提供了平台插件，特别是</p>
 <p>qwindows.dll这一个，在windows平台是必不可少的。</p>
 <p>和bin同级的，另外一个文件夹是'qml'文件夹，包含Qml的各种功能模块。</p>
@@ -99,24 +100,24 @@ date: 2019-09-12 18:44:23</li>
 <p>这里新建一个简单的Hello World程序，名字就叫"HelloDeploy"。</p>
 <p>同时为了说明问题，涛哥添加一些常用的模块。</p>
 <p>在pro文件中，QT += 那一行该写的都写上：</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/8.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/8.png"/></p>
 <p>在main.cpp中包含一下各个模块的头文件，再分别创建一个对象实例，调用一些简单的函数：</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/9.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/9.png"/></p>
 <p>这样一个多模块依赖的程序就写好了。</p>
 <h1>Window编译和发布</h1>
 <h2>Window 编译</h2>
 <p>这里要特别注意，编译器的选择, 以及编译用的是debug模式还是release模式。</p>
 <p>涛哥这里是msvc2017_x64版本</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/10.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/10.png"/></p>
 <p>一般发布用release模式。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/11.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/11.png"/></p>
 <p>编译完成后，默认在build-xxxx-release/release/文件夹中会生成我们的exe程序。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/12.png"/></p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/13.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/12.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/13.png"/></p>
 <p>我们将这个exe复制出来，新建一个release文件夹，放进去</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/14.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/14.png"/></p>
 <p>这时候可以尝试双击运行它，会提示缺少dll</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/15.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/15.png"/></p>
 <h2>Window 发布</h2>
 <p>发布程序，其实就是把exe程序依赖的dll和相关资源都放在一起，保证双击运行即可。</p>
 <p>我们前面提过的windeployqt.exe，是Qt提供的命令行工具，能帮助我们自动把需要的dll或资源复制过来。</p>
@@ -124,32 +125,32 @@ date: 2019-09-12 18:44:23</li>
 <li>我们先打开一个命令行</li>
 </ol>
 <p>可以从开始菜单找到Qt提供的命令行</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/16.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/16.png"/></p>
 <p>注意选对版本。这种命令行在启动时已经设置好了QT的环境变量，可以直接输入windeployqt.exe</p>
 <p>也可以用普通的命令行，使用windeployqt.exe时带上绝对路径即可。</p>
 <p>涛哥一般用普通的命令行，因为绝对路径不易出错。</p>
-<ol start="2">
+<ol>
 <li>cd到release目录</li>
 </ol>
 <p>这里说一个windows启动命令行的小技巧：在release文件夹中，按住键盘shift键，然后按鼠标右键，弹出的右键菜单，</p>
 <p>会比普通的右键菜单多一个“在此处打开命令窗口”，点击就能在release文件夹打开命令行窗口。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/17.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/17.png"/></p>
 <p>如果没有这个功能，就得手动输入cd指令，进入release路径。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/18.png"/></p>
-<ol start="3">
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/18.png"/></p>
+<ol>
 <li>执行windeployqt命令</li>
 </ol>
 <p>这里通过绝对路径来使用windeployqt：</p>
 <p>d:\qt\Online\5.12.4\msvc2017_64\bin\windeployqt.exe HelloDeploy.exe</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/19.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/19.png"/></p>
 <p>HelloDeploy这个程序还用到了Qml，用到Qml的程序，要给windeployqt加上qmldir参数，写上你的Qml文件所在文件夹</p>
 <p>(没用到qml的程序，不要加这一步)</p>
 <p>d:\qt\Online\5.12.4\msvc2017_64\bin\windeployqt.exe HelloDeploy.exe --qmldir .\qml</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/20.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/20.png"/></p>
 <p>写好windeployqt命令后按回车执行</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/21.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/21.png"/></p>
 <p>正确执行后，release文件夹下，多了很多dll，以及一些文件夹。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/22.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/22.png"/></p>
 <p>这时候我们双击运行HelloDeploy.exe, 就可以正常启动了。</p>
 <p>将整个文件夹压缩或拷贝到其它没有Qt环境的电脑上，也是可以启动的。</p>
 <p>只要dll齐备了，制作安装包也不是问题。(后续有时间，我再写安装包制作的教程)</p>
@@ -159,49 +160,49 @@ date: 2019-09-12 18:44:23</li>
 <p>或者将运行时库里面的dll复制出来即可。</p>
 <p>一般在VS的安装路径，都有展开的dll，可以直接拷贝。</p>
 <p>例如，涛哥电脑上的vs2017路径如下：</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/msvc.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/msvc.png"/></p>
 <p>按实际的路径找到这几个dll，全部拷贝即可。注意x86和x64，别拿错了。</p>
 <h2>常见的错误处理</h2>
 <p>一般使用windeployqt，大部分库都能自动拷贝，不需要手动处理，</p>
 <p>只有极少数情况下，windeployqt跑完，会缺失一些库，还要手动处理一下。</p>
 <p>遇到这种情况，用依赖检查工具Dependencies即可快速定位问题。</p>
-<p>Dependencies下载链接:  https://github.com/lucasg/Dependencies</p>
+<p>Dependencies下载链接:  <a href="https://github.com/lucasg/Dependencies">https://github.com/lucasg/Dependencies</a></p>
 <p>Dependencies 下载好，点击"DependenciesGui.exe"就可以打开界面。注意是名字带Gui的那个，不带gui的“Dependencies.exe”是命令行程序。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/depency.jpg"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/depency.jpg"/></p>
 <p>下面列举一些常见的错误信息</p>
 <h3>应用程序无法正常启动</h3>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/23.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/23.png"/></p>
 <p>最容易出现这种错误的情况是，程序是64位编译出来的，而同级目录下的dll是32位的，</p>
 <p>或者同级目录下没有dll，但是环境变量中指向了32位的dll。(所以涛哥没有设置环境变量)</p>
 <p>32位和64位倒过来也是。</p>
 <p>如果dll版本是匹配的，还有可能出现的情况是缺少第三方库。</p>
 <p>这里说一个检查依赖的方法：</p>
 <p>将HelloDeploy.exe重命名为HelloDeploy.dll，然后用Dependencies打开，就可以查看少哪些库</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/24.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/24.png"/></p>
 <p>如上图，红色问号的表示缺少的库。</p>
 <p>找齐了依赖的库，再把程序的扩展名改回exe即可。</p>
 <h3>启动失败 - no Qt platform plugin</h3>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/27.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/27.png"/></p>
 <p>这种情况，是QT路径下的 plugins/platforms/qwindows.dll文件没有复制过来。</p>
 <p>注意这个dll文件直接复制到exe同级是不起作用的，要放在exe程序同级的platforms文件夹里，或者同级</p>
 <p>的plugins/platforms文件夹里</p>
 <h3>OpenGL Context 创建失败</h3>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/25.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/25.png"/></p>
 <p>这种情况，一般是OpenGL相关的库没有复制过来，补上就好了</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/26.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/26.png"/></p>
 <h2>整理</h2>
 <p>我们看到，exe同级目录下，windeployqt将一堆的文件夹放在了那里，有些混乱。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/28.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/28.png"/></p>
 <p>涛哥观察并验证了一下，其实可以做个简单的整理。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/29.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/29.png"/></p>
 <p>Qt开头的文件夹都是qml的模块，剩下的文件夹除了translations都是Qt的插件，</p>
 <p>所以新建两个文件夹qml和plugins, 分别把qml模块和插件归入其中。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/30.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/30.png"/></p>
 <p>这样的结构，和QT安装路径下的结构是相似的。</p>
 <p>这也正是Qt支持的插件加载路径、qml模块加载路径。</p>
 <p>同级的dll则是windows系统默认的动态库加载规则，不方便修改</p>
 <p>可以参考msdn：</p>
-<p>https://docs.microsoft.com/en-us/windows/win32/dlls/dynamic-link-library-search-order</p>
+<p><a href="https://docs.microsoft.com/en-us/windows/win32/dlls/dynamic-link-library-search-order">https://docs.microsoft.com/en-us/windows/win32/dlls/dynamic-link-library-search-order</a></p>
 <h2>简单裁剪</h2>
 <p>如果你熟悉Qt的各个模块，可以进行一些裁剪。以下都是些个人经验。</p>
 <p>不熟悉请慎重！</p>
@@ -214,11 +215,11 @@ date: 2019-09-12 18:44:23</li>
 <p>Qt5QuickTest.dll</p>
 <p>如果没用到windows扩展，Qt5WinExtras.dll也可以去掉</p>
 <p>其次，如果你不需要内置的翻译文件，translations文件夹也可以删掉</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/32.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/32.png"/></p>
 <h3>删减plugins</h3>
 <p>再来看一下plugins：</p>
 <p>其中platforms是必不可少的，剩下的HelloDeploy都没用到，可以去掉。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/33.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/33.png"/></p>
 <p>常见程序会用的包括:</p>
 <p>imageformats 图片格式支持</p>
 <p>iconengines 小图标功能</p>
@@ -226,7 +227,7 @@ date: 2019-09-12 18:44:23</li>
 <p>其他的看情况删减。</p>
 <h3>删减qml</h3>
 <p>最后看一下Qml文件夹，如果程序完全没用qml，直接删掉就好了。</p>
-<p><img alt="预览" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/34.png"/></p>
+<p><img alt="预览" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtDeployment/34.png"/></p>
 <p>按windeployqt给HelloDeploy提供的这些，逐个文件夹来说:</p>
 <ul>
 <li>Qt/labs 一般不推荐Qml中引入labs中的实验品，但是有些情况下功能缺失，只能引入。</li>
