--- a/jaredtao.gitee.io/玩转QtQuick(1)-SceneGraph场景图简介.html
+++ b/jaredtao.gitee.io/玩转QtQuick(1)-SceneGraph场景图简介.html
@@ -1,4 +1,4 @@
-<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/%E7%8E%A9%E8%BD%ACQtQuick(1">仓库源文</a>-SceneGraph场景图简介.md)，<a href="https://jaredtao.gitee.io/%E7%8E%A9%E8%BD%ACQtQuick(1">站点原文</a>-SceneGraph场景图简介)</h2>
+<h2><a href="https://gitee.com/jaredtao/jaredtao/blob/master/source/_posts/玩转QtQuick(1">仓库源文</a>-SceneGraph场景图简介.md)，<a href="https://jaredtao.gitee.io/玩转QtQuick(1">站点原文</a>-SceneGraph场景图简介)</h2>
 <hr/>
 <p>title: 玩转QtQuick(1)-SceneGraph场景图简介
 photos: /images/qt_extended_48x48.png
@@ -13,26 +13,26 @@ date: 2021-01-20 13:44:23</li>
 </ul>
 <hr/>
 <ul>
-<li><a href="#%E7%AE%80%E4%BB%8B">简介</a></li>
-<li><a href="#qt-quick-%E4%B8%AD%E7%9A%84%E5%9C%BA%E6%99%AF%E5%9B%BE">Qt Quick 中的“场景图”</a></li>
-<li><a href="#qt-quick-%E5%9C%BA%E6%99%AF%E5%9B%BE%E7%9A%84%E7%BB%93%E6%9E%84">Qt Quick “场景图”的结构</a><ul>
-<li><a href="#scene-graph-api--%E5%9C%BA%E6%99%AF%E5%9B%BE%E6%8E%A5%E5%8F%A3">Scene Graph API / “场景图”接口</a></li>
-<li><a href="#%E8%8A%82%E7%82%B9">节点</a></li>
-<li><a href="#%E9%A2%84%E5%A4%84%E7%90%86">预处理</a></li>
-<li><a href="#%E8%8A%82%E7%82%B9%E6%89%80%E6%9C%89%E6%9D%83">节点所有权</a></li>
-<li><a href="#%E6%9D%90%E8%B4%A8">材质</a></li>
-<li><a href="#%E4%BE%BF%E6%8D%B7%E7%9A%84%E8%8A%82%E7%82%B9">便捷的节点</a></li>
+<li><a href="#简介">简介</a></li>
+<li><a href="#qt-quick-中的场景图">Qt Quick 中的“场景图”</a></li>
+<li><a href="#qt-quick-场景图的结构">Qt Quick “场景图”的结构</a><ul>
+<li><a href="#scene-graph-api--场景图接口">Scene Graph API / “场景图”接口</a></li>
+<li><a href="#节点">节点</a></li>
+<li><a href="#预处理">预处理</a></li>
+<li><a href="#节点所有权">节点所有权</a></li>
+<li><a href="#材质">材质</a></li>
+<li><a href="#便捷的节点">便捷的节点</a></li>
 </ul>
 </li>
-<li><a href="#%E5%9C%BA%E6%99%AF%E5%9B%BE%E5%92%8C%E6%B8%B2%E6%9F%93">“场景图”和渲染</a></li>
-<li><a href="#%E6%B8%B2%E6%9F%93%E5%BE%AA%E7%8E%AF">渲染循环</a><ul>
-<li><a href="#%E7%BA%BF%E7%A8%8B%E6%B8%B2%E6%9F%93%E5%BE%AA%E7%8E%AF">线程渲染循环</a></li>
-<li><a href="#%E9%9D%9E%E7%BA%BF%E7%A8%8B%E6%B8%B2%E6%9F%93%E5%BE%AA%E7%8E%AF-%E5%9F%BA%E6%9C%AC%E6%B8%B2%E6%9F%93%E5%BE%AA%E7%8E%AF%E5%92%8C%E7%AA%97%E5%8F%A3%E6%B8%B2%E6%9F%93%E5%BE%AA%E7%8E%AF">非线程渲染循环 (基本渲染循环和窗口渲染循环)</a></li>
-<li><a href="#%E4%BD%BF%E7%94%A8qquickrendercontrol%E8%87%AA%E5%AE%9A%E4%B9%89%E6%B8%B2%E6%9F%93%E6%8E%A7%E5%88%B6">使用QQuickRenderControl自定义渲染控制</a></li>
-<li><a href="#%E5%9C%BA%E6%99%AF%E5%9B%BE%E5%92%8C%E5%8E%9F%E7%94%9F%E5%9B%BE%E5%BD%A2api%E7%9A%84%E6%B7%B7%E5%90%88%E4%BD%BF%E7%94%A8">“场景图”和原生图形API的混合使用</a></li>
-<li><a href="#%E8%87%AA%E5%AE%9A%E4%B9%89item%E4%BD%BF%E7%94%A8qpainter">自定义Item使用QPainter</a></li>
-<li><a href="#%E6%97%A5%E5%BF%97%E6%94%AF%E6%8C%81">日志支持</a></li>
-<li><a href="#%E5%9C%BA%E6%99%AF%E5%9B%BE%E5%90%8E%E7%AB%AF">“场景图”后端</a></li>
+<li><a href="#场景图和渲染">“场景图”和渲染</a></li>
+<li><a href="#渲染循环">渲染循环</a><ul>
+<li><a href="#线程渲染循环">线程渲染循环</a></li>
+<li><a href="#非线程渲染循环-基本渲染循环和窗口渲染循环">非线程渲染循环 (基本渲染循环和窗口渲染循环)</a></li>
+<li><a href="#使用qquickrendercontrol自定义渲染控制">使用QQuickRenderControl自定义渲染控制</a></li>
+<li><a href="#场景图和原生图形api的混合使用">“场景图”和原生图形API的混合使用</a></li>
+<li><a href="#自定义item使用qpainter">自定义Item使用QPainter</a></li>
+<li><a href="#日志支持">日志支持</a></li>
+<li><a href="#场景图后端">“场景图”后端</a></li>
 </ul>
 </li>
 </ul>
@@ -40,7 +40,7 @@ date: 2021-01-20 13:44:23</li>
 <p>这是《玩转QtQuick》系列文章的第一篇，主要是介绍Qt Quick Scene Graph “场景图”的关键特性、主要架构及实现原理等等。</p>
 <p>(不是QWidget 框架中那个 QGraphicsView哦，是Qt Quick的Scene Graph，不一样)</p>
 <p>Scene Graph 是QtQuick/Qml所依赖的渲染框架。</p>
-<p>****本文会涉及到一些图形学的基本概念，例如：材质、纹理、光栅化、图元等，建议参考相关资料，本文不做进一步的解释。****</p>
+<p><strong><strong>本文会涉及到一些图形学的基本概念，例如：材质、纹理、光栅化、图元等，建议参考相关资料，本文不做进一步的解释。</strong></strong></p>
 <p>因为Qt官方文档写的比较全面，所以本文主要是对官方文档的翻译，同时会补充一些个人理解。</p>
 <p>翻译主要参考Qt5.15的文档，适当做了一些调整，尽量信达雅，尽量说人话。</p>
 <p>下面翻译开始</p>
@@ -59,7 +59,7 @@ date: 2021-01-20 13:44:23</li>
 <p>“场景图”是Item场景的图形表示，它是一个独立的结构，其中包含足以渲染所有节点的信息。</p>
 <p>设置完成后，就可以独立于Item状态对其进行操作和渲染。</p>
 <p>在许多平台上，“场景图”会在GUI线程准备下一帧状态时，在专用渲染线程上进行渲染。</p>
-<p>****注意：本文列出的许多信息特定于 Qt “场景图”的内置默认行为。如果使用替代的方案时，并非所有概念都适用。****</p>
+<p><strong><strong>注意：本文列出的许多信息特定于 Qt “场景图”的内置默认行为。如果使用替代的方案时，并非所有概念都适用。</strong></strong></p>
 <h2>Qt Quick “场景图”的结构</h2>
 <p>“场景图” 由许多预定义的节点类型组成，每种类型都有专门的用途。</p>
 <p>尽管我们将其称为“场景图”，但更精确的定义是“节点树”。</p>
@@ -73,18 +73,40 @@ date: 2021-01-20 13:44:23</li>
 <p>使用<code>QSGGeometry</code>可以定义几何坐标，并描述形状或者图元网格。它可以是直线，矩形，多边形，许多</p>
 <p>不连续的矩形或者复杂的3D网格。材质定义如何填充此图形的每个像素。</p>
 <p>一个节点可以有任意数量的子节点，并且几何节点将被渲染，以便它们以子顺序出现，且父级位于其子级之后。</p>
-<p>****注意：这并未说明渲染器中的实际渲染顺序，仅保证视觉顺序。****</p>
+<p><strong><strong>注意：这并未说明渲染器中的实际渲染顺序，仅保证视觉顺序。</strong></strong></p>
 <p>有效的节点如下:</p>
-<p>|节点名称|描述|
-|--|--|
-|QSGNode|“场景图”中所有节点的基类|
-|QSGGeometryNode|用于“场景图”中所有可渲染的内容|
-|QSGClipNode|“场景图”中实现“切割”功能|
-|QSGOpacityNode|用来改变透明度|
-|QSGTransformNode|实现旋转、平移、缩放等几何变换|</p>
+<table>
+<thead><tr>
+<th>节点名称</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>QSGNode</td>
+<td>“场景图”中所有节点的基类</td>
+</tr>
+<tr>
+<td>QSGGeometryNode</td>
+<td>用于“场景图”中所有可渲染的内容</td>
+</tr>
+<tr>
+<td>QSGClipNode</td>
+<td>“场景图”中实现“切割”功能</td>
+</tr>
+<tr>
+<td>QSGOpacityNode</td>
+<td>用来改变透明度</td>
+</tr>
+<tr>
+<td>QSGTransformNode</td>
+<td>实现旋转、平移、缩放等几何变换</td>
+</tr>
+</tbody>
+</table>
 <p>自定义节点通过继承<code>QQuickItem</code>类，重写<code>QQuickItem::updatePaintNode()</code>，并且设置 <code>QQuickItem::ItemHasContents</code> 标志的方式，添加到“场景图”。</p>
-<p>*****警告：至关重要的是, 原生图形（OpenGL，Vulkan，Metal等）操作以及与“场景图”的交互只能在渲染线程中进行，主要*****</p>
-<p>*****在<code>updatePaintNode()</code>调用期间进行。经验法则是仅在<code>QQuickItem::updatePaintNode()</code>函数内使用带有“QSG”前缀的类。*****</p>
+<p><strong>*</strong>警告：至关重要的是, 原生图形（OpenGL，Vulkan，Metal等）操作以及与“场景图”的交互只能在渲染线程中进行，主要<strong>*</strong></p>
+<p><strong>*</strong>在<code>updatePaintNode()</code>调用期间进行。经验法则是仅在<code>QQuickItem::updatePaintNode()</code>函数内使用带有“QSG”前缀的类。<strong>*</strong></p>
 <p>更多详细的信息，可以参考Qt文档： Scene Graph - Custom Geometry</p>
 <h3>预处理</h3>
 <p>节点具有虚函数<code>QSGNode::preprocess()</code>,该函数将在渲染“场景图”之前被调用。</p>
@@ -98,25 +120,69 @@ date: 2021-01-20 13:44:23</li>
 <p>尽管大多数Qt Quick 项目本身仅使用了非常基本的材质，例如纯色和纹理填充。</p>
 <p>想要对Qml中Item使用自定义着色的用户，可以直接在Qml中使用<code>ShaderEffect</code>。</p>
 <p>下面是一个完整的材质类列表：</p>
-<p>|材质名称|描述|
-|--|--|
-|QSGMaterial|封装了“着色器程序”的渲染状态|
-|QSGMaterialRhiShader|表示独立于图形API的“着色器程序”|
-|QSGMaterialShader|表示渲染器中的OpenGL“着色器程序”|
-|QSGMaterialType|与<code>QSGMaterial</code>结合用作唯一类型标记|
-|QSGFlatColorMaterial|“场景图”中渲染纯色图元的便捷方法|
-|QSGOpaqueTextureMaterial|“场景图”中渲染不透明纹理图元的便捷方法|
-|QSGTextureMaterial|“场景图”中渲染纹理图元的便捷方法|
-|QSGVertexColorMaterial|“场景图”中渲染 逐顶点彩色图元的便捷方法|</p>
+<table>
+<thead><tr>
+<th>材质名称</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>QSGMaterial</td>
+<td>封装了“着色器程序”的渲染状态</td>
+</tr>
+<tr>
+<td>QSGMaterialRhiShader</td>
+<td>表示独立于图形API的“着色器程序”</td>
+</tr>
+<tr>
+<td>QSGMaterialShader</td>
+<td>表示渲染器中的OpenGL“着色器程序”</td>
+</tr>
+<tr>
+<td>QSGMaterialType</td>
+<td>与<code>QSGMaterial</code>结合用作唯一类型标记</td>
+</tr>
+<tr>
+<td>QSGFlatColorMaterial</td>
+<td>“场景图”中渲染纯色图元的便捷方法</td>
+</tr>
+<tr>
+<td>QSGOpaqueTextureMaterial</td>
+<td>“场景图”中渲染不透明纹理图元的便捷方法</td>
+</tr>
+<tr>
+<td>QSGTextureMaterial</td>
+<td>“场景图”中渲染纹理图元的便捷方法</td>
+</tr>
+<tr>
+<td>QSGVertexColorMaterial</td>
+<td>“场景图”中渲染 逐顶点彩色图元的便捷方法</td>
+</tr>
+</tbody>
+</table>
 <p>更多详细的信息，可以参考Qt文档： Scene Graph - Simple Material</p>
 <h3>便捷的节点</h3>
 <p>“场景图”API是一套 偏底层的接口，专注于性能而不是易用性。</p>
 <p>从头开始编写自定义的几何图形和材质，即使是最基本的几何图形和材质，也需要大量的代码。</p>
 <p>因此，“场景图”API包含了一些节点类，以使最常用自定义节点的开发更便捷。</p>
-<p>|节点名称|描述|
-|--|--|
-|QSGSimpleRectNode|<code>QSGGeometryNode</code>的子类，定义了矩形图元和纯色材质|
-|QSGSimpleTextureNode|<code>QSGGeometryNode</code>的子类，定义了矩形图元和纹理材质|</p>
+<table>
+<thead><tr>
+<th>节点名称</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>QSGSimpleRectNode</td>
+<td><code>QSGGeometryNode</code>的子类，定义了矩形图元和纯色材质</td>
+</tr>
+<tr>
+<td>QSGSimpleTextureNode</td>
+<td><code>QSGGeometryNode</code>的子类，定义了矩形图元和纹理材质</td>
+</tr>
+</tbody>
+</table>
 <h2>“场景图”和渲染</h2>
 <p>“场景图”的渲染发生在<code>QQuickWindow</code>类的内部，并且没有公共API可以访问它。</p>
 <p>但是，渲染管线中有一些地方可以让用户附加应用程序代码。</p>
@@ -137,7 +203,7 @@ date: 2021-01-20 13:44:23</li>
 <p>在许多环境中，“场景图”将在专用渲染线程上进行。这样做是为了增加多核处理器的并行度，并更好地利用停顿时间。</p>
 <p>这可以显著提高性能，但是与“场景图”进行交互的位置和时间加了一些限制。</p>
 <p>以下是关于OpenGL环境下如何使用线程渲染循环的简单概述。除了OpenGL上下文的特定要求外，其它图形API的步骤也是相同的。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/threadRenderLoop.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/threadRenderLoop.png"/></p>
 <ol>
 <li><p>Qml场景中发生变化，触发调用<code>QQuickItem::update()</code>， 这可能是动画或者用户操作的结果。</p>
 <p>一个 <code>事件</code>会被<code>post</code>到渲染线程来启动新的一帧。</p>
@@ -187,7 +253,7 @@ date: 2021-01-20 13:44:23</li>
 <p>非线程渲染循环默认在使用ANGLE的windows平台，而“基本渲染循环”用于其它需要非线程渲染循环的平台。</p>
 <p>即使使用非线程渲染循环，也应像使用线程渲染循环一样编写代码，否则将使代码不可移植。</p>
 <p>以下是非线程渲染循环中帧渲染序列的简化图示。</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/non-threadRenderLoop.png"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/jaredtao.gitee.io/source/images/QtQuick/non-threadRenderLoop.png"/></p>
 <h3>使用QQuickRenderControl自定义渲染控制</h3>
 <p>使用QQuickRenderControl时，驱动渲染循环的责任将转移到应用程序中。</p>
 <p>在这种情况下，不使用内置的渲染循环。</p>
@@ -206,12 +272,31 @@ date: 2021-01-20 13:44:23</li>
 <p>缺点是Qt Quick 决定何时调用信号，这也是唯一允许OpenGL应用程序绘制的时间点。</p>
 <hr/>
 <p>Qt提供了一些 “场景图”相关的示例，可在<code>examples</code>中找到:</p>
-<p>|例子名称|描述|
-|--|--|
-|Scene Graph - OpenGL Under QML|示例通过“场景图”的信号使用OpenGL|
-|Scene Graph - Direct3D 11 Under QML|示例通过“场景图”的信号使用Direct3D|
-|Scene Graph - Metal Under QML|示例通过“场景图”的信号使用Metal|
-|Scene Graph - Vulkan Under QML|示例通过“场景图”的信号使用Vulkan|</p>
+<table>
+<thead><tr>
+<th>例子名称</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Scene Graph - OpenGL Under QML</td>
+<td>示例通过“场景图”的信号使用OpenGL</td>
+</tr>
+<tr>
+<td>Scene Graph - Direct3D 11 Under QML</td>
+<td>示例通过“场景图”的信号使用Direct3D</td>
+</tr>
+<tr>
+<td>Scene Graph - Metal Under QML</td>
+<td>示例通过“场景图”的信号使用Metal</td>
+</tr>
+<tr>
+<td>Scene Graph - Vulkan Under QML</td>
+<td>示例通过“场景图”的信号使用Vulkan</td>
+</tr>
+</tbody>
+</table>
 <hr/>
 <p>另一个替代方式，是创建一个 <code>QQuickFrameBufferObject</code> (当前仅适用OpenGL)，在这个FBO内部渲染，然后将其</p>
 <p>作为纹理显示在“场景图”中。</p>
@@ -234,15 +319,43 @@ date: 2021-01-20 13:44:23</li>
 <p>因此，直接使用“场景图” 接口渲染，速度比QQuickPaintedItem快。</p>
 <h3>日志支持</h3>
 <p>“场景图”支持很多种日志类别。这些日志除了对Qt贡献者有帮助之外，还可用于追踪性能问题和缺陷。</p>
-<p>|日志类别|描述|
-|--|--|
-|qt.scenegraph.time.texture|纹理上传的耗时|
-|qt.scenegraph.time.compilation|编译着色器耗时|
-|qt.scenegraph.time.renderer|渲染器不同步骤耗时|
-|qt.scenegraph.time.renderloop|渲染循环不同阶段耗时|
-|qt.scenegraph.time.glyph|准备字形的距离场耗时|
-|qt.scenegraph.general|“场景图”和图形栈中的常规信息|
-|qt.scenegraph.renderloop|渲染循环相关的信息。这个日志模式是Qt开发者主要使用的|</p>
+<table>
+<thead><tr>
+<th>日志类别</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>qt.scenegraph.time.texture</td>
+<td>纹理上传的耗时</td>
+</tr>
+<tr>
+<td>qt.scenegraph.time.compilation</td>
+<td>编译着色器耗时</td>
+</tr>
+<tr>
+<td>qt.scenegraph.time.renderer</td>
+<td>渲染器不同步骤耗时</td>
+</tr>
+<tr>
+<td>qt.scenegraph.time.renderloop</td>
+<td>渲染循环不同阶段耗时</td>
+</tr>
+<tr>
+<td>qt.scenegraph.time.glyph</td>
+<td>准备字形的距离场耗时</td>
+</tr>
+<tr>
+<td>qt.scenegraph.general</td>
+<td>“场景图”和图形栈中的常规信息</td>
+</tr>
+<tr>
+<td>qt.scenegraph.renderloop</td>
+<td>渲染循环相关的信息。这个日志模式是Qt开发者主要使用的</td>
+</tr>
+</tbody>
+</table>
 <p>旧版<code>QSG_INFO</code>环境变量也可以用。将其设置为非零值将启用<code>qt.scengraph.general</code>类别。</p>
 <p>注意：遇到图形问题时，或不确定正在使用哪个渲染循环或图形API时，请至少启用<code>qt.scenegraph.general</code>和<code>qt.rhi</code>,或者</p>
 <p>设置<code>QSG_INFO=1</code>的情况下启动应用程序。然后这将在初始化期间将一些基本信息打印到调试输出。</p>
